@@ -26,10 +26,13 @@ import java.util.function.Consumer;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
 
+import org.jboss.logging.Logger;
 import org.jboss.logmanager.LogManager;
 
 import io.quarkus.deployment.dev.RuntimeUpdatesProcessor;
+import io.quarkus.deployment.dev.testing.MessageFormat;
 import io.quarkus.deployment.dev.testing.TestSupport;
+import io.quarkus.deployment.util.CommandLineUtil;
 import io.quarkus.dev.console.QuarkusConsole;
 import io.quarkus.dev.spi.DevModeType;
 
@@ -51,19 +54,20 @@ public class ConsoleStateManager {
         @Override
         public void accept(int[] ints) {
             for (int i : ints) {
+                char key = (char) i;
                 if (readLineBuilder != null) {
                     if (i == '\n' || i == '\r') {
                         readLineConsumer.accept(readLineBuilder.toString());
                         readLineBuilder = null;
                         readLineConsumer = null;
                     } else {
-                        readLineBuilder.append((char) i);
+                        readLineBuilder.append(key);
                     }
                 } else {
                     if (i == '\n') {
                         System.out.println("");
                     }
-                    Holder command = commands.get((char) i);
+                    Holder command = commands.get(key);
                     if (command != null) {
                         if (command.consoleCommand.getReadLineHandler() != null) {
                             QuarkusConsole.INSTANCE.doReadLine();
@@ -71,6 +75,10 @@ public class ConsoleStateManager {
                             readLineConsumer = command.consoleCommand.getReadLineHandler();
                         } else {
                             command.consoleCommand.getRunnable().run();
+                        }
+                    } else {
+                        if (QuarkusConsole.INSTANCE.singleLetterAliases().containsKey(key)) {
+                            QuarkusConsole.INSTANCE.runAlias(key);
                         }
                     }
                 }
@@ -92,11 +100,39 @@ public class ConsoleStateManager {
     }
 
     void installBuiltins(DevModeType devModeType) {
+        final String editPromptFormat = "to edit command line args (currently '"
+                + MessageFormat.GREEN
+                + "%s"
+                + MessageFormat.RESET
+                + "')";
+        ConsoleContext context = createContext("System");
         List<ConsoleCommand> commands = new ArrayList<>();
         if (devModeType != DevModeType.TEST_ONLY) {
             commands.add(new ConsoleCommand('s', "Force restart", null, () -> {
                 forceRestart();
             }));
+            commands.add(new ConsoleCommand('e', "Edits the command line parameters and restarts",
+                    editPromptFormat.formatted(String.join(" ",
+                            RuntimeUpdatesProcessor.INSTANCE.getCommandLineArgs())),
+                    100, new ConsoleCommand.HelpState(() -> BLUE,
+                            () -> String.join(" ", RuntimeUpdatesProcessor.INSTANCE.getCommandLineArgs())),
+                    new Consumer<String>() {
+                        @Override
+                        public void accept(String args) {
+                            try {
+                                RuntimeUpdatesProcessor.INSTANCE.setCommandLineArgs(
+                                        CommandLineUtil.translateCommandline(args));
+                            } catch (Exception e) {
+                                Logger.getLogger(ConsoleStateManager.class).errorf(e, "Failed to parse command line %s", args);
+                                return;
+                            }
+                            // Reload command prompt string
+                            context.reset(ConsoleCommand.duplicateCommandWithNewPromptString(context.getCommandByKey('e'),
+                                    editPromptFormat.formatted(String.join(" ",
+                                            RuntimeUpdatesProcessor.INSTANCE.getCommandLineArgs()))));
+                            RuntimeUpdatesProcessor.INSTANCE.doScan(true, true);
+                        }
+                    }));
 
             commands.add(new ConsoleCommand('i', "Toggle instrumentation based reload",
                     new ConsoleCommand.HelpState(() -> RuntimeUpdatesProcessor.INSTANCE.instrumentationEnabled()), () -> {
@@ -118,8 +154,6 @@ public class ConsoleStateManager {
                     }));
         }
 
-        ConsoleContext context = createContext("System");
-
         commands.add(new ConsoleCommand('j', "Toggle log levels",
                 new ConsoleCommand.HelpState(() -> currentLevel == null ? BLUE : RED,
                         () -> (currentLevel == null
@@ -128,12 +162,12 @@ public class ConsoleStateManager {
                 ConsoleStateManager.this::toggleLogLevel));
         commands.add(new ConsoleCommand((char) 12, null, null, 10002, null, this::clearScreen));
         commands.add(new ConsoleCommand((char) 13, null, null, 10001, null, this::printBlankLine));
-        commands.add(new ConsoleCommand('h', "Shows this help", "for more options", 10000, null, this::printHelp));
+        commands.add(new ConsoleCommand('h', "Show this help", "for more options", 10000, null, this::printHelp));
         if (QuarkusConsole.INSTANCE instanceof AeshConsole) {
-            commands.add(new ConsoleCommand(':', "Enters terminal mode", "for the terminal", 9000, null, () -> {
+            commands.add(new ConsoleCommand(':', "Enter terminal mode", "for the terminal", 9000, null, () -> {
             }));
         }
-        commands.add(new ConsoleCommand('q', "Quits the application", null, this::exitQuarkus));
+        commands.add(new ConsoleCommand('q', "Quit the application", null, this::exitQuarkus));
         context.reset(commands.toArray(new ConsoleCommand[0]));
     }
 
@@ -198,16 +232,21 @@ public class ConsoleStateManager {
     }
 
     private void printHelp() {
-        System.out.println("\nThe following commands are currently available:");
+        System.out.println("\nThe following commands are available:");
         Set<ConsoleContext> contexts = new HashSet<>();
         for (Holder i : commands.values()) {
             contexts.add(i.context);
         }
+        Set<Character> seen = new HashSet<>();
 
         for (ConsoleContext ctx : contexts.stream().sorted(Comparator.comparing(ConsoleContext::getName))
                 .collect(Collectors.toList())) {
             System.out.println("\n" + RED + "==" + RESET + " " + UNDERLINE + ctx.name + NO_UNDERLINE + "\n");
             for (var i : ctx.internal) {
+                if (seen.contains(i.getKey())) {
+                    continue;
+                }
+                seen.add(i.getKey());
                 if (i.getDescription() != null) {
                     if (i.getHelpState() == null) {
                         System.out.println(helpOption(i.getKey(), i.getDescription()));
@@ -220,7 +259,15 @@ public class ConsoleStateManager {
                 }
             }
         }
-
+        Map<Character, String> aliases = QuarkusConsole.INSTANCE.singleLetterAliases();
+        if (!aliases.isEmpty()) {
+            System.out.println("\n" + RED + "==" + RESET + " " + UNDERLINE + "User Defined Aliases" + NO_UNDERLINE + "\n");
+            for (Map.Entry<Character, String> entry : aliases.entrySet()) {
+                if (!seen.contains(entry.getKey())) {
+                    System.out.println(helpOption(entry.getKey(), entry.getValue()));
+                }
+            }
+        }
     }
 
     static class Holder {
@@ -240,10 +287,12 @@ public class ConsoleStateManager {
     void redraw() {
 
         List<ConsoleCommand> sorted = commands.values().stream().map(s -> s.consoleCommand)
-                .filter(s -> s.getPromptString() != null).sorted(Comparator.comparingInt(ConsoleCommand::getPromptPriority))
-                .collect(Collectors.toList());
+                .filter(s -> s.getPromptString() != null)
+                .sorted(Comparator.comparingInt(ConsoleCommand::getPromptPriority))
+                .toList();
         if (sorted.isEmpty()) {
             QuarkusConsole.INSTANCE.setPromptMessage(null);
+            oldPrompt = null;
         } else {
             StringBuilder sb = new StringBuilder("Press");
             boolean first = true;
@@ -294,6 +343,12 @@ public class ConsoleStateManager {
                 }
                 commands.put(consoleCommand.getKey(), new Holder(consoleCommand, this));
                 internal.add(consoleCommand);
+            }
+        }
+
+        public ConsoleCommand getCommandByKey(Character key) {
+            synchronized (commands) {
+                return commands.get(key).consoleCommand;
             }
         }
 
