@@ -1,11 +1,13 @@
 package io.quarkus.deployment.pkg.steps;
 
-import static io.quarkus.fs.util.ZipUtils.wrapForJDK8232879;
+import static io.quarkus.commons.classloading.ClassLoaderHelper.fromClassNameToResourceName;
+import static io.quarkus.deployment.pkg.PackageConfig.JarConfig.JarType.LEGACY_JAR;
+import static io.quarkus.deployment.pkg.PackageConfig.JarConfig.JarType.MUTABLE_JAR;
+import static io.quarkus.deployment.pkg.PackageConfig.JarConfig.JarType.UBER_JAR;
 
 import java.io.BufferedInputStream;
 import java.io.BufferedWriter;
 import java.io.ByteArrayOutputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.ObjectOutputStream;
@@ -42,20 +44,20 @@ import java.util.function.BooleanSupplier;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.jar.Attributes;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
-import java.util.zip.ZipOutputStream;
 
-import org.apache.commons.lang3.SystemUtils;
 import org.jboss.logging.Logger;
 
 import io.quarkus.bootstrap.model.MutableJarApplicationModel;
 import io.quarkus.bootstrap.runner.QuarkusEntryPoint;
 import io.quarkus.bootstrap.runner.SerializedApplication;
 import io.quarkus.bootstrap.util.IoUtils;
+import io.quarkus.deployment.ApplicationArchive;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.builditem.AdditionalApplicationArchiveBuildItem;
 import io.quarkus.deployment.builditem.ApplicationArchivesBuildItem;
@@ -83,60 +85,44 @@ import io.quarkus.deployment.util.FileUtil;
 import io.quarkus.fs.util.ZipUtils;
 import io.quarkus.maven.dependency.ArtifactKey;
 import io.quarkus.maven.dependency.Dependency;
+import io.quarkus.maven.dependency.DependencyFlags;
 import io.quarkus.maven.dependency.GACT;
 import io.quarkus.maven.dependency.ResolvedDependency;
+import io.quarkus.maven.dependency.ResolvedDependencyBuilder;
+import io.quarkus.paths.PathVisit;
+import io.quarkus.paths.PathVisitor;
+import io.quarkus.sbom.ApplicationComponent;
+import io.quarkus.sbom.ApplicationManifestConfig;
+import io.quarkus.utilities.JavaBinFinder;
 
 /**
  * This build step builds both the thin jars and uber jars.
- *
- * The way this is built is a bit convoluted. In general we only want a single one built,
+ * <p>
+ * The way this is built is a bit convoluted. In general, we only want a single one built,
  * as determined by the {@link PackageConfig} (unless the config explicitly asks for both of them)
- *
- * However we still need an extension to be able to ask for a specify one of these despite the config,
+ * <p>
+ * However, we still need an extension to be able to ask for a specific one of these despite the config,
  * e.g. if a serverless environment needs an uberjar to build its deployment package then we need
  * to be able to provide this.
- *
+ * <p>
  * To enable this we have two build steps that strongly produce the respective artifact type build
  * items, but not a {@link ArtifactResultBuildItem}. We then
- * have another two build steps that only run if they are configured too that consume these explicit
+ * have another two build steps that only run if they are configured to consume these explicit
  * build items and transform them into {@link ArtifactResultBuildItem}.
  */
 public class JarResultBuildStep {
 
-    private static final Collection<String> IGNORED_ENTRIES = Arrays.asList(
-            "META-INF/INDEX.LIST",
-            "META-INF/MANIFEST.MF",
-            "module-info.class",
-            "META-INF/LICENSE",
-            "META-INF/LICENSE.txt",
-            "META-INF/LICENSE.md",
-            "META-INF/LGPL-3.0.txt",
-            "META-INF/ASL-2.0.txt",
-            "META-INF/NOTICE",
-            "META-INF/NOTICE.txt",
-            "META-INF/NOTICE.md",
-            "META-INF/README",
-            "META-INF/README.txt",
-            "META-INF/README.md",
-            "META-INF/DEPENDENCIES",
-            "META-INF/DEPENDENCIES.txt",
-            "META-INF/beans.xml",
-            "META-INF/quarkus-config-roots.list",
-            "META-INF/quarkus-javadoc.properties",
-            "META-INF/quarkus-extension.properties",
-            "META-INF/quarkus-extension.json",
-            "META-INF/quarkus-extension.yaml",
-            "META-INF/quarkus-deployment-dependency.graph",
-            "META-INF/jandex.idx",
-            "META-INF/panache-archive.marker",
-            "META-INF/build.metadata", // present in the Red Hat Build of Quarkus
-            "LICENSE");
+    private static final String DOT_JAR = ".jar";
 
-    private static final Predicate<String> CONCATENATED_ENTRIES_PREDICATE = new Predicate<>() {
+    private static final Predicate<String> UBER_JAR_IGNORED_ENTRIES_PREDICATE = new IsEntryIgnoredForUberJarPredicate();
+
+    private static final Predicate<String> UBER_JAR_CONCATENATED_ENTRIES_PREDICATE = new Predicate<>() {
         @Override
         public boolean test(String path) {
             return "META-INF/io.netty.versions.properties".equals(path) ||
-                    (path.startsWith("META-INF/services/") && path.length() > 18);
+                    (path.startsWith("META-INF/services/") && path.length() > 18) ||
+            // needed to initialize the CLI bootstrap Maven resolver
+                    "META-INF/sisu/javax.inject.Named".equals(path);
         }
     };
 
@@ -173,33 +159,34 @@ public class JarResultBuildStep {
     public static final String DEFAULT_FAST_JAR_DIRECTORY_NAME = "quarkus-app";
 
     public static final String MP_CONFIG_FILE = "META-INF/microprofile-config.properties";
+    private static final String VINEFLOWER_VERSION = "1.10.1";
 
     @BuildStep
     OutputTargetBuildItem outputTarget(BuildSystemTargetBuildItem bst, PackageConfig packageConfig) {
-        String name = packageConfig.outputName.orElseGet(bst::getBaseName);
-        Path path = packageConfig.outputDirectory.map(s -> bst.getOutputDirectory().resolve(s))
+        String name = packageConfig.outputName().orElseGet(bst::getBaseName);
+        Path path = packageConfig.outputDirectory().map(s -> bst.getOutputDirectory().resolve(s))
                 .orElseGet(bst::getOutputDirectory);
         Optional<Set<ArtifactKey>> includedOptionalDependencies;
-        if (packageConfig.filterOptionalDependencies) {
-            includedOptionalDependencies = Optional.of(packageConfig.includedOptionalDependencies
-                    .map(set -> set.stream().map(s -> (ArtifactKey) GACT.fromString(s)).collect(Collectors.toSet()))
+        if (packageConfig.jar().filterOptionalDependencies()) {
+            includedOptionalDependencies = Optional.of(packageConfig.jar().includedOptionalDependencies()
+                    .map(set -> set.stream().map(ArtifactKey.class::cast).collect(Collectors.toSet()))
                     .orElse(Collections.emptySet()));
         } else {
             includedOptionalDependencies = Optional.empty();
         }
-        return new OutputTargetBuildItem(path, name, bst.isRebuild(), bst.getBuildSystemProps(), includedOptionalDependencies);
+        return new OutputTargetBuildItem(path, name, bst.getOriginalBaseName(), bst.isRebuild(), bst.getBuildSystemProps(),
+                includedOptionalDependencies);
     }
 
     @BuildStep(onlyIf = JarRequired.class)
     ArtifactResultBuildItem jarOutput(JarBuildItem jarBuildItem) {
-        if (jarBuildItem.getLibraryDir() != null) {
-            return new ArtifactResultBuildItem(jarBuildItem.getPath(), PackageConfig.JAR,
-                    Collections.singletonMap("library-dir", jarBuildItem.getLibraryDir()));
-        } else {
-            return new ArtifactResultBuildItem(jarBuildItem.getPath(), PackageConfig.JAR, Collections.emptyMap());
-        }
+        return new ArtifactResultBuildItem(jarBuildItem.getPath(), "jar",
+                jarBuildItem.getLibraryDir() == null ? Map.of()
+                        : Map.of("library-dir", jarBuildItem.getLibraryDir().toString()),
+                jarBuildItem.getManifestConfig());
     }
 
+    @SuppressWarnings("deprecation") // JarType#LEGACY_JAR
     @BuildStep
     public JarBuildItem buildRunnerJar(CurateOutcomeBuildItem curateOutcomeBuildItem,
             OutputTargetBuildItem outputTargetBuildItem,
@@ -228,19 +215,19 @@ public class JarResultBuildStep {
         }
 
         if (legacyJarRequired.isEmpty() && (!uberJarRequired.isEmpty()
-                || packageConfig.type.equalsIgnoreCase(PackageConfig.UBER_JAR))) {
+                || packageConfig.jar().type() == UBER_JAR)) {
             return buildUberJar(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses, applicationArchivesBuildItem,
                     packageConfig, applicationInfo, generatedClasses, generatedResources, uberJarMergedResourceBuildItems,
                     uberJarIgnoredResourceBuildItems, mainClassBuildItem, classLoadingConfig);
-        } else if (!legacyJarRequired.isEmpty() || packageConfig.isLegacyJar()
-                || packageConfig.type.equalsIgnoreCase(PackageConfig.LEGACY)) {
+        } else if (!legacyJarRequired.isEmpty() || packageConfig.jar().type() == LEGACY_JAR) {
             return buildLegacyThinJar(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses,
                     applicationArchivesBuildItem,
                     packageConfig, applicationInfo, generatedClasses, generatedResources, mainClassBuildItem,
                     classLoadingConfig);
         } else {
             return buildThinJar(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses, applicationArchivesBuildItem,
-                    packageConfig, classLoadingConfig, applicationInfo, generatedClasses, generatedResources,
+                    packageConfig, classLoadingConfig, applicationInfo, generatedClasses,
+                    generatedResources,
                     additionalApplicationArchiveBuildItems, mainClassBuildItem);
         }
     }
@@ -287,9 +274,20 @@ public class JarResultBuildStep {
             ClassLoadingConfig classLoadingConfig) throws Exception {
 
         //we use the -runner jar name, unless we are building both types
-        Path runnerJar = outputTargetBuildItem.getOutputDirectory()
-                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.runnerSuffix + ".jar");
-        Files.deleteIfExists(runnerJar);
+        final Path runnerJar = outputTargetBuildItem.getOutputDirectory()
+                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.computedRunnerSuffix() + DOT_JAR);
+
+        // If the runner jar appears to exist already we create a new one with a tmp suffix.
+        // Deleting an existing runner jar may result in deleting the original (non-runner) jar (in case the runner suffix is empty)
+        // which is used as a source of content for the runner jar.
+        final Path tmpRunnerJar;
+        if (Files.exists(runnerJar)) {
+            tmpRunnerJar = outputTargetBuildItem.getOutputDirectory()
+                    .resolve(outputTargetBuildItem.getBaseName() + packageConfig.computedRunnerSuffix() + ".tmp");
+            Files.deleteIfExists(tmpRunnerJar);
+        } else {
+            tmpRunnerJar = runnerJar;
+        }
 
         buildUberJar0(curateOutcomeBuildItem,
                 outputTargetBuildItem,
@@ -303,16 +301,43 @@ public class JarResultBuildStep {
                 ignoredResources,
                 mainClassBuildItem,
                 classLoadingConfig,
-                runnerJar);
+                tmpRunnerJar);
+
+        if (tmpRunnerJar != runnerJar) {
+            Files.copy(tmpRunnerJar, runnerJar, StandardCopyOption.REPLACE_EXISTING);
+            tmpRunnerJar.toFile().deleteOnExit();
+        }
 
         //for uberjars we move the original jar, so there is only a single jar in the output directory
         final Path standardJar = outputTargetBuildItem.getOutputDirectory()
-                .resolve(outputTargetBuildItem.getBaseName() + ".jar");
-
+                .resolve(outputTargetBuildItem.getOriginalBaseName() + DOT_JAR);
         final Path originalJar = Files.exists(standardJar) ? standardJar : null;
 
-        return new JarBuildItem(runnerJar, originalJar, null, PackageConfig.UBER_JAR,
-                suffixToClassifier(packageConfig.runnerSuffix));
+        ResolvedDependency appArtifact = curateOutcomeBuildItem.getApplicationModel().getAppArtifact();
+        final String classifier = suffixToClassifier(packageConfig.computedRunnerSuffix());
+        if (classifier != null && !classifier.isEmpty()) {
+            appArtifact = ResolvedDependencyBuilder.newInstance()
+                    .setGroupId(appArtifact.getGroupId())
+                    .setArtifactId(appArtifact.getArtifactId())
+                    .setClassifier(classifier)
+                    .setType(appArtifact.getType())
+                    .setVersion(appArtifact.getVersion())
+                    .setResolvedPaths(appArtifact.getResolvedPaths())
+                    .addDependencies(appArtifact.getDependencies())
+                    .setWorkspaceModule(appArtifact.getWorkspaceModule())
+                    .setFlags(appArtifact.getFlags())
+                    .build();
+        }
+        final ApplicationManifestConfig manifestConfig = ApplicationManifestConfig.builder()
+                .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
+                .setMainComponent(ApplicationComponent.builder()
+                        .setPath(runnerJar)
+                        .setResolvedDependency(appArtifact)
+                        .build())
+                .setRunnerPath(runnerJar)
+                .build();
+        return new JarBuildItem(runnerJar, originalJar, null, UBER_JAR,
+                suffixToClassifier(packageConfig.computedRunnerSuffix()), manifestConfig);
     }
 
     private String suffixToClassifier(String suffix) {
@@ -332,9 +357,9 @@ public class JarResultBuildStep {
             MainClassBuildItem mainClassBuildItem,
             ClassLoadingConfig classLoadingConfig,
             Path runnerJar) throws Exception {
-        try (FileSystem runnerZipFs = ZipUtils.newZip(runnerJar)) {
+        try (FileSystem runnerZipFs = createNewZip(runnerJar, packageConfig)) {
 
-            log.info("Building fat jar: " + runnerJar);
+            log.info("Building uber jar: " + runnerJar);
 
             final Map<String, String> seen = new HashMap<>();
             final Map<String, Set<Dependency>> duplicateCatcher = new HashMap<>();
@@ -343,22 +368,28 @@ public class JarResultBuildStep {
                     .map(UberJarMergedResourceBuildItem::getPath)
                     .collect(Collectors.toSet());
             final Set<ArtifactKey> removed = getRemovedKeys(classLoadingConfig);
-            Set<String> finalIgnoredEntries = new HashSet<>(IGNORED_ENTRIES);
-            packageConfig.userConfiguredIgnoredEntries.ifPresent(finalIgnoredEntries::addAll);
+
+            Set<String> ignoredEntries = new HashSet<>();
+            packageConfig.jar().userConfiguredIgnoredEntries().ifPresent(ignoredEntries::addAll);
             ignoredResources.stream()
                     .map(UberJarIgnoredResourceBuildItem::getPath)
-                    .forEach(finalIgnoredEntries::add);
-
-            final Collection<ResolvedDependency> appDeps = curateOutcomeBuildItem.getApplicationModel()
-                    .getRuntimeDependencies();
+                    .forEach(ignoredEntries::add);
+            Predicate<String> allIgnoredEntriesPredicate = new Predicate<String>() {
+                @Override
+                public boolean test(String path) {
+                    return UBER_JAR_IGNORED_ENTRIES_PREDICATE.test(path)
+                            || ignoredEntries.contains(path);
+                }
+            };
 
             ResolvedDependency appArtifact = curateOutcomeBuildItem.getApplicationModel().getAppArtifact();
+
             // the manifest needs to be the first entry in the jar, otherwise JarInputStream does not work properly
             // see https://bugs.openjdk.java.net/browse/JDK-8031748
             generateManifest(runnerZipFs, "", packageConfig, appArtifact, mainClassBuildItem.getClassName(),
                     applicationInfo);
 
-            for (ResolvedDependency appDep : appDeps) {
+            for (ResolvedDependency appDep : curateOutcomeBuildItem.getApplicationModel().getRuntimeDependencies()) {
 
                 // Exclude files that are not jars (typically, we can have XML files here, see https://github.com/quarkusio/quarkus/issues/2852)
                 // and are not part of the optional dependencies to include
@@ -380,12 +411,12 @@ public class JarResultBuildStep {
                         try (FileSystem artifactFs = ZipUtils.newFileSystem(resolvedDep)) {
                             for (final Path root : artifactFs.getRootDirectories()) {
                                 walkFileDependencyForDependency(root, runnerZipFs, seen, duplicateCatcher, concatenatedEntries,
-                                        finalIgnoredEntries, appDep, existingEntries, mergeResourcePaths);
+                                        allIgnoredEntriesPredicate, appDep, existingEntries, mergeResourcePaths);
                             }
                         }
                     } else {
                         walkFileDependencyForDependency(resolvedDep, runnerZipFs, seen, duplicateCatcher,
-                                concatenatedEntries, finalIgnoredEntries, appDep, existingEntries,
+                                concatenatedEntries, allIgnoredEntriesPredicate, appDep, existingEntries,
                                 mergeResourcePaths);
                     }
                 }
@@ -394,16 +425,14 @@ public class JarResultBuildStep {
             for (Map.Entry<String, Set<Dependency>> entry : duplicateCatcher.entrySet()) {
                 if (entry.getValue().size() > 1) {
                     if (explained.add(entry.getValue())) {
-                        if (!"module-info.class".endsWith(entry.getKey())) {
-                            log.warn("Dependencies with duplicate files detected. The dependencies " + entry.getValue()
-                                    + " contain duplicate files, e.g. " + entry.getKey());
-                        }
+                        log.warn("Dependencies with duplicate files detected. The dependencies " + entry.getValue()
+                                + " contain duplicate files, e.g. " + entry.getKey());
                     }
                 }
             }
             copyCommonContent(runnerZipFs, concatenatedEntries, applicationArchivesBuildItem, transformedClasses,
                     generatedClasses,
-                    generatedResources, seen, finalIgnoredEntries);
+                    generatedResources, seen, allIgnoredEntriesPredicate);
             // now that all entries have been added, check if there's a META-INF/versions/ entry. If present,
             // mark this jar as multi-release jar. Strictly speaking, the jar spec expects META-INF/versions/N
             // directory where N is an integer greater than 8, but we don't do that level of checks here but that
@@ -443,7 +472,7 @@ public class JarResultBuildStep {
      */
     private static boolean includeAppDep(ResolvedDependency appDep, Optional<Set<ArtifactKey>> optionalDependencies,
             Set<ArtifactKey> removedArtifacts) {
-        if (!"jar".equals(appDep.getType())) {
+        if (!appDep.isJar()) {
             return false;
         }
         if (appDep.isOptional()) {
@@ -458,7 +487,7 @@ public class JarResultBuildStep {
 
     private void walkFileDependencyForDependency(Path root, FileSystem runnerZipFs, Map<String, String> seen,
             Map<String, Set<Dependency>> duplicateCatcher, Map<String, List<byte[]>> concatenatedEntries,
-            Set<String> finalIgnoredEntries, Dependency appDep, Set<String> existingEntries,
+            Predicate<String> ignoredEntriesPredicate, Dependency appDep, Set<String> existingEntries,
             Set<String> mergeResourcePaths) throws IOException {
         final Path metaInfDir = root.resolve("META-INF");
         Files.walkFileTree(root, EnumSet.of(FileVisitOption.FOLLOW_LINKS), Integer.MAX_VALUE,
@@ -477,7 +506,7 @@ public class JarResultBuildStep {
                     public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
                             throws IOException {
                         final String relativePath = toUri(root.relativize(file));
-                        //if this has been transfomed we do not copy it
+                        //if this has been transformed we do not copy it
                         // if it's a signature file (under the <jar>/META-INF directory),
                         // then we don't add it to the uber jar
                         if (isBlockOrSF(relativePath) &&
@@ -489,12 +518,12 @@ public class JarResultBuildStep {
                             return FileVisitResult.CONTINUE;
                         }
                         if (!existingEntries.contains(relativePath)) {
-                            if (CONCATENATED_ENTRIES_PREDICATE.test(relativePath)
+                            if (UBER_JAR_CONCATENATED_ENTRIES_PREDICATE.test(relativePath)
                                     || mergeResourcePaths.contains(relativePath)) {
                                 concatenatedEntries.computeIfAbsent(relativePath, (u) -> new ArrayList<>())
                                         .add(Files.readAllBytes(file));
                                 return FileVisitResult.CONTINUE;
-                            } else if (!finalIgnoredEntries.contains(relativePath)) {
+                            } else if (!ignoredEntriesPredicate.test(relativePath)) {
                                 duplicateCatcher.computeIfAbsent(relativePath, (a) -> new HashSet<>())
                                         .add(appDep);
                                 if (!seen.containsKey(relativePath)) {
@@ -509,6 +538,7 @@ public class JarResultBuildStep {
                 });
     }
 
+    @SuppressWarnings("deprecation")
     private JarBuildItem buildLegacyThinJar(CurateOutcomeBuildItem curateOutcomeBuildItem,
             OutputTargetBuildItem outputTargetBuildItem,
             TransformedClassesBuildItem transformedClasses,
@@ -521,12 +551,12 @@ public class JarResultBuildStep {
             ClassLoadingConfig classLoadingConfig) throws Exception {
 
         Path runnerJar = outputTargetBuildItem.getOutputDirectory()
-                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.runnerSuffix + ".jar");
+                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.computedRunnerSuffix() + DOT_JAR);
         Path libDir = outputTargetBuildItem.getOutputDirectory().resolve("lib");
         Files.deleteIfExists(runnerJar);
         IoUtils.createOrEmptyDir(libDir);
 
-        try (FileSystem runnerZipFs = ZipUtils.newZip(runnerJar)) {
+        try (FileSystem runnerZipFs = createNewZip(runnerJar, packageConfig)) {
 
             log.info("Building thin jar: " + runnerJar);
 
@@ -537,10 +567,11 @@ public class JarResultBuildStep {
         }
         runnerJar.toFile().setReadable(true, false);
 
-        return new JarBuildItem(runnerJar, null, libDir, PackageConfig.LEGACY_JAR,
-                suffixToClassifier(packageConfig.runnerSuffix));
+        return new JarBuildItem(runnerJar, null, libDir, packageConfig.jar().type(),
+                suffixToClassifier(packageConfig.computedRunnerSuffix()));
     }
 
+    @SuppressWarnings("deprecation")
     private JarBuildItem buildThinJar(CurateOutcomeBuildItem curateOutcomeBuildItem,
             OutputTargetBuildItem outputTargetBuildItem,
             TransformedClassesBuildItem transformedClasses,
@@ -557,12 +588,15 @@ public class JarResultBuildStep {
 
         Path buildDir;
 
-        if (packageConfig.outputDirectory.isPresent()) {
+        if (packageConfig.outputDirectory().isPresent()) {
             buildDir = outputTargetBuildItem.getOutputDirectory();
         } else {
             buildDir = outputTargetBuildItem.getOutputDirectory().resolve(DEFAULT_FAST_JAR_DIRECTORY_NAME);
         }
 
+        final ApplicationManifestConfig.Builder manifestConfig = ApplicationManifestConfig.builder()
+                .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
+                .setDistributionDirectory(buildDir);
         //unmodified 3rd party dependencies
         Path libDir = buildDir.resolve(LIB);
         Path mainLib = libDir.resolve(MAIN);
@@ -573,8 +607,8 @@ public class JarResultBuildStep {
         Path appDir = buildDir.resolve(APP);
         Path quarkus = buildDir.resolve(QUARKUS);
         Path userProviders = null;
-        if (packageConfig.userProvidersDirectory.isPresent()) {
-            userProviders = buildDir.resolve(packageConfig.userProvidersDirectory.get());
+        if (packageConfig.jar().userProvidersDirectory().isPresent()) {
+            userProviders = buildDir.resolve(packageConfig.jar().userProvidersDirectory().get());
         }
         if (!rebuild) {
             IoUtils.createOrEmptyDir(buildDir);
@@ -586,41 +620,41 @@ public class JarResultBuildStep {
                 Files.createDirectories(userProviders);
                 //we add this dir so that it can be copied into container images if required
                 //and will still be copied even if empty
-                Files.createFile(userProviders.resolve(".keep"));
+                Path keepFile = userProviders.resolve(".keep");
+                if (!keepFile.toFile().exists()) {
+                    // check if the file exists to avoid a FileAlreadyExistsException
+                    Files.createFile(keepFile);
+                }
             }
         } else {
             IoUtils.createOrEmptyDir(quarkus);
         }
-        Map<ArtifactKey, List<Path>> copiedArtifacts = new HashMap<>();
 
-        Path fernflowerJar = null;
         Path decompiledOutputDir = null;
         boolean wasDecompiledSuccessfully = true;
-        if (packageConfig.fernflower.enabled) {
-            Path jarDirectory = Paths.get(packageConfig.fernflower.jarDirectory);
-            if (!Files.exists(jarDirectory)) {
-                Files.createDirectory(jarDirectory);
-            }
-            fernflowerJar = jarDirectory.resolve(String.format("fernflower-%s.jar", packageConfig.fernflower.hash));
-            if (!Files.exists(fernflowerJar)) {
-                boolean downloadComplete = downloadFernflowerJar(packageConfig, fernflowerJar);
-                if (!downloadComplete) {
-                    fernflowerJar = null; // will ensure that no decompilation takes place
-                }
-            }
+        Decompiler decompiler = null;
+        PackageConfig.DecompilerConfig decompilerConfig = packageConfig.jar().decompiler();
+        if (decompilerConfig.enabled()) {
             decompiledOutputDir = buildDir.getParent().resolve("decompiled");
             FileUtil.deleteDirectory(decompiledOutputDir);
             Files.createDirectory(decompiledOutputDir);
+            decompiler = new Decompiler.VineflowerDecompiler();
+            Path jarDirectory = Paths.get(decompilerConfig.jarDirectory());
+            if (!Files.exists(jarDirectory)) {
+                Files.createDirectory(jarDirectory);
+            }
+            decompiler.init(new Decompiler.Context(VINEFLOWER_VERSION, jarDirectory, decompiledOutputDir));
+            decompiler.downloadIfNecessary();
         }
 
-        List<Path> jars = new ArrayList<>();
+        FastJarJars.FastJarJarsBuilder fastJarJarsBuilder = new FastJarJars.FastJarJarsBuilder();
         List<Path> parentFirst = new ArrayList<>();
         //we process in order of priority
         //transformed classes first
         if (!transformedClasses.getTransformedClassesByJar().isEmpty()) {
             Path transformedZip = quarkus.resolve(TRANSFORMED_BYTECODE_JAR);
-            jars.add(transformedZip);
-            try (FileSystem out = ZipUtils.newZip(transformedZip)) {
+            fastJarJarsBuilder.setTransformed(transformedZip);
+            try (FileSystem out = createNewZip(transformedZip, packageConfig)) {
                 for (Set<TransformedClassesBuildItem.TransformedClass> transformedSet : transformedClasses
                         .getTransformedClassesByJar().values()) {
                     for (TransformedClassesBuildItem.TransformedClass transformed : transformedSet) {
@@ -634,16 +668,16 @@ public class JarResultBuildStep {
                     }
                 }
             }
-            if (fernflowerJar != null) {
-                wasDecompiledSuccessfully &= decompile(fernflowerJar, decompiledOutputDir, transformedZip);
+            if (decompiler != null) {
+                wasDecompiledSuccessfully = decompiler.decompile(transformedZip);
             }
         }
         //now generated classes and resources
         Path generatedZip = quarkus.resolve(GENERATED_BYTECODE_JAR);
-        jars.add(generatedZip);
-        try (FileSystem out = ZipUtils.newZip(generatedZip)) {
+        fastJarJarsBuilder.setGenerated(generatedZip);
+        try (FileSystem out = createNewZip(generatedZip, packageConfig)) {
             for (GeneratedClassBuildItem i : generatedClasses) {
-                String fileName = i.getName().replace('.', '/') + ".class";
+                String fileName = fromClassNameToResourceName(i.getName());
                 Path target = out.getPath(fileName);
                 if (target.getParent() != null) {
                     Files.createDirectories(target.getParent());
@@ -656,11 +690,11 @@ public class JarResultBuildStep {
                 if (target.getParent() != null) {
                     Files.createDirectories(target.getParent());
                 }
-                Files.write(target, i.getClassData());
+                Files.write(target, i.getData());
             }
         }
-        if (fernflowerJar != null) {
-            wasDecompiledSuccessfully &= decompile(fernflowerJar, decompiledOutputDir, generatedZip);
+        if (decompiler != null) {
+            wasDecompiledSuccessfully &= decompiler.decompile(generatedZip);
         }
 
         if (wasDecompiledSuccessfully && (decompiledOutputDir != null)) {
@@ -668,28 +702,26 @@ public class JarResultBuildStep {
         }
 
         //now the application classes
-        Path runnerJar = appDir
-                .resolve(outputTargetBuildItem.getBaseName() + ".jar");
-        jars.add(runnerJar);
+        Path runnerJar = appDir.resolve(outputTargetBuildItem.getBaseName() + DOT_JAR);
+        fastJarJarsBuilder.setRunner(runnerJar);
 
         if (!rebuild) {
-            Set<String> finalIgnoredEntries = new HashSet<>(IGNORED_ENTRIES);
-            packageConfig.userConfiguredIgnoredEntries.ifPresent(finalIgnoredEntries::addAll);
-            try (FileSystem runnerZipFs = ZipUtils.newZip(runnerJar)) {
-                for (Path root : applicationArchivesBuildItem.getRootArchive().getRootDirectories()) {
-                    copyFiles(root, runnerZipFs, null, finalIgnoredEntries);
-                }
+            Predicate<String> ignoredEntriesPredicate = getThinJarIgnoredEntriesPredicate(packageConfig);
+            try (FileSystem runnerZipFs = createNewZip(runnerJar, packageConfig)) {
+                copyFiles(applicationArchivesBuildItem.getRootArchive(), runnerZipFs, null, ignoredEntriesPredicate);
             }
         }
         final Set<ArtifactKey> parentFirstKeys = getParentFirstKeys(curateOutcomeBuildItem, classLoadingConfig);
-        StringBuilder classPath = new StringBuilder();
+        final StringBuilder classPath = new StringBuilder();
         final Set<ArtifactKey> removed = getRemovedKeys(classLoadingConfig);
+        final Map<ArtifactKey, List<Path>> copiedArtifacts = new HashMap<>();
         for (ResolvedDependency appDep : curateOutcomeBuildItem.getApplicationModel().getRuntimeDependencies()) {
-            if (rebuild) {
-                appDep.getResolvedPaths().forEach(jars::add);
-            } else {
-                copyDependency(parentFirstKeys, outputTargetBuildItem, copiedArtifacts, mainLib, baseLib, jars, true,
-                        classPath, appDep, transformedClasses, removed);
+            if (!rebuild) {
+                copyDependency(parentFirstKeys, outputTargetBuildItem, copiedArtifacts, mainLib, baseLib,
+                        fastJarJarsBuilder::addDep, true,
+                        classPath, appDep, transformedClasses, removed, packageConfig, manifestConfig);
+            } else if (includeAppDep(appDep, outputTargetBuildItem.getIncludedOptionalDependencies(), removed)) {
+                appDep.getResolvedPaths().forEach(fastJarJarsBuilder::addDep);
             }
             if (parentFirstKeys.contains(appDep.getKey())) {
                 appDep.getResolvedPaths().forEach(parentFirst::add);
@@ -702,7 +734,7 @@ public class JarResultBuildStep {
                             "Additional application archives can only be provided from the user providers directory. " + path
                                     + " is not present in " + userProviders);
                 }
-                jars.add(path);
+                fastJarJarsBuilder.addDep(path);
             }
         }
 
@@ -724,13 +756,29 @@ public class JarResultBuildStep {
 
         Path appInfo = buildDir.resolve(QuarkusEntryPoint.QUARKUS_APPLICATION_DAT);
         try (OutputStream out = Files.newOutputStream(appInfo)) {
-            SerializedApplication.write(out, mainClassBuildItem.getClassName(), buildDir, jars, parentFirst,
-                    nonExistentResources);
+            FastJarJars fastJarJars = fastJarJarsBuilder.build();
+            List<Path> allJars = new ArrayList<>();
+            if (fastJarJars.transformed != null) {
+                allJars.add(fastJarJars.transformed);
+            }
+            allJars.add(fastJarJars.generated);
+            allJars.add(fastJarJars.runner);
+            List<Path> sortedDeps = new ArrayList<>(fastJarJars.deps);
+            Collections.sort(sortedDeps);
+            allJars.addAll(sortedDeps);
+            List<Path> sortedParentFirst = new ArrayList<>(parentFirst);
+            Collections.sort(sortedParentFirst);
+            List<String> sortedNonExistentResources = new ArrayList<>(nonExistentResources);
+            Collections.sort(sortedNonExistentResources);
+            SerializedApplication.write(out, mainClassBuildItem.getClassName(), buildDir, allJars, sortedParentFirst,
+                    sortedNonExistentResources);
         }
 
         runnerJar.toFile().setReadable(true, false);
         Path initJar = buildDir.resolve(QUARKUS_RUN_JAR);
-        boolean mutableJar = packageConfig.type.equalsIgnoreCase(PackageConfig.MUTABLE_JAR);
+        manifestConfig.setMainComponent(ApplicationComponent.builder().setPath(initJar))
+                .setRunnerPath(initJar);
+        boolean mutableJar = packageConfig.jar().type() == MUTABLE_JAR;
         if (mutableJar) {
             //we output the properties in a reproducible manner, so we remove the date comment
             //and sort them
@@ -738,15 +786,16 @@ public class JarResultBuildStep {
             //to memory, split them, discard comments, sort them, then write them to disk
             ByteArrayOutputStream out = new ByteArrayOutputStream();
             outputTargetBuildItem.getBuildSystemProperties().store(out, null);
-            List<String> lines = Arrays.stream(new String(out.toByteArray(), StandardCharsets.UTF_8).split("\n"))
+            List<String> lines = Arrays.stream(out.toString(StandardCharsets.UTF_8).split("\n"))
                     .filter(s -> !s.startsWith("#")).sorted().collect(Collectors.toList());
             Path buildSystemProps = quarkus.resolve(BUILD_SYSTEM_PROPERTIES);
+            manifestConfig.addComponent(ApplicationComponent.builder().setPath(buildSystemProps).setDevelopmentScope());
             try (OutputStream fileOutput = Files.newOutputStream(buildSystemProps)) {
                 fileOutput.write(String.join("\n", lines).getBytes(StandardCharsets.UTF_8));
             }
         }
         if (!rebuild) {
-            try (FileSystem runnerZipFs = ZipUtils.newZip(initJar)) {
+            try (FileSystem runnerZipFs = createNewZip(initJar, packageConfig)) {
                 ResolvedDependency appArtifact = curateOutcomeBuildItem.getApplicationModel().getAppArtifact();
                 generateManifest(runnerZipFs, classPath.toString(), packageConfig, appArtifact,
                         QuarkusEntryPoint.class.getName(),
@@ -755,15 +804,13 @@ public class JarResultBuildStep {
 
             //now copy the deployment artifacts, if required
             if (mutableJar) {
-
                 Path deploymentLib = libDir.resolve(DEPLOYMENT_LIB);
                 Files.createDirectories(deploymentLib);
                 for (ResolvedDependency appDep : curateOutcomeBuildItem.getApplicationModel().getDependencies()) {
-                    copyDependency(parentFirstKeys, outputTargetBuildItem, copiedArtifacts, deploymentLib, baseLib, jars,
-                            false, classPath,
-                            appDep, new TransformedClassesBuildItem(Collections.emptyMap()), removed); //we don't care about transformation here, so just pass in an empty item
+                    copyDependency(parentFirstKeys, outputTargetBuildItem, copiedArtifacts, deploymentLib, baseLib, p -> {
+                    }, false, classPath, appDep, new TransformedClassesBuildItem(Map.of()), removed, packageConfig,
+                            manifestConfig); //we don't care about transformation here, so just pass in an empty item
                 }
-
                 Map<ArtifactKey, List<String>> relativePaths = new HashMap<>();
                 for (Map.Entry<ArtifactKey, List<Path>> e : copiedArtifacts.entrySet()) {
                     relativePaths.put(e.getKey(),
@@ -776,8 +823,9 @@ public class JarResultBuildStep {
                 MutableJarApplicationModel model = new MutableJarApplicationModel(outputTargetBuildItem.getBaseName(),
                         relativePaths,
                         curateOutcomeBuildItem.getApplicationModel(),
-                        packageConfig.userProvidersDirectory.orElse(null), buildDir.relativize(runnerJar).toString());
+                        packageConfig.jar().userProvidersDirectory().orElse(null), buildDir.relativize(runnerJar).toString());
                 Path appmodelDat = deploymentLib.resolve(APPMODEL_DAT);
+                manifestConfig.addComponent(ApplicationComponent.builder().setPath(appmodelDat).setDevelopmentScope());
                 try (OutputStream out = Files.newOutputStream(appmodelDat)) {
                     ObjectOutputStream obj = new ObjectOutputStream(out);
                     obj.writeObject(model);
@@ -788,6 +836,7 @@ public class JarResultBuildStep {
                 //as we don't really have a resolved bootstrap CP
                 //once we have the app model it will all be done in QuarkusClassLoader anyway
                 Path deploymentCp = deploymentLib.resolve(DEPLOYMENT_CLASS_PATH_DAT);
+                manifestConfig.addComponent(ApplicationComponent.builder().setPath(deploymentCp).setDevelopmentScope());
                 try (OutputStream out = Files.newOutputStream(deploymentCp)) {
                     ObjectOutputStream obj = new ObjectOutputStream(out);
                     List<String> paths = new ArrayList<>();
@@ -803,7 +852,7 @@ public class JarResultBuildStep {
                 }
             }
 
-            if (packageConfig.includeDependencyList) {
+            if (packageConfig.jar().includeDependencyList()) {
                 Path deplist = buildDir.resolve(QUARKUS_APP_DEPS);
                 List<String> lines = new ArrayList<>();
                 for (ResolvedDependency i : curateOutcomeBuildItem.getApplicationModel().getRuntimeDependencies()) {
@@ -814,7 +863,6 @@ public class JarResultBuildStep {
             }
         } else {
             //if it is a rebuild we might have classes
-
         }
         try (Stream<Path> files = Files.walk(buildDir)) {
             files.forEach(new Consumer<Path>() {
@@ -824,7 +872,7 @@ public class JarResultBuildStep {
                 }
             });
         }
-        return new JarBuildItem(initJar, null, libDir, packageConfig.type, null);
+        return new JarBuildItem(initJar, null, libDir, packageConfig.jar().type(), null, manifestConfig.build());
     }
 
     /**
@@ -832,8 +880,12 @@ public class JarResultBuildStep {
      */
     private Set<ArtifactKey> getParentFirstKeys(CurateOutcomeBuildItem curateOutcomeBuildItem,
             ClassLoadingConfig classLoadingConfig) {
-        final Set<ArtifactKey> parentFirstKeys = new HashSet<>(
-                curateOutcomeBuildItem.getApplicationModel().getRunnerParentFirst());
+        final Set<ArtifactKey> parentFirstKeys = new HashSet<>();
+        curateOutcomeBuildItem.getApplicationModel().getDependencies().forEach(d -> {
+            if (d.isFlagSet(DependencyFlags.CLASSLOADER_RUNNER_PARENT_FIRST)) {
+                parentFirstKeys.add(d.getKey());
+            }
+        });
         classLoadingConfig.parentFirstArtifacts.ifPresent(
                 parentFirstArtifacts -> {
                     for (String artifact : parentFirstArtifacts) {
@@ -857,62 +909,11 @@ public class JarResultBuildStep {
         return removed;
     }
 
-    private boolean downloadFernflowerJar(PackageConfig packageConfig, Path fernflowerJar) {
-        String downloadURL = String.format("https://jitpack.io/com/github/fesh0r/fernflower/%s/fernflower-%s.jar",
-                packageConfig.fernflower.hash, packageConfig.fernflower.hash);
-        try (BufferedInputStream in = new BufferedInputStream(new URL(downloadURL).openStream());
-                FileOutputStream fileOutputStream = new FileOutputStream(fernflowerJar.toFile())) {
-            byte[] dataBuffer = new byte[1024];
-            int bytesRead;
-            while ((bytesRead = in.read(dataBuffer, 0, 1024)) != -1) {
-                fileOutputStream.write(dataBuffer, 0, bytesRead);
-            }
-            return true;
-        } catch (IOException e) {
-            log.error("Unable to download Fernflower from " + downloadURL, e);
-            return false;
-        }
-    }
-
-    private boolean decompile(Path fernflowerJar, Path decompiledOutputDir, Path jarToDecompile) {
-        int exitCode;
-        try {
-            ProcessBuilder processBuilder = new ProcessBuilder(
-                    Arrays.asList("java", "-jar", fernflowerJar.toAbsolutePath().toString(),
-                            jarToDecompile.toAbsolutePath().toString(), decompiledOutputDir.toAbsolutePath().toString()));
-            if (log.isDebugEnabled()) {
-                processBuilder.inheritIO();
-            } else {
-                processBuilder.redirectError(ProcessBuilder.Redirect.DISCARD.file())
-                        .redirectOutput(ProcessBuilder.Redirect.DISCARD.file());
-            }
-            exitCode = processBuilder.start().waitFor();
-        } catch (Exception e) {
-            log.error("Failed to launch Fernflower decompiler.", e);
-            return false;
-        }
-
-        if (exitCode != 0) {
-            log.errorf("Fernflower decompiler exited with error code: %d.", exitCode);
-            return false;
-        }
-
-        String jarFileName = jarToDecompile.getFileName().toString();
-        Path decompiledJar = decompiledOutputDir.resolve(jarFileName);
-        try {
-            ZipUtils.unzip(decompiledJar, decompiledOutputDir.resolve(jarFileName.replace(".jar", "")));
-            Files.deleteIfExists(decompiledJar);
-        } catch (IOException ignored) {
-            // it doesn't really matter if we can't unzip the jar as we do it merely for user convenience
-        }
-
-        return true;
-    }
-
     private void copyDependency(Set<ArtifactKey> parentFirstArtifacts, OutputTargetBuildItem outputTargetBuildItem,
-            Map<ArtifactKey, List<Path>> runtimeArtifacts, Path libDir, Path baseLib, List<Path> jars,
+            Map<ArtifactKey, List<Path>> runtimeArtifacts, Path libDir, Path baseLib, Consumer<Path> targetPathConsumer,
             boolean allowParentFirst, StringBuilder classPath, ResolvedDependency appDep,
-            TransformedClassesBuildItem transformedClasses, Set<ArtifactKey> removedDeps)
+            TransformedClassesBuildItem transformedClasses, Set<ArtifactKey> removedDeps,
+            PackageConfig packageConfig, ApplicationManifestConfig.Builder manifestConfig)
             throws IOException {
 
         // Exclude files that are not jars (typically, we can have XML files here, see https://github.com/quarkusio/quarkus/issues/2852)
@@ -932,7 +933,7 @@ public class JarResultBuildStep {
                 classPath.append(" ").append(LIB).append("/").append(BOOT_LIB).append("/").append(fileName);
             } else {
                 targetPath = libDir.resolve(fileName);
-                jars.add(targetPath);
+                targetPathConsumer.accept(targetPath);
             }
             runtimeArtifacts.computeIfAbsent(appDep.getKey(), (s) -> new ArrayList<>(1)).add(targetPath);
 
@@ -940,7 +941,7 @@ public class JarResultBuildStep {
                 // This case can happen when we are building a jar from inside the Quarkus repository
                 // and Quarkus Bootstrap's localProjectDiscovery has been set to true. In such a case
                 // the non-jar dependencies are the Quarkus dependencies picked up on the file system
-                packageClasses(resolvedDep, targetPath);
+                packageClasses(resolvedDep, targetPath, packageConfig);
             } else {
                 Set<TransformedClassesBuildItem.TransformedClass> transformedFromThisArchive = transformedClasses
                         .getTransformedClassesByJar().get(resolvedDep);
@@ -952,18 +953,32 @@ public class JarResultBuildStep {
                         }
                     }
                 }
+                var appComponent = ApplicationComponent.builder()
+                        .setPath(targetPath)
+                        .setResolvedDependency(appDep);
                 if (removedFromThisArchive.isEmpty()) {
-                    Files.copy(resolvedDep, targetPath, StandardCopyOption.REPLACE_EXISTING);
+                    Files.copy(resolvedDep, targetPath, StandardCopyOption.REPLACE_EXISTING,
+                            StandardCopyOption.COPY_ATTRIBUTES);
                 } else {
-                    //we have removed classes, we need to handle them correctly
-                    filterZipFile(resolvedDep, targetPath, removedFromThisArchive);
+                    // we copy jars for which we remove entries to the same directory
+                    // which seems a bit odd to me
+                    filterJarFile(resolvedDep, targetPath, removedFromThisArchive);
+
+                    var list = new ArrayList<>(removedFromThisArchive);
+                    Collections.sort(list);
+                    var sb = new StringBuilder("Removed ").append(list.get(0));
+                    for (int i = 1; i < list.size(); ++i) {
+                        sb.append(",").append(list.get(i));
+                    }
+                    appComponent.setPedigree(sb.toString());
                 }
+                manifestConfig.addComponent(appComponent);
             }
         }
     }
 
-    private void packageClasses(Path resolvedDep, final Path targetPath) throws IOException {
-        try (FileSystem runnerZipFs = ZipUtils.newZip(targetPath)) {
+    private void packageClasses(Path resolvedDep, final Path targetPath, PackageConfig packageConfig) throws IOException {
+        try (FileSystem runnerZipFs = createNewZip(targetPath, packageConfig)) {
             Files.walkFileTree(resolvedDep, EnumSet.of(FileVisitOption.FOLLOW_LINKS), Integer.MAX_VALUE,
                     new SimpleFileVisitor<Path>() {
                         @Override
@@ -995,10 +1010,7 @@ public class JarResultBuildStep {
             List<GeneratedNativeImageClassBuildItem> nativeImageResources,
             List<GeneratedResourceBuildItem> generatedResources,
             MainClassBuildItem mainClassBuildItem,
-            List<UberJarRequiredBuildItem> uberJarRequired,
-            List<UberJarMergedResourceBuildItem> mergeResources,
-            ClassLoadingConfig classLoadingConfig,
-            List<UberJarIgnoredResourceBuildItem> ignoreResources) throws Exception {
+            ClassLoadingConfig classLoadingConfig) throws Exception {
         Path targetDirectory = outputTargetBuildItem.getOutputDirectory()
                 .resolve(outputTargetBuildItem.getBaseName() + "-native-image-source-jar");
         IoUtils.createOrEmptyDir(targetDirectory);
@@ -1008,28 +1020,10 @@ public class JarResultBuildStep {
                 .map((s) -> new GeneratedClassBuildItem(true, s.getName(), s.getClassData()))
                 .collect(Collectors.toList()));
 
-        if (SystemUtils.IS_OS_WINDOWS) {
-            log.warn("Uber JAR strategy is used for native image source JAR generation on Windows. This is done " +
-                    "for the time being to work around a current GraalVM limitation on Windows concerning the " +
-                    "maximum command length (see https://github.com/oracle/graal/issues/2387).");
-            // Native image source jar generation with the uber jar strategy is provided as a workaround for Windows and
-            // will be removed once https://github.com/oracle/graal/issues/2387 is fixed.
-            final NativeImageSourceJarBuildItem nativeImageSourceJarBuildItem = buildNativeImageUberJar(curateOutcomeBuildItem,
-                    outputTargetBuildItem, transformedClasses,
-                    applicationArchivesBuildItem,
-                    packageConfig, applicationInfo, allClasses, generatedResources, mergeResources,
-                    ignoreResources, mainClassBuildItem,
-                    targetDirectory, classLoadingConfig);
-            // additionally copy any json config files to a location accessible by native-image tool during
-            // native-image generation
-            copyJsonConfigFiles(applicationArchivesBuildItem, targetDirectory);
-            return nativeImageSourceJarBuildItem;
-        } else {
-            return buildNativeImageThinJar(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses,
-                    applicationArchivesBuildItem,
-                    applicationInfo, packageConfig, allClasses, generatedResources, mainClassBuildItem, targetDirectory,
-                    classLoadingConfig);
-        }
+        return buildNativeImageThinJar(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses,
+                applicationArchivesBuildItem,
+                applicationInfo, packageConfig, allClasses, generatedResources, mainClassBuildItem, targetDirectory,
+                classLoadingConfig);
     }
 
     private NativeImageSourceJarBuildItem buildNativeImageThinJar(CurateOutcomeBuildItem curateOutcomeBuildItem,
@@ -1046,7 +1040,7 @@ public class JarResultBuildStep {
         copyJsonConfigFiles(applicationArchivesBuildItem, targetDirectory);
 
         Path runnerJar = targetDirectory
-                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.runnerSuffix + ".jar");
+                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.computedRunnerSuffix() + DOT_JAR);
         Path libDir = targetDirectory.resolve(LIB);
         Files.createDirectories(libDir);
 
@@ -1054,46 +1048,31 @@ public class JarResultBuildStep {
 
             log.info("Building native image source jar: " + runnerJar);
 
+            // Remove svm and graal-sdk artifacts as they are provided by GraalVM itself
+            if (classLoadingConfig.removedArtifacts.isEmpty()) {
+                classLoadingConfig.removedArtifacts = Optional.of(new ArrayList<>(6));
+            }
+            List<String> removedArtifacts = classLoadingConfig.removedArtifacts.get();
+            removedArtifacts.add("org.graalvm.nativeimage:svm");
+            removedArtifacts.add("org.graalvm.sdk:graal-sdk");
+            removedArtifacts.add("org.graalvm.sdk:nativeimage");
+            removedArtifacts.add("org.graalvm.sdk:word");
+            removedArtifacts.add("org.graalvm.sdk:collections");
+
+            // complain if graal-sdk is present as a dependency as nativeimage should be preferred
+            if (curateOutcomeBuildItem.getApplicationModel().getDependencies().stream()
+                    .anyMatch(d -> d.getGroupId().equals("org.graalvm.sdk") && d.getArtifactId().equals("graal-sdk"))) {
+                log.warn("org.graalvm.sdk:graal-sdk is present in the classpath. "
+                        + "From Quarkus 3.8 and onwards, org.graalvm.sdk:nativeimage should be preferred. "
+                        + "Make sure you report the issue to the maintainers of the extensions that bring it.");
+            }
+
             doLegacyThinJarGeneration(curateOutcomeBuildItem, outputTargetBuildItem, transformedClasses,
                     applicationArchivesBuildItem, applicationInfo, packageConfig, generatedResources, libDir, allClasses,
                     runnerZipFs, mainClassBuildItem, classLoadingConfig);
         }
         runnerJar.toFile().setReadable(true, false);
         return new NativeImageSourceJarBuildItem(runnerJar, libDir);
-    }
-
-    private NativeImageSourceJarBuildItem buildNativeImageUberJar(CurateOutcomeBuildItem curateOutcomeBuildItem,
-            OutputTargetBuildItem outputTargetBuildItem,
-            TransformedClassesBuildItem transformedClasses,
-            ApplicationArchivesBuildItem applicationArchivesBuildItem,
-            PackageConfig packageConfig,
-            ApplicationInfoBuildItem applicationInfo,
-            List<GeneratedClassBuildItem> generatedClasses,
-            List<GeneratedResourceBuildItem> generatedResources,
-            List<UberJarMergedResourceBuildItem> mergeResources,
-            List<UberJarIgnoredResourceBuildItem> ignoreResources,
-            MainClassBuildItem mainClassBuildItem,
-            Path targetDirectory,
-            ClassLoadingConfig classLoadingConfig) throws Exception {
-        //we use the -runner jar name, unless we are building both types
-        Path runnerJar = targetDirectory
-                .resolve(outputTargetBuildItem.getBaseName() + packageConfig.runnerSuffix + ".jar");
-
-        buildUberJar0(curateOutcomeBuildItem,
-                outputTargetBuildItem,
-                transformedClasses,
-                applicationArchivesBuildItem,
-                packageConfig,
-                applicationInfo,
-                generatedClasses,
-                generatedResources,
-                mergeResources,
-                ignoreResources,
-                mainClassBuildItem,
-                classLoadingConfig,
-                runnerJar);
-
-        return new NativeImageSourceJarBuildItem(runnerJar, null);
     }
 
     /**
@@ -1110,6 +1089,7 @@ public class JarResultBuildStep {
                     @Override
                     public void accept(Path jsonPath) {
                         try {
+                            Files.createDirectories(thinJarDirectory);
                             Files.copy(jsonPath, thinJarDirectory.resolve(jsonPath.getFileName().toString()));
                         } catch (IOException e) {
                             throw new UncheckedIOException(
@@ -1141,12 +1121,12 @@ public class JarResultBuildStep {
 
         final Collection<ResolvedDependency> appDeps = curateOutcomeBuildItem.getApplicationModel()
                 .getRuntimeDependencies();
-        final Set<String> finalIgnoredEntries = new HashSet<>(IGNORED_ENTRIES);
-        packageConfig.userConfiguredIgnoredEntries.ifPresent(finalIgnoredEntries::addAll);
+
+        Predicate<String> ignoredEntriesPredicate = getThinJarIgnoredEntriesPredicate(packageConfig);
 
         final Set<ArtifactKey> removed = getRemovedKeys(classLoadingConfig);
         copyLibraryJars(runnerZipFs, outputTargetBuildItem, transformedClasses, libDir, classPath, appDeps, services,
-                finalIgnoredEntries, removed);
+                ignoredEntriesPredicate, removed);
 
         ResolvedDependency appArtifact = curateOutcomeBuildItem.getApplicationModel().getAppArtifact();
         // the manifest needs to be the first entry in the jar, otherwise JarInputStream does not work properly
@@ -1155,13 +1135,13 @@ public class JarResultBuildStep {
                 applicationInfo);
 
         copyCommonContent(runnerZipFs, services, applicationArchivesBuildItem, transformedClasses, allClasses,
-                generatedResources, seen, finalIgnoredEntries);
+                generatedResources, seen, ignoredEntriesPredicate);
     }
 
     private void copyLibraryJars(FileSystem runnerZipFs, OutputTargetBuildItem outputTargetBuildItem,
             TransformedClassesBuildItem transformedClasses, Path libDir,
             StringBuilder classPath, Collection<ResolvedDependency> appDeps, Map<String, List<byte[]>> services,
-            Set<String> ignoredEntries, Set<ArtifactKey> removedDependencies) throws IOException {
+            Predicate<String> ignoredEntriesPredicate, Set<ArtifactKey> removedDependencies) throws IOException {
 
         for (ResolvedDependency appDep : appDeps) {
 
@@ -1185,7 +1165,7 @@ public class JarResultBuildStep {
                                 + resolvedDep.getFileName();
                         final Path targetPath = libDir.resolve(fileName);
                         classPath.append(" lib/").append(fileName);
-                        filterZipFile(resolvedDep, targetPath, transformedFromThisArchive);
+                        filterJarFile(resolvedDep, targetPath, transformedFromThisArchive);
                     }
                 } else {
                     // This case can happen when we are building a jar from inside the Quarkus repository
@@ -1198,7 +1178,7 @@ public class JarResultBuildStep {
                                         throws IOException {
                                     final Path relativePath = resolvedDep.relativize(file);
                                     final String relativeUri = toUri(relativePath);
-                                    if (ignoredEntries.contains(relativeUri)) {
+                                    if (ignoredEntriesPredicate.test(relativeUri)) {
                                         return FileVisitResult.CONTINUE;
                                     }
                                     if (relativeUri.startsWith("META-INF/services/") && relativeUri.length() > 18) {
@@ -1223,7 +1203,7 @@ public class JarResultBuildStep {
             ApplicationArchivesBuildItem appArchives, TransformedClassesBuildItem transformedClassesBuildItem,
             List<GeneratedClassBuildItem> generatedClasses,
             List<GeneratedResourceBuildItem> generatedResources, Map<String, String> seen,
-            Set<String> ignoredEntries)
+            Predicate<String> ignoredEntriesPredicate)
             throws IOException {
 
         //TODO: this is probably broken in gradle
@@ -1236,7 +1216,7 @@ public class JarResultBuildStep {
                 if (i.getData() != null) {
                     Path target = runnerZipFs.getPath(i.getFileName());
                     handleParent(runnerZipFs, i.getFileName(), seen);
-                    try (final OutputStream out = wrapForJDK8232879(Files.newOutputStream(target))) {
+                    try (final OutputStream out = Files.newOutputStream(target)) {
                         out.write(i.getData());
                     }
                     seen.put(i.getFileName(), "Current Application");
@@ -1244,20 +1224,20 @@ public class JarResultBuildStep {
             }
         }
         for (GeneratedClassBuildItem i : generatedClasses) {
-            String fileName = i.getName().replace('.', '/') + ".class";
+            String fileName = fromClassNameToResourceName(i.getName());
             seen.put(fileName, "Current Application");
             Path target = runnerZipFs.getPath(fileName);
             handleParent(runnerZipFs, fileName, seen);
             if (Files.exists(target)) {
                 continue;
             }
-            try (final OutputStream os = wrapForJDK8232879(Files.newOutputStream(target))) {
+            try (final OutputStream os = Files.newOutputStream(target)) {
                 os.write(i.getClassData());
             }
         }
 
         for (GeneratedResourceBuildItem i : generatedResources) {
-            if (ignoredEntries.contains(i.getName())) {
+            if (ignoredEntriesPredicate.test(i.getName())) {
                 continue;
             }
             Path target = runnerZipFs.getPath(i.getName());
@@ -1266,21 +1246,18 @@ public class JarResultBuildStep {
                 continue;
             }
             if (i.getName().startsWith("META-INF/services/")) {
-                concatenatedEntries.computeIfAbsent(i.getName(), (u) -> new ArrayList<>()).add(i.getClassData());
+                concatenatedEntries.computeIfAbsent(i.getName(), (u) -> new ArrayList<>()).add(i.getData());
             } else {
-                try (final OutputStream os = wrapForJDK8232879(Files.newOutputStream(target))) {
-                    os.write(i.getClassData());
+                try (final OutputStream os = Files.newOutputStream(target)) {
+                    os.write(i.getData());
                 }
             }
         }
 
-        for (Path root : appArchives.getRootArchive().getRootDirectories()) {
-            copyFiles(root, runnerZipFs, concatenatedEntries, ignoredEntries);
-        }
+        copyFiles(appArchives.getRootArchive(), runnerZipFs, concatenatedEntries, ignoredEntriesPredicate);
 
         for (Map.Entry<String, List<byte[]>> entry : concatenatedEntries.entrySet()) {
-            try (final OutputStream os = wrapForJDK8232879(
-                    Files.newOutputStream(runnerZipFs.getPath(entry.getKey())))) {
+            try (final OutputStream os = Files.newOutputStream(runnerZipFs.getPath(entry.getKey()))) {
                 // TODO: Handle merging of XMLs
                 for (byte[] i : entry.getValue()) {
                     os.write(i);
@@ -1302,16 +1279,26 @@ public class JarResultBuildStep {
         }
     }
 
-    private void filterZipFile(Path resolvedDep, Path targetPath, Set<String> transformedFromThisArchive) {
-
+    static void filterJarFile(Path resolvedDep, Path targetPath, Set<String> transformedFromThisArchive) {
         try {
             byte[] buffer = new byte[10000];
-            try (ZipFile in = new ZipFile(resolvedDep.toFile())) {
-                try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(targetPath.toFile()))) {
-                    Enumeration<? extends ZipEntry> entries = in.entries();
+            try (JarFile in = new JarFile(resolvedDep.toFile(), false)) {
+                Manifest manifest = in.getManifest();
+                if (manifest != null) {
+                    // Remove signature entries
+                    manifest.getEntries().clear();
+                } else {
+                    manifest = new Manifest();
+                }
+                try (JarOutputStream out = new JarOutputStream(Files.newOutputStream(targetPath), manifest)) {
+                    Enumeration<JarEntry> entries = in.entries();
                     while (entries.hasMoreElements()) {
-                        ZipEntry entry = entries.nextElement();
-                        if (!transformedFromThisArchive.contains(entry.getName())) {
+                        JarEntry entry = entries.nextElement();
+                        String entryName = entry.getName();
+                        if (!transformedFromThisArchive.contains(entryName)
+                                && !entryName.equals(JarFile.MANIFEST_NAME)
+                                && !entryName.equals("META-INF/INDEX.LIST")
+                                && !isSignatureFile(entryName)) {
                             entry.setCompressedSize(-1);
                             out.putNextEntry(entry);
                             try (InputStream inStream = in.getInputStream(entry)) {
@@ -1320,13 +1307,28 @@ public class JarResultBuildStep {
                                     out.write(buffer, 0, r);
                                 }
                             }
+                        } else {
+                            log.debugf("Removed %s from %s", entryName, resolvedDep);
                         }
                     }
                 }
+                // let's make sure we keep the original timestamp
+                Files.setLastModifiedTime(targetPath, Files.getLastModifiedTime(resolvedDep));
             }
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new UncheckedIOException(e);
         }
+    }
+
+    private static boolean isSignatureFile(String entry) {
+        entry = entry.toUpperCase();
+        if (entry.startsWith("META-INF/") && entry.indexOf('/', "META-INF/".length()) == -1) {
+            return entry.endsWith(".SF")
+                    || entry.endsWith(".DSA")
+                    || entry.endsWith(".RSA")
+                    || entry.endsWith(".EC");
+        }
+        return false;
     }
 
     /**
@@ -1335,7 +1337,7 @@ public class JarResultBuildStep {
      * So we first try to see if a manifest exists, and otherwise create a new one.
      *
      * <b>BEWARE</b> this method should be invoked after file copy from target/classes and so on.
-     * Otherwise this manifest manipulation will be useless.
+     * Otherwise, this manifest manipulation will be useless.
      */
     private void generateManifest(FileSystem runnerZipFs, final String classPath, PackageConfig config,
             ResolvedDependency appArtifact,
@@ -1355,89 +1357,96 @@ public class JarResultBuildStep {
         Files.createDirectories(manifestPath.getParent());
         Attributes attributes = manifest.getMainAttributes();
         attributes.put(Attributes.Name.MANIFEST_VERSION, "1.0");
+
+        for (Map.Entry<String, String> attribute : config.jar().manifest().attributes().entrySet()) {
+            attributes.putValue(attribute.getKey(), attribute.getValue());
+        }
         if (attributes.containsKey(Attributes.Name.CLASS_PATH)) {
             log.warn(
-                    "Your MANIFEST.MF already defined a CLASS_PATH entry. Quarkus has overwritten this existing entry.");
+                    "A CLASS_PATH entry was already defined in your MANIFEST.MF or using the property quarkus.package.jar.manifest.attributes.\"Class-Path\". Quarkus has overwritten this existing entry.");
         }
         attributes.put(Attributes.Name.CLASS_PATH, classPath);
         if (attributes.containsKey(Attributes.Name.MAIN_CLASS)) {
             String existingMainClass = attributes.getValue(Attributes.Name.MAIN_CLASS);
             if (!mainClassName.equals(existingMainClass)) {
-                log.warn("Your MANIFEST.MF already defined a MAIN_CLASS entry. Quarkus has overwritten your existing entry.");
+                log.warn(
+                        "A MAIN_CLASS entry was already defined in your MANIFEST.MF or using the property quarkus.package.jar.manifest.attributes.\"Main-Class\". Quarkus has overwritten your existing entry.");
             }
         }
         attributes.put(Attributes.Name.MAIN_CLASS, mainClassName);
-        if (config.manifest.addImplementationEntries && !attributes.containsKey(Attributes.Name.IMPLEMENTATION_TITLE)) {
+        if (config.jar().manifest().addImplementationEntries()
+                && !attributes.containsKey(Attributes.Name.IMPLEMENTATION_TITLE)) {
             String name = ApplicationInfoBuildItem.UNSET_VALUE.equals(applicationInfo.getName())
                     ? appArtifact.getArtifactId()
                     : applicationInfo.getName();
             attributes.put(Attributes.Name.IMPLEMENTATION_TITLE, name);
         }
-        if (config.manifest.addImplementationEntries && !attributes.containsKey(Attributes.Name.IMPLEMENTATION_VERSION)) {
+        if (config.jar().manifest().addImplementationEntries()
+                && !attributes.containsKey(Attributes.Name.IMPLEMENTATION_VERSION)) {
             String version = ApplicationInfoBuildItem.UNSET_VALUE.equals(applicationInfo.getVersion())
                     ? appArtifact.getVersion()
                     : applicationInfo.getVersion();
             attributes.put(Attributes.Name.IMPLEMENTATION_VERSION, version);
         }
-        if (config.manifest.manifestSections.size() > 0) {
-            for (String sectionName : config.manifest.manifestSections.keySet()) {
-                for (Map.Entry<String, String> entry : config.manifest.manifestSections.get(sectionName).entrySet()) {
-                    Attributes attribs = manifest.getEntries().computeIfAbsent(sectionName, k -> new Attributes());
-                    attribs.putValue(entry.getKey(), entry.getValue());
-                }
+        for (String sectionName : config.jar().manifest().sections().keySet()) {
+            for (Map.Entry<String, String> entry : config.jar().manifest().sections().get(sectionName).entrySet()) {
+                Attributes attribs = manifest.getEntries().computeIfAbsent(sectionName, k -> new Attributes());
+                attribs.putValue(entry.getKey(), entry.getValue());
             }
         }
-        try (final OutputStream os = wrapForJDK8232879(Files.newOutputStream(manifestPath))) {
+        try (final OutputStream os = Files.newOutputStream(manifestPath)) {
             manifest.write(os);
         }
     }
 
     /**
-     * Copy files from {@code dir} to {@code fs}, filtering out service providers into the given map.
+     * Copy files from {@code archive} to {@code fs}, filtering out service providers into the given map.
      *
-     * @param dir the source directory
+     * @param archive the root application archive
      * @param fs the destination filesystem
      * @param services the services map
      * @throws IOException if an error occurs
      */
-    private void copyFiles(Path dir, FileSystem fs, Map<String, List<byte[]>> services, Set<String> ignoredEntries)
-            throws IOException {
-        try (Stream<Path> fileTreeElements = Files.walk(dir)) {
-            fileTreeElements.forEach(new Consumer<Path>() {
-                @Override
-                public void accept(Path path) {
-                    final Path file = dir.relativize(path);
-                    final String relativePath = toUri(file);
-                    if (relativePath.isEmpty() || ignoredEntries.contains(relativePath)) {
-                        return;
-                    }
-                    try {
-                        if (Files.isDirectory(path)) {
-                            addDir(fs, relativePath);
-                        } else {
-                            if (relativePath.startsWith("META-INF/services/") && relativePath.length() > 18
-                                    && services != null) {
-                                final byte[] content;
-                                try {
-                                    content = Files.readAllBytes(path);
-                                } catch (IOException e) {
-                                    throw new UncheckedIOException(e);
-                                }
-                                services.computeIfAbsent(relativePath, (u) -> new ArrayList<>()).add(content);
-                            } else if (!relativePath.equals("META-INF/INDEX.LIST")) {
-                                //TODO: auto generate INDEX.LIST
-                                //this may have implications for Camel though, as they change the layout
-                                //also this is only really relevant for the thin jar layout
-                                Path target = fs.getPath(relativePath);
-                                if (!Files.exists(target)) {
-                                    Files.copy(path, target, StandardCopyOption.REPLACE_EXISTING);
+    private void copyFiles(ApplicationArchive archive, FileSystem fs, Map<String, List<byte[]>> services,
+            Predicate<String> ignoredEntriesPredicate) throws IOException {
+        try {
+            archive.accept(tree -> {
+                tree.walk(new PathVisitor() {
+                    @Override
+                    public void visitPath(PathVisit visit) {
+                        final Path file = visit.getRoot().relativize(visit.getPath());
+                        final String relativePath = toUri(file);
+                        if (relativePath.isEmpty() || ignoredEntriesPredicate.test(relativePath)) {
+                            return;
+                        }
+                        try {
+                            if (Files.isDirectory(visit.getPath())) {
+                                addDir(fs, relativePath);
+                            } else {
+                                if (relativePath.startsWith("META-INF/services/") && relativePath.length() > 18
+                                        && services != null) {
+                                    final byte[] content;
+                                    try {
+                                        content = Files.readAllBytes(visit.getPath());
+                                    } catch (IOException e) {
+                                        throw new UncheckedIOException(e);
+                                    }
+                                    services.computeIfAbsent(relativePath, (u) -> new ArrayList<>()).add(content);
+                                } else if (!relativePath.equals("META-INF/INDEX.LIST")) {
+                                    //TODO: auto generate INDEX.LIST
+                                    //this may have implications for Camel though, as they change the layout
+                                    //also this is only really relevant for the thin jar layout
+                                    Path target = fs.getPath(relativePath);
+                                    if (!Files.exists(target)) {
+                                        Files.copy(visit.getPath(), target, StandardCopyOption.REPLACE_EXISTING);
+                                    }
                                 }
                             }
+                        } catch (IOException e) {
+                            throw new UncheckedIOException(e);
                         }
-                    } catch (Exception e) {
-                        throw new RuntimeException(e);
                     }
-                }
+                });
             });
         } catch (RuntimeException re) {
             final Throwable cause = re.getCause();
@@ -1446,6 +1455,7 @@ public class JarResultBuildStep {
             }
             throw re;
         }
+
     }
 
     private void addDir(FileSystem fs, final String relativePath)
@@ -1489,7 +1499,7 @@ public class JarResultBuildStep {
 
         @Override
         public boolean getAsBoolean() {
-            return packageConfig.isAnyJarType();
+            return packageConfig.jar().enabled();
         }
     }
 
@@ -1504,6 +1514,93 @@ public class JarResultBuildStep {
                 || s.endsWith(".EC");
     }
 
+    private Predicate<String> getThinJarIgnoredEntriesPredicate(PackageConfig packageConfig) {
+        return packageConfig.jar().userConfiguredIgnoredEntries().map(Set::copyOf).orElse(Set.of())::contains;
+    }
+
+    private static class IsEntryIgnoredForUberJarPredicate implements Predicate<String> {
+
+        private static final Set<String> UBER_JAR_IGNORED_ENTRIES = Set.of(
+                "META-INF/INDEX.LIST",
+                "META-INF/MANIFEST.MF",
+                "module-info.class",
+                "META-INF/LICENSE",
+                "META-INF/LICENSE.txt",
+                "META-INF/LICENSE.md",
+                "META-INF/LGPL-3.0.txt",
+                "META-INF/ASL-2.0.txt",
+                "META-INF/NOTICE",
+                "META-INF/NOTICE.txt",
+                "META-INF/NOTICE.md",
+                "META-INF/README",
+                "META-INF/README.txt",
+                "META-INF/README.md",
+                "META-INF/DEPENDENCIES",
+                "META-INF/DEPENDENCIES.txt",
+                "META-INF/beans.xml",
+                "META-INF/quarkus-config-roots.list",
+                "META-INF/quarkus-javadoc.properties",
+                "META-INF/quarkus-extension.properties",
+                "META-INF/quarkus-extension.json",
+                "META-INF/quarkus-extension.yaml",
+                "META-INF/quarkus-deployment-dependency.graph",
+                "META-INF/jandex.idx",
+                "META-INF/panache-archive.marker", // deprecated and unused, but still present in some archives
+                "META-INF/build.metadata", // present in the Red Hat Build of Quarkus
+                "LICENSE");
+
+        @Override
+        public boolean test(String path) {
+            return UBER_JAR_IGNORED_ENTRIES.contains(path)
+                    || path.endsWith("module-info.class");
+        }
+    }
+
+    static class FastJarJars {
+        private final Path transformed;
+        private final Path generated;
+        private final Path runner;
+        private final List<Path> deps;
+
+        public FastJarJars(FastJarJarsBuilder builder) {
+            this.transformed = builder.transformed;
+            this.generated = builder.generated;
+            this.runner = builder.runner;
+            this.deps = builder.deps;
+        }
+
+        public static class FastJarJarsBuilder {
+            private Path transformed;
+            private Path generated;
+            private Path runner;
+            private final List<Path> deps = new ArrayList<>();
+
+            public FastJarJarsBuilder setTransformed(Path transformed) {
+                this.transformed = transformed;
+                return this;
+            }
+
+            public FastJarJarsBuilder setGenerated(Path generated) {
+                this.generated = generated;
+                return this;
+            }
+
+            public FastJarJarsBuilder setRunner(Path runner) {
+                this.runner = runner;
+                return this;
+            }
+
+            public FastJarJarsBuilder addDep(Path dep) {
+                this.deps.add(dep);
+                return this;
+            }
+
+            public FastJarJars build() {
+                return new FastJarJars(this);
+            }
+        }
+    }
+
     private static class IsJsonFilePredicate implements BiPredicate<Path, BasicFileAttributes> {
 
         @Override
@@ -1511,4 +1608,106 @@ public class JarResultBuildStep {
             return basicFileAttributes.isRegularFile() && path.toString().endsWith(".json");
         }
     }
+
+    private interface Decompiler {
+
+        void init(Context context);
+
+        /**
+         * @return {@code true} if the decompiler was successfully download or already exists
+         */
+        boolean downloadIfNecessary();
+
+        /**
+         * @return {@code true} if the decompilation process was successful
+         */
+        boolean decompile(Path jarToDecompile);
+
+        class Context {
+            final String versionStr;
+            final Path jarLocation;
+            final Path decompiledOutputDir;
+
+            public Context(String versionStr, Path jarLocation, Path decompiledOutputDir) {
+                this.versionStr = versionStr;
+                this.jarLocation = jarLocation;
+                this.decompiledOutputDir = decompiledOutputDir;
+            }
+
+        }
+
+        class VineflowerDecompiler implements Decompiler {
+
+            private Context context;
+            private Path decompilerJar;
+
+            @Override
+            public void init(Context context) {
+                this.context = context;
+                this.decompilerJar = context.jarLocation.resolve(String.format("vineflower-%s.jar", context.versionStr));
+            }
+
+            @Override
+            public boolean downloadIfNecessary() {
+                if (Files.exists(decompilerJar)) {
+                    return true;
+                }
+                String downloadURL = String.format(
+                        "https://repo.maven.apache.org/maven2/org/vineflower/vineflower/%s/vineflower-%s.jar",
+                        context.versionStr, context.versionStr);
+                try (BufferedInputStream in = new BufferedInputStream(new URL(downloadURL).openStream());
+                        OutputStream fileOutputStream = Files.newOutputStream(decompilerJar)) {
+                    in.transferTo(fileOutputStream);
+                    return true;
+                } catch (IOException e) {
+                    log.error("Unable to download Vineflower from " + downloadURL, e);
+                    return false;
+                }
+            }
+
+            @Override
+            public boolean decompile(Path jarToDecompile) {
+                int exitCode;
+                try {
+                    int dotIndex = jarToDecompile.getFileName().toString().indexOf('.');
+                    String fileName = jarToDecompile.getFileName().toString().substring(0, dotIndex);
+                    ProcessBuilder processBuilder = new ProcessBuilder(
+                            Arrays.asList(
+                                    JavaBinFinder.findBin(),
+                                    "-jar",
+                                    decompilerJar.toAbsolutePath().toString(),
+                                    "-rsy=0", // synthetic methods
+                                    "-rbr=0", // bridge methods
+                                    jarToDecompile.toAbsolutePath().toString(),
+                                    context.decompiledOutputDir.resolve(fileName).toAbsolutePath().toString()));
+                    if (log.isDebugEnabled()) {
+                        processBuilder.inheritIO();
+                    } else {
+                        processBuilder.redirectError(ProcessBuilder.Redirect.DISCARD.file())
+                                .redirectOutput(ProcessBuilder.Redirect.DISCARD.file());
+                    }
+                    exitCode = processBuilder.start().waitFor();
+                } catch (Exception e) {
+                    log.error("Failed to launch decompiler.", e);
+                    return false;
+                }
+
+                if (exitCode != 0) {
+                    log.errorf("Vineflower decompiler exited with error code: %d.", exitCode);
+                    return false;
+                }
+
+                return true;
+            }
+        }
+    }
+
+    private static FileSystem createNewZip(Path runnerJar, PackageConfig config) throws IOException {
+        boolean useUncompressedJar = !config.jar().compress();
+        if (useUncompressedJar) {
+            return ZipUtils.newZip(runnerJar, Map.of("compressionMethod", "STORED"));
+        }
+        return ZipUtils.newZip(runnerJar);
+    }
+
 }
