@@ -1,15 +1,18 @@
 package io.quarkus.cli.registry;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Collection;
+import java.util.List;
 
 import io.quarkus.cli.Version;
 import io.quarkus.cli.common.OutputOptionMixin;
-import io.quarkus.cli.common.TargetQuarkusVersionGroup;
+import io.quarkus.cli.common.TargetQuarkusPlatformGroup;
+import io.quarkus.devtools.commands.CreateProjectHelper;
 import io.quarkus.devtools.project.BuildTool;
+import io.quarkus.devtools.project.JavaVersion;
 import io.quarkus.devtools.project.QuarkusProject;
 import io.quarkus.devtools.project.QuarkusProjectHelper;
-import io.quarkus.maven.ArtifactCoords;
+import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.platform.tools.ToolsConstants;
 import io.quarkus.platform.tools.ToolsUtils;
 import io.quarkus.registry.ExtensionCatalogResolver;
@@ -19,7 +22,7 @@ import io.quarkus.registry.config.RegistriesConfig;
 import picocli.CommandLine;
 
 public class RegistryClientMixin {
-    final static boolean VALIDATE = !Boolean.parseBoolean(System.getenv("REGISTRY_CLIENT_TEST"));
+    static final boolean VALIDATE = !Boolean.parseBoolean(System.getenv("REGISTRY_CLIENT_TEST"));
 
     /** @see io.quarkus.cli.registry.ToggleRegistryClientMixin#setRegistryClient */
     public final String getRegistryClientProperty() {
@@ -44,20 +47,26 @@ public class RegistryClientMixin {
     public RegistriesConfig resolveConfig() throws RegistryResolutionException {
         return config == null
                 ? RegistriesConfig.resolveConfig()
-                : RegistriesConfig.resolveFromFile(Paths.get(config));
+                : RegistriesConfig.resolveFromFile(Path.of(config));
     }
 
-    public QuarkusProject createQuarkusProject(Path projectRoot, TargetQuarkusVersionGroup targetVersion, BuildTool buildTool,
+    public QuarkusProject createQuarkusProject(Path projectRoot, TargetQuarkusPlatformGroup targetVersion, BuildTool buildTool,
             OutputOptionMixin log) throws RegistryResolutionException {
+        return createQuarkusProject(projectRoot, targetVersion, buildTool, log, List.of());
+    }
+
+    public QuarkusProject createQuarkusProject(Path projectRoot, TargetQuarkusPlatformGroup targetVersion, BuildTool buildTool,
+            OutputOptionMixin log, Collection<String> extensions) throws RegistryResolutionException {
         ExtensionCatalog catalog = getExtensionCatalog(targetVersion, log);
         if (VALIDATE && catalog.getQuarkusCoreVersion().startsWith("1.")) {
             throw new UnsupportedOperationException("The version 2 CLI can not be used with Quarkus 1.x projects.\n"
                     + "Use the maven/gradle plugins when working with Quarkus 1.x projects.");
         }
-        return QuarkusProjectHelper.getProject(projectRoot, catalog, buildTool, log);
+        catalog = CreateProjectHelper.completeCatalog(catalog, extensions, QuarkusProjectHelper.artifactResolver());
+        return QuarkusProjectHelper.getProject(projectRoot, catalog, buildTool, JavaVersion.NA, log);
     }
 
-    ExtensionCatalog getExtensionCatalog(TargetQuarkusVersionGroup targetVersion, OutputOptionMixin log)
+    ExtensionCatalog getExtensionCatalog(TargetQuarkusPlatformGroup targetVersion, OutputOptionMixin log)
             throws RegistryResolutionException {
         log.debug("Resolving Quarkus extension catalog for " + targetVersion);
         QuarkusProjectHelper.setMessageWriter(log);
