@@ -8,11 +8,10 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.apache.maven.execution.MavenSession;
@@ -35,14 +34,16 @@ import org.fusesource.jansi.Ansi;
 
 import io.quarkus.bootstrap.resolver.maven.MavenArtifactResolver;
 import io.quarkus.devtools.commands.CreateProject;
+import io.quarkus.devtools.commands.CreateProjectHelper;
 import io.quarkus.devtools.messagewriter.MessageWriter;
 import io.quarkus.devtools.project.BuildTool;
+import io.quarkus.devtools.project.JavaVersion;
 import io.quarkus.devtools.project.QuarkusProject;
 import io.quarkus.devtools.project.QuarkusProjectHelper;
-import io.quarkus.devtools.project.codegen.CreateProjectHelper;
-import io.quarkus.devtools.project.codegen.SourceType;
 import io.quarkus.maven.components.MavenVersionEnforcer;
 import io.quarkus.maven.components.Prompter;
+import io.quarkus.maven.components.QuarkusWorkspaceProvider;
+import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.maven.utilities.MojoUtils;
 import io.quarkus.platform.descriptor.loader.json.ResourceLoader;
 import io.quarkus.platform.tools.ToolsUtils;
@@ -50,14 +51,14 @@ import io.quarkus.platform.tools.maven.MojoMessageWriter;
 import io.quarkus.registry.ExtensionCatalogResolver;
 import io.quarkus.registry.RegistryResolutionException;
 import io.quarkus.registry.catalog.ExtensionCatalog;
-import io.quarkus.registry.config.RegistriesConfigLocator;
-import io.quarkus.registry.config.RegistryConfig;
 
 /**
  * This goal helps in setting up Quarkus Maven project with quarkus-maven-plugin, with sensible defaults
  */
 @Mojo(name = "create", requiresProject = false)
 public class CreateProjectMojo extends AbstractMojo {
+    static final String BAD_IDENTIFIER = "The specified %s identifier (%s) contains invalid characters. Valid characters are alphanumeric characters (A-Za-z0-9), underscores, dashes and dots.";
+    static final Pattern OK_ID = Pattern.compile("[0-9A-Za-z_.-]+");
 
     private static final String DEFAULT_GROUP_ID = "org.acme";
     private static final String DEFAULT_ARTIFACT_ID = "code-with-quarkus";
@@ -75,6 +76,12 @@ public class CreateProjectMojo extends AbstractMojo {
 
     @Parameter(property = "projectVersion")
     private String projectVersion;
+
+    @Parameter(property = "projectName")
+    private String projectName;
+
+    @Parameter(property = "projectDescription")
+    private String projectDescription;
 
     /**
      * When true, do not include any code in the generated Quarkus project.
@@ -104,29 +111,30 @@ public class CreateProjectMojo extends AbstractMojo {
     private String bomVersion;
 
     /**
-     * The {@link #path} will define the REST path of the generated code when picking only one of those extensions resteasy,
-     * resteasy-reactive and spring-web.
+     * Version of Java used to build the project.
+     */
+    @Parameter(property = "javaVersion")
+    private String javaVersion;
+
+    /**
+     * The {@link #path} will define the REST path of the generated code when picking only one of those extensions REST,
+     * RESTEasy Classic and Spring-Web.
      * <br />
      * If more than one of those extensions are picked, this parameter will be ignored.
      * <br />
-     * This is @Deprecated because using a generic path parameters with multiple example does not make sense and lead to
-     * confusion.
      * More info: https://github.com/quarkusio/quarkus/issues/14437
      * <br />
      * {@code className}
      */
     @Parameter(property = "path")
-    @Deprecated
     private String path;
 
     /**
-     * The {@link #className} will define the generated class names when picking only one of those extensions resteasy,
-     * resteasy-reactive and spring-web.
+     * The {@link #className} will define the generated class names when picking only one of those extensions REST,
+     * RESTEasy Classic and Spring-Web.
      * <br />
      * If more than one of those extensions are picked, then only the package name part will be used as {@link #packageName}
      * <br />
-     * This is @Deprecated because using a generic className parameters with multiple example does not make sense and lead to
-     * confusion.
      * More info: https://github.com/quarkusio/quarkus/issues/14437
      * <br />
      * By default, the {@link #projectGroupId} is used as package for generated classes (you can also use {@link #packageName}
@@ -135,7 +143,6 @@ public class CreateProjectMojo extends AbstractMojo {
      * {@code className}
      */
     @Parameter(property = "className")
-    @Deprecated
     private String className;
 
     /**
@@ -184,6 +191,12 @@ public class CreateProjectMojo extends AbstractMojo {
     @Parameter(property = "appConfig")
     private String appConfig;
 
+    @Parameter(property = "data")
+    private String data;
+
+    @Component
+    QuarkusWorkspaceProvider workspaceProvider;
+
     @Override
     public void execute() throws MojoExecutionException {
 
@@ -208,6 +221,7 @@ public class CreateProjectMojo extends AbstractMojo {
         } catch (Exception e) {
             throw new MojoExecutionException("Failed to initialize Maven artifact resolver", e);
         }
+
         final MojoMessageWriter log = new MojoMessageWriter(getLog());
         ExtensionCatalogResolver catalogResolver;
         try {
@@ -218,8 +232,7 @@ public class CreateProjectMojo extends AbstractMojo {
             // fall back to the default platform
             catalogResolver = ExtensionCatalogResolver.empty();
         }
-
-        final ExtensionCatalog catalog = resolveExtensionsCatalog(this, bomGroupId, bomArtifactId, bomVersion, catalogResolver,
+        ExtensionCatalog catalog = resolveExtensionsCatalog(this, bomGroupId, bomArtifactId, bomVersion, catalogResolver,
                 mvn, log);
 
         File projectRoot = outputDirectory;
@@ -263,6 +276,13 @@ public class CreateProjectMojo extends AbstractMojo {
         }
 
         askTheUserForMissingValues();
+        if (!DEFAULT_ARTIFACT_ID.equals(projectArtifactId) && !OK_ID.matcher(projectArtifactId).matches()) {
+            throw new MojoExecutionException(String.format(BAD_IDENTIFIER, "artifactId", projectArtifactId));
+        }
+        if (!DEFAULT_GROUP_ID.equals(projectGroupId) && !OK_ID.matcher(projectGroupId).matches()) {
+            throw new MojoExecutionException(String.format(BAD_IDENTIFIER, "groupId", projectGroupId));
+        }
+
         projectRoot = new File(outputDirectory, projectArtifactId);
         if (projectRoot.exists()) {
             throw new MojoExecutionException("Unable to create the project, " +
@@ -273,29 +293,30 @@ public class CreateProjectMojo extends AbstractMojo {
         final Path projectDirPath = projectRoot.toPath();
         try {
             extensions = CreateProjectHelper.sanitizeExtensions(extensions);
-            final SourceType sourceType = CreateProjectHelper.determineSourceType(extensions);
-            sanitizeOptions(sourceType);
+            catalog = CreateProjectHelper.completeCatalog(catalog, extensions, mvn);
+            sanitizeOptions();
 
             final List<ResourceLoader> codestartsResourceLoader = codestartLoadersBuilder()
                     .catalog(catalog)
                     .artifactResolver(mvn)
                     .build();
             QuarkusProject newProject = QuarkusProject.of(projectDirPath, catalog,
-                    codestartsResourceLoader, log, buildToolEnum);
+                    codestartsResourceLoader, log, buildToolEnum, new JavaVersion(javaVersion));
             final CreateProject createProject = new CreateProject(newProject)
                     .groupId(projectGroupId)
                     .artifactId(projectArtifactId)
                     .version(projectVersion)
-                    .sourceType(sourceType)
-                    .className(className)
+                    .name(projectName)
+                    .description(projectDescription)
+                    .javaVersion(javaVersion)
+                    .resourceClassName(className)
                     .packageName(packageName)
                     .extensions(extensions)
+                    .resourcePath(path)
                     .example(example)
                     .noCode(noCode)
-                    .appConfig(appConfig);
-            if (path != null) {
-                createProject.setValue("path", path);
-            }
+                    .appConfig(appConfig)
+                    .data(data);
 
             success = createProject.execute().isSuccess();
             if (success && parentPomModel != null && BuildTool.MAVEN.equals(buildToolEnum)) {
@@ -310,8 +331,8 @@ public class CreateProjectMojo extends AbstractMojo {
                 parent.setArtifactId(parentPomModel.getArtifactId());
                 parent.setVersion(parentPomModel.getVersion());
                 subModulePomModel.setParent(parent);
-                MojoUtils.write(parentPomModel, pom);
-                MojoUtils.write(subModulePomModel, subModulePomFile);
+                MojoUtils.writeFormatted(parentPomModel, pom);
+                MojoUtils.writeFormatted(subModulePomModel, subModulePomFile);
             }
         } catch (Exception e) {
             throw new MojoExecutionException("Failed to generate Quarkus project", e);
@@ -332,18 +353,12 @@ public class CreateProjectMojo extends AbstractMojo {
             try {
                 return isBlank(groupId) && isBlank(artifactId) && isBlank(version)
                         ? catalogResolver.resolveExtensionCatalog()
-                        : catalogResolver.resolveExtensionCatalog(Collections.singletonList(
-                                new ArtifactCoords(getPlatformGroupId(mojo, groupId), getPlatformArtifactId(artifactId), "pom",
+                        : catalogResolver.resolveExtensionCatalog(List.of(
+                                ArtifactCoords.pom(getPlatformGroupId(mojo, groupId), getPlatformArtifactId(artifactId),
                                         getPlatformVersion(mojo, version))));
             } catch (RegistryResolutionException e) {
-                final StringBuilder buf = new StringBuilder();
-                buf.append("Failed to resolve the extension catalog");
-                Throwable cause = e.getCause();
-                while (cause != null) {
-                    buf.append(": ").append(cause.getLocalizedMessage());
-                    cause = cause.getCause();
-                }
-                log.warn(buf.toString());
+                log.warn(e.getLocalizedMessage());
+                mojo.getLog().debug(e);
             }
         }
         return resolveExtensionCatalogDirectly(mojo, groupId, artifactId, version, catalogResolver, artifactResolver, log);
@@ -355,29 +370,18 @@ public class CreateProjectMojo extends AbstractMojo {
         groupId = getPlatformGroupId(mojo, groupId);
         artifactId = getPlatformArtifactId(artifactId);
         version = getPlatformVersion(mojo, version);
+        final ExtensionCatalog catalog = ToolsUtils.resolvePlatformDescriptorDirectly(groupId, artifactId, version,
+                artifactResolver, log);
+
         final StringBuilder buf = new StringBuilder();
         buf.append("The extension catalog will be narrowed to the ").append(groupId).append(":").append(artifactId)
                 .append(":").append(version).append(" platform release.");
-        buf.append(
-                " To enable the complete Quarkiverse extension catalog along with the latest recommended platform releases, please, make sure ");
-        if (QuarkusProjectHelper.isRegistryClientEnabled()) {
-            buf.append("the following registries are accessible from your environment: ");
-            final Iterator<RegistryConfig> iterator = RegistriesConfigLocator.resolveConfig().getRegistries().iterator();
-            int i = 0;
-            while (iterator.hasNext()) {
-                final RegistryConfig r = iterator.next();
-                if (r.isEnabled()) {
-                    if (i++ > 0) {
-                        buf.append(", ");
-                    }
-                    buf.append(r.getId());
-                }
-            }
-        } else {
-            buf.append("the extension registry client is enabled.");
+        if (!QuarkusProjectHelper.isRegistryClientEnabled()) {
+            buf.append(
+                    " To enable the complete Quarkiverse extension catalog along with the latest recommended platform releases, please, make sure the extension registry client is enabled.");
         }
         log.warn(buf.toString());
-        return ToolsUtils.resolvePlatformDescriptorDirectly(groupId, artifactId, version, artifactResolver, log);
+        return catalog;
     }
 
     private void askTheUserForMissingValues() throws MojoExecutionException {
@@ -385,16 +389,7 @@ public class CreateProjectMojo extends AbstractMojo {
         // If the user has disabled the interactive mode or if the user has specified the artifactId, disable the
         // user interactions.
         if (!session.getRequest().isInteractiveMode() || shouldUseDefaults()) {
-            if (isBlank(projectArtifactId)) {
-                // we need to set it for the project directory
-                projectArtifactId = DEFAULT_ARTIFACT_ID;
-            }
-            if (isBlank(projectGroupId)) {
-                projectGroupId = DEFAULT_GROUP_ID;
-            }
-            if (isBlank(projectVersion)) {
-                projectVersion = DEFAULT_VERSION;
-            }
+            setProperDefaults();
             return;
         }
 
@@ -423,9 +418,24 @@ public class CreateProjectMojo extends AbstractMojo {
                         input -> noCode = input.startsWith("n"));
 
                 prompter.collectInput();
+            } else {
+                setProperDefaults();
             }
         } catch (IOException e) {
             throw new MojoExecutionException("Unable to get user input", e);
+        }
+    }
+
+    private void setProperDefaults() {
+        if (isBlank(projectArtifactId)) {
+            // we need to set it for the project directory
+            projectArtifactId = DEFAULT_ARTIFACT_ID;
+        }
+        if (isBlank(projectGroupId)) {
+            projectGroupId = DEFAULT_GROUP_ID;
+        }
+        if (isBlank(projectVersion)) {
+            projectVersion = DEFAULT_VERSION;
         }
     }
 
@@ -435,10 +445,9 @@ public class CreateProjectMojo extends AbstractMojo {
 
     }
 
-    private void sanitizeOptions(SourceType sourceType) {
+    private void sanitizeOptions() {
         if (className != null) {
-            className = sourceType.stripExtensionFrom(className);
-
+            className = className.replaceAll("\\.(java|kotlin|scala)$", "");
             int idx = className.lastIndexOf('.');
             if (idx >= 0 && isBlank(packageName)) {
                 // if it's a full qualified class name, we use the package name part (only if the packageName wasn't already defined)
