@@ -4,8 +4,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.ConnectException;
+import java.net.InetAddress;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -13,25 +15,39 @@ import java.security.Key;
 import java.security.KeyStore;
 import java.security.PrivateKey;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Base64;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
+import java.util.concurrent.Callable;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
+import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 
 import org.jboss.logging.Logger;
 
+import io.quarkus.arc.Arc;
+import io.quarkus.arc.ArcContainer;
+import io.quarkus.arc.ClientProxy;
 import io.quarkus.credentials.CredentialsProvider;
 import io.quarkus.credentials.runtime.CredentialsProviderFinder;
+import io.quarkus.oidc.common.OidcEndpoint;
+import io.quarkus.oidc.common.OidcRequestContextProperties;
+import io.quarkus.oidc.common.OidcRequestFilter;
 import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials;
 import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials.Provider;
 import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials.Secret;
 import io.quarkus.oidc.common.runtime.OidcCommonConfig.Tls.Verification;
-import io.quarkus.runtime.TlsConfig;
 import io.quarkus.runtime.configuration.ConfigurationException;
+import io.quarkus.runtime.util.ClassPathUtils;
+import io.quarkus.tls.TlsConfiguration;
 import io.smallrye.jwt.algorithm.SignatureAlgorithm;
 import io.smallrye.jwt.build.Jwt;
 import io.smallrye.jwt.build.JwtSignatureBuilder;
@@ -43,7 +59,10 @@ import io.vertx.core.json.JsonObject;
 import io.vertx.core.net.KeyStoreOptions;
 import io.vertx.core.net.ProxyOptions;
 import io.vertx.mutiny.core.MultiMap;
+import io.vertx.mutiny.core.Vertx;
 import io.vertx.mutiny.core.buffer.Buffer;
+import io.vertx.mutiny.ext.web.client.HttpRequest;
+import io.vertx.mutiny.ext.web.client.HttpResponse;
 import io.vertx.mutiny.ext.web.client.WebClient;
 
 public class OidcCommonUtils {
@@ -111,15 +130,18 @@ public class OidcCommonUtils {
 
     public static String urlEncode(String value) {
         try {
-            return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
+            return URLEncoder.encode(value, StandardCharsets.UTF_8);
         } catch (Exception ex) {
             throw new RuntimeException(ex);
         }
     }
 
-    public static void setHttpClientOptions(OidcCommonConfig oidcConfig, TlsConfig tlsConfig, HttpClientOptions options) {
+    public static void setHttpClientOptions(OidcCommonConfig oidcConfig, HttpClientOptions options,
+            TlsConfiguration defaultTlsConfiguration) {
+        var globalTrustAll = defaultTlsConfiguration != null && defaultTlsConfiguration.isTrustAll();
+
         boolean trustAll = oidcConfig.tls.verification.isPresent() ? oidcConfig.tls.verification.get() == Verification.NONE
-                : tlsConfig.trustAll;
+                : globalTrustAll;
         if (trustAll) {
             options.setTrustAll(true);
             options.setVerifyHost(false);
@@ -130,15 +152,38 @@ public class OidcCommonUtils {
                         .setPassword(oidcConfig.tls.getTrustStorePassword().orElse("password"))
                         .setAlias(oidcConfig.tls.getTrustStoreCertAlias().orElse(null))
                         .setValue(io.vertx.core.buffer.Buffer.buffer(trustStoreData))
-                        .setType("JKS");
+                        .setType(getKeyStoreType(oidcConfig.tls.trustStoreFileType, oidcConfig.tls.trustStoreFile.get()))
+                        .setProvider(oidcConfig.tls.trustStoreProvider.orElse(null));
                 options.setTrustOptions(trustStoreOptions);
                 if (Verification.CERTIFICATE_VALIDATION == oidcConfig.tls.verification.orElse(Verification.REQUIRED)) {
                     options.setVerifyHost(false);
                 }
             } catch (IOException ex) {
                 throw new ConfigurationException(String.format(
-                        "OIDC truststore file does not exist or can not be read",
-                        oidcConfig.tls.trustStoreFile.get().toString()), ex);
+                        "OIDC truststore file %s does not exist or can not be read",
+                        oidcConfig.tls.trustStoreFile.get()), ex);
+            }
+        }
+        if (oidcConfig.tls.keyStoreFile.isPresent()) {
+            try {
+                byte[] keyStoreData = getFileContent(oidcConfig.tls.keyStoreFile.get());
+                io.vertx.core.net.KeyStoreOptions keyStoreOptions = new KeyStoreOptions()
+                        .setAlias(oidcConfig.tls.keyStoreKeyAlias.orElse(null))
+                        .setAliasPassword(oidcConfig.tls.keyStoreKeyPassword.orElse(null))
+                        .setValue(io.vertx.core.buffer.Buffer.buffer(keyStoreData))
+                        .setType(getKeyStoreType(oidcConfig.tls.keyStoreFileType, oidcConfig.tls.keyStoreFile.get()))
+                        .setProvider(oidcConfig.tls.keyStoreProvider.orElse(null));
+
+                if (oidcConfig.tls.keyStorePassword.isPresent()) {
+                    keyStoreOptions.setPassword(oidcConfig.tls.keyStorePassword.get());
+                }
+
+                options.setKeyCertOptions(keyStoreOptions);
+
+            } catch (IOException ex) {
+                throw new ConfigurationException(String.format(
+                        "OIDC keystore file %s does not exist or can not be read",
+                        oidcConfig.tls.keyStoreFile.get()), ex);
             }
         }
         Optional<ProxyOptions> proxyOpt = toProxyOptions(oidcConfig.getProxy());
@@ -152,6 +197,19 @@ public class OidcCommonUtils {
         }
 
         options.setConnectTimeout((int) oidcConfig.getConnectionTimeout().toMillis());
+    }
+
+    public static String getKeyStoreType(Optional<String> fileType, Path storePath) {
+        if (fileType.isPresent()) {
+            return fileType.get().toUpperCase();
+        }
+        final String pathName = storePath.toString();
+        if (pathName.endsWith(".p12") || pathName.endsWith(".pkcs12") || pathName.endsWith(".pfx")) {
+            return "PKCS12";
+        } else {
+            // assume jks
+            return "JKS";
+        }
     }
 
     public static String getAuthServerUrl(OidcCommonConfig oidcConfig) {
@@ -195,7 +253,14 @@ public class OidcCommonUtils {
             return Optional.empty();
         }
         JsonObject jsonOptions = new JsonObject();
-        jsonOptions.put("host", proxyConfig.host.get());
+        // Vert.x Client currently does not expect a host having a scheme but keycloak-authorization expects scheme and host.
+        // Having a dedicated scheme property is probably better, but since it is property is not taken into account in Vertx Client
+        // it does not really make sense as it can send a misleading message that users can choose between `http` and `https`.
+        String host = URI.create(proxyConfig.host.get()).getHost();
+        if (host == null) {
+            host = proxyConfig.host.get();
+        }
+        jsonOptions.put("host", host);
         jsonOptions.put("port", proxyConfig.port);
         if (proxyConfig.username.isPresent()) {
             jsonOptions.put("username", proxyConfig.username.get());
@@ -215,21 +280,54 @@ public class OidcCommonUtils {
     public static boolean isClientSecretBasicAuthRequired(Credentials creds) {
         return creds.secret.isPresent() ||
                 ((creds.clientSecret.value.isPresent() || creds.clientSecret.provider.key.isPresent())
-                        && creds.clientSecret.method.orElseGet(() -> Secret.Method.BASIC) == Secret.Method.BASIC);
+                        && clientSecretMethod(creds) == Secret.Method.BASIC);
     }
 
     public static boolean isClientJwtAuthRequired(Credentials creds) {
-        return creds.jwt.secret.isPresent() || creds.jwt.secretProvider.key.isPresent() || creds.jwt.keyFile.isPresent()
-                || creds.jwt.keyStoreFile.isPresent();
+        return creds.jwt.secret.isPresent() || creds.jwt.secretProvider.key.isPresent() || creds.jwt.key.isPresent()
+                || creds.jwt.keyFile.isPresent() || creds.jwt.keyStoreFile.isPresent();
     }
 
     public static boolean isClientSecretPostAuthRequired(Credentials creds) {
         return (creds.clientSecret.value.isPresent() || creds.clientSecret.provider.key.isPresent())
-                && creds.clientSecret.method.orElseGet(() -> Secret.Method.BASIC) == Secret.Method.POST;
+                && clientSecretMethod(creds) == Secret.Method.POST;
+    }
+
+    public static boolean isClientSecretPostJwtAuthRequired(Credentials creds) {
+        return clientSecretMethod(creds) == Secret.Method.POST_JWT && isClientJwtAuthRequired(creds);
+    }
+
+    public static boolean isJwtAssertion(Credentials creds) {
+        return creds.getJwt().isAssertion();
     }
 
     public static String clientSecret(Credentials creds) {
         return creds.secret.orElse(creds.clientSecret.value.orElseGet(fromCredentialsProvider(creds.clientSecret.provider)));
+    }
+
+    public static String jwtSecret(Credentials creds) {
+        return creds.jwt.secret.orElseGet(fromCredentialsProvider(creds.jwt.secretProvider));
+    }
+
+    public static String getClientOrJwtSecret(Credentials creds) {
+        LOG.debug("Trying to get the configured client secret");
+        String encSecret = clientSecret(creds);
+        if (encSecret == null) {
+            LOG.debug("Client secret is not configured, "
+                    + "trying to get the configured 'client_jwt_secret' secret");
+            encSecret = jwtSecret(creds);
+        }
+        return encSecret;
+    }
+
+    public static SecretKey generateSecretKey() throws Exception {
+        KeyGenerator keyGenerator = KeyGenerator.getInstance("AES");
+        keyGenerator.init(256);
+        return keyGenerator.generateKey();
+    }
+
+    public static Secret.Method clientSecretMethod(Credentials creds) {
+        return creds.clientSecret.method.orElseGet(() -> Secret.Method.BASIC);
     }
 
     private static Supplier<? extends String> fromCredentialsProvider(Provider provider) {
@@ -239,10 +337,9 @@ public class OidcCommonUtils {
             public String get() {
                 if (provider.key.isPresent()) {
                     String providerName = provider.name.orElse(null);
+                    String keyringName = provider.keyringName.orElse(null);
                     CredentialsProvider credentialsProvider = CredentialsProviderFinder.find(providerName);
-                    if (credentialsProvider != null) {
-                        return credentialsProvider.getCredentials(providerName).get(provider.key.get());
-                    }
+                    return credentialsProvider.getCredentials(keyringName).get(provider.key.get());
                 }
                 return null;
             }
@@ -252,20 +349,35 @@ public class OidcCommonUtils {
     public static Key clientJwtKey(Credentials creds) {
         if (creds.jwt.secret.isPresent() || creds.jwt.secretProvider.key.isPresent()) {
             return KeyUtils
-                    .createSecretKeyFromSecret(creds.jwt.secret.orElseGet(fromCredentialsProvider(creds.jwt.secretProvider)));
+                    .createSecretKeyFromSecret(jwtSecret(creds));
         } else {
             Key key = null;
             try {
-                if (creds.jwt.keyFile.isPresent()) {
-                    key = KeyUtils.readSigningKey(creds.jwt.keyFile.get(), creds.jwt.keyId.orElse(null));
+                if (creds.jwt.getKey().isPresent()) {
+                    key = KeyUtils.tryAsPemSigningPrivateKey(creds.jwt.getKey().get(),
+                            getSignatureAlgorithm(creds, SignatureAlgorithm.RS256));
+                } else if (creds.jwt.getKeyFile().isPresent()) {
+                    key = KeyUtils.readSigningKey(creds.jwt.getKeyFile().get(), creds.jwt.keyId.orElse(null),
+                            getSignatureAlgorithm(creds, SignatureAlgorithm.RS256));
                 } else if (creds.jwt.keyStoreFile.isPresent()) {
                     KeyStore ks = KeyStore.getInstance("JKS");
                     InputStream is = ResourceUtils.getResourceStream(creds.jwt.keyStoreFile.get());
-                    ks.load(is, creds.jwt.keyStorePassword.toCharArray());
-                    key = ks.getKey(creds.jwt.keyId.get(), creds.jwt.keyPassword.toCharArray());
+
+                    if (creds.jwt.keyStorePassword.isPresent()) {
+                        ks.load(is, creds.jwt.keyStorePassword.get().toCharArray());
+                    } else {
+                        ks.load(is, null);
+                    }
+
+                    if (creds.jwt.keyPassword.isPresent()) {
+                        key = ks.getKey(creds.jwt.keyId.get(), creds.jwt.keyPassword.get().toCharArray());
+                    } else {
+                        throw new ConfigurationException(
+                                "When using a key store, the `quarkus.oidc-client.credentials.jwt.key-password` property must be set");
+                    }
                 }
             } catch (Exception ex) {
-                throw new ConfigurationException("Key can not be loaded");
+                throw new ConfigurationException("Key can not be loaded", ex);
             }
             if (key == null) {
                 throw new ConfigurationException("Key is null");
@@ -275,10 +387,11 @@ public class OidcCommonUtils {
     }
 
     public static String signJwtWithKey(OidcCommonConfig oidcConfig, String tokenRequestUri, Key key) {
-        // 'jti' and 'iat' claim is created by default, iat - is set to the current time
+        // 'jti' and 'iat' claims are created by default, 'iat' - is set to the current time
         JwtSignatureBuilder builder = Jwt
-                .issuer(oidcConfig.clientId.get())
-                .subject(oidcConfig.clientId.get())
+                .claims(additionalClaims(oidcConfig.credentials.jwt.getClaims()))
+                .issuer(oidcConfig.credentials.jwt.issuer.orElse(oidcConfig.clientId.get()))
+                .subject(oidcConfig.credentials.jwt.subject.orElse(oidcConfig.clientId.get()))
                 .audience(oidcConfig.credentials.jwt.getAudience().isPresent()
                         ? removeLastPathSeparator(oidcConfig.credentials.jwt.getAudience().get())
                         : tokenRequestUri)
@@ -287,19 +400,32 @@ public class OidcCommonUtils {
         if (oidcConfig.credentials.jwt.getTokenKeyId().isPresent()) {
             builder.keyId(oidcConfig.credentials.jwt.getTokenKeyId().get());
         }
-        if (oidcConfig.credentials.jwt.getSignatureAlgorithm().isPresent()) {
-            SignatureAlgorithm signatureAlgorithm;
-            try {
-                signatureAlgorithm = SignatureAlgorithm.fromAlgorithm(oidcConfig.credentials.jwt.getSignatureAlgorithm().get());
-            } catch (Exception ex) {
-                throw new ConfigurationException("Unsupported signature algorithm");
-            }
+        SignatureAlgorithm signatureAlgorithm = getSignatureAlgorithm(oidcConfig.credentials, null);
+        if (signatureAlgorithm != null) {
             builder.algorithm(signatureAlgorithm);
         }
+
         if (key instanceof SecretKey) {
             return builder.sign((SecretKey) key);
         } else {
             return builder.sign((PrivateKey) key);
+        }
+    }
+
+    @SuppressWarnings({ "unchecked", "rawtypes" })
+    private static Map<String, Object> additionalClaims(Map<String, String> claims) {
+        return (Map) claims;
+    }
+
+    private static SignatureAlgorithm getSignatureAlgorithm(Credentials credentials, SignatureAlgorithm defaultAlgorithm) {
+        if (credentials.jwt.getSignatureAlgorithm().isPresent()) {
+            try {
+                return SignatureAlgorithm.fromAlgorithm(credentials.jwt.getSignatureAlgorithm().get());
+            } catch (Exception ex) {
+                throw new ConfigurationException("Unsupported signature algorithm");
+            }
+        } else {
+            return defaultAlgorithm;
         }
     }
 
@@ -316,12 +442,15 @@ public class OidcCommonUtils {
 
     public static String initClientSecretBasicAuth(OidcCommonConfig oidcConfig) {
         if (isClientSecretBasicAuthRequired(oidcConfig.credentials)) {
-            return OidcConstants.BASIC_SCHEME + " "
-                    + Base64.getEncoder().encodeToString(
-                            (oidcConfig.getClientId().get() + ":"
-                                    + clientSecret(oidcConfig.credentials)).getBytes(StandardCharsets.UTF_8));
+            return basicSchemeValue(oidcConfig.getClientId().get(), clientSecret(oidcConfig.credentials));
         }
         return null;
+    }
+
+    public static String basicSchemeValue(String name, String secret) {
+        return OidcConstants.BASIC_SCHEME + " "
+                + Base64.getEncoder().encodeToString((name + ":" + secret).getBytes(StandardCharsets.UTF_8));
+
     }
 
     public static Key initClientJwtKey(OidcCommonConfig oidcConfig) {
@@ -336,25 +465,52 @@ public class OidcCommonUtils {
                 || (t instanceof OidcEndpointAccessException && ((OidcEndpointAccessException) t).getErrorStatus() == 404));
     }
 
-    public static Uni<JsonObject> discoverMetadata(WebClient client, String authServerUrl, long connectionDelayInMillisecs) {
-        final String discoveryUrl = authServerUrl + OidcConstants.WELL_KNOWN_CONFIGURATION;
-        return client.getAbs(discoveryUrl).send().onItem().transform(resp -> {
+    public static Uni<JsonObject> discoverMetadata(WebClient client, Map<OidcEndpoint.Type, List<OidcRequestFilter>> filters,
+            OidcRequestContextProperties contextProperties, String authServerUrl,
+            long connectionDelayInMillisecs, Vertx vertx, boolean blockingDnsLookup) {
+        final String discoveryUrl = getDiscoveryUri(authServerUrl);
+        HttpRequest<Buffer> request = client.getAbs(discoveryUrl);
+        if (!filters.isEmpty()) {
+            Map<String, Object> newProperties = contextProperties == null ? new HashMap<>()
+                    : new HashMap<>(contextProperties.getAll());
+            newProperties.put(OidcRequestContextProperties.DISCOVERY_ENDPOINT, discoveryUrl);
+            OidcRequestContextProperties requestProps = new OidcRequestContextProperties(newProperties);
+            for (OidcRequestFilter filter : getMatchingOidcRequestFilters(filters, OidcEndpoint.Type.DISCOVERY)) {
+                filter.filter(request, null, requestProps);
+            }
+        }
+        return sendRequest(vertx, request, blockingDnsLookup).onItem().transform(resp -> {
             if (resp.statusCode() == 200) {
                 return resp.bodyAsJsonObject();
             } else {
-                LOG.tracef("Discovery has failed, status code: %d", resp.statusCode());
+                String errorMessage = resp.bodyAsString();
+                if (errorMessage != null && !errorMessage.isEmpty()) {
+                    LOG.warnf("Discovery request %s has failed, status code: %d, error message: %s", discoveryUrl,
+                            resp.statusCode(), errorMessage);
+                } else {
+                    LOG.warnf("Discovery request %s has failed, status code: %d", discoveryUrl, resp.statusCode());
+                }
                 throw new OidcEndpointAccessException(resp.statusCode());
             }
         }).onFailure(oidcEndpointNotAvailable())
                 .retry()
                 .withBackOff(CONNECTION_BACKOFF_DURATION, CONNECTION_BACKOFF_DURATION)
                 .expireIn(connectionDelayInMillisecs)
-                .onFailure().transform(t -> t.getCause());
+                .onFailure().transform(t -> {
+                    LOG.warn("OIDC Server is not available:", t.getCause() != null ? t.getCause() : t);
+                    // don't wrap it to avoid information leak
+                    return new RuntimeException("OIDC Server is not available");
+                });
+    }
+
+    public static String getDiscoveryUri(String authServerUrl) {
+        return authServerUrl + OidcConstants.WELL_KNOWN_CONFIGURATION;
     }
 
     private static byte[] getFileContent(Path path) throws IOException {
         byte[] data;
-        final InputStream resource = Thread.currentThread().getContextClassLoader().getResourceAsStream(path.toString());
+        final InputStream resource = Thread.currentThread().getContextClassLoader()
+                .getResourceAsStream(ClassPathUtils.toResourceName(path));
         if (resource != null) {
             try (InputStream is = resource) {
                 data = doRead(is);
@@ -375,5 +531,77 @@ public class OidcCommonUtils {
             out.write(buf, 0, r);
         }
         return out.toByteArray();
+    }
+
+    public static Map<OidcEndpoint.Type, List<OidcRequestFilter>> getOidcRequestFilters() {
+        ArcContainer container = Arc.container();
+        if (container != null) {
+            Map<OidcEndpoint.Type, List<OidcRequestFilter>> map = new HashMap<>();
+            for (OidcRequestFilter filter : container.listAll(OidcRequestFilter.class).stream().map(handle -> handle.get())
+                    .collect(Collectors.toList())) {
+                OidcEndpoint endpoint = ClientProxy.unwrap(filter).getClass().getAnnotation(OidcEndpoint.class);
+                if (endpoint != null) {
+                    for (OidcEndpoint.Type type : endpoint.value()) {
+                        map.computeIfAbsent(type, k -> new ArrayList<OidcRequestFilter>()).add(filter);
+                    }
+                } else {
+                    map.computeIfAbsent(OidcEndpoint.Type.ALL, k -> new ArrayList<OidcRequestFilter>()).add(filter);
+                }
+            }
+            return map;
+        }
+        return Map.of();
+    }
+
+    public static List<OidcRequestFilter> getMatchingOidcRequestFilters(Map<OidcEndpoint.Type, List<OidcRequestFilter>> filters,
+            OidcEndpoint.Type type) {
+        List<OidcRequestFilter> typeSpecific = filters.get(type);
+        List<OidcRequestFilter> all = filters.get(OidcEndpoint.Type.ALL);
+        if (typeSpecific == null && all == null) {
+            return List.of();
+        }
+        if (typeSpecific != null && all == null) {
+            return typeSpecific;
+        } else if (typeSpecific == null && all != null) {
+            return all;
+        } else {
+            List<OidcRequestFilter> combined = new ArrayList<>(typeSpecific.size() + all.size());
+            combined.addAll(typeSpecific);
+            combined.addAll(all);
+            return combined;
+        }
+    }
+
+    public static Uni<HttpResponse<Buffer>> sendRequest(io.vertx.core.Vertx vertx, HttpRequest<Buffer> request,
+            boolean blockingDnsLookup) {
+        if (blockingDnsLookup) {
+            return sendRequest(new Vertx(vertx), request, true);
+        } else {
+            return request.send();
+        }
+    }
+
+    public static Uni<HttpResponse<Buffer>> sendRequest(Vertx vertx, HttpRequest<Buffer> request, boolean blockingDnsLookup) {
+        if (blockingDnsLookup) {
+            return vertx.executeBlocking(new Callable<Void>() {
+                @Override
+                public Void call() {
+                    try {
+                        // cache DNS lookup
+                        InetAddress.getByName(request.host());
+                    } catch (UnknownHostException e) {
+                        throw new RuntimeException(e);
+                    }
+                    return null;
+                }
+            }).flatMap(new Function<Void, Uni<? extends HttpResponse<Buffer>>>() {
+                @Override
+                public Uni<? extends HttpResponse<Buffer>> apply(Void unused) {
+                    return request.send();
+                }
+            });
+        } else {
+            return request.send();
+        }
     }
 }
