@@ -3,20 +3,22 @@ package io.quarkus.oidc.test;
 import java.util.Collections;
 import java.util.Map;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.inject.Named;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Named;
 
-import io.quarkus.arc.Unremovable;
 import io.quarkus.credentials.CredentialsProvider;
 
 @ApplicationScoped
-@Unremovable
 @Named("vault-secret-provider")
 public class SecretProvider implements CredentialsProvider {
 
     @Override
     public Map<String, String> getCredentials(String credentialsProviderName) {
-        return Collections.singletonMap("secret-from-vault", "secret");
+        if ("oidc".equals(credentialsProviderName)) {
+            return Collections.singletonMap("secret-from-vault", "secret");
+        } else {
+            return Map.of();
+        }
     }
 
 }
