@@ -1,7 +1,6 @@
 package io.quarkus.scheduler.deployment;
 
 import static io.quarkus.deployment.annotations.ExecutionTime.RUNTIME_INIT;
-import static io.quarkus.deployment.annotations.ExecutionTime.STATIC_INIT;
 import static org.jboss.jandex.AnnotationTarget.Kind.METHOD;
 import static org.jboss.jandex.AnnotationValue.createArrayValue;
 import static org.jboss.jandex.AnnotationValue.createBooleanValue;
@@ -9,16 +8,22 @@ import static org.jboss.jandex.AnnotationValue.createStringValue;
 
 import java.lang.reflect.Modifier;
 import java.time.Duration;
+import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.jboss.jandex.AnnotationInstance;
+import org.jboss.jandex.AnnotationTransformation;
 import org.jboss.jandex.AnnotationValue;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
@@ -51,7 +56,7 @@ import io.quarkus.arc.processor.BeanDeploymentValidator;
 import io.quarkus.arc.processor.BeanInfo;
 import io.quarkus.arc.processor.BuiltinScope;
 import io.quarkus.arc.processor.DotNames;
-import io.quarkus.arc.runtime.BeanLookupSupplier;
+import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.deployment.Capabilities;
 import io.quarkus.deployment.Capability;
 import io.quarkus.deployment.Feature;
@@ -60,44 +65,36 @@ import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.AnnotationProxyBuildItem;
-import io.quarkus.deployment.builditem.ExecutorBuildItem;
 import io.quarkus.deployment.builditem.FeatureBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem;
 import io.quarkus.deployment.metrics.MetricsCapabilityBuildItem;
-import io.quarkus.deployment.pkg.builditem.CurateOutcomeBuildItem;
-import io.quarkus.devconsole.spi.DevConsoleRouteBuildItem;
-import io.quarkus.devconsole.spi.DevConsoleRuntimeTemplateInfoBuildItem;
+import io.quarkus.gizmo.CatchBlockCreator;
 import io.quarkus.gizmo.ClassCreator;
 import io.quarkus.gizmo.ClassOutput;
+import io.quarkus.gizmo.DescriptorUtils;
 import io.quarkus.gizmo.MethodCreator;
 import io.quarkus.gizmo.MethodDescriptor;
 import io.quarkus.gizmo.ResultHandle;
+import io.quarkus.gizmo.TryBlock;
 import io.quarkus.runtime.metrics.MetricsFactory;
 import io.quarkus.runtime.util.HashUtil;
 import io.quarkus.scheduler.Scheduled;
 import io.quarkus.scheduler.ScheduledExecution;
-import io.quarkus.scheduler.Scheduler;
-import io.quarkus.scheduler.runtime.ScheduledInvoker;
-import io.quarkus.scheduler.runtime.ScheduledMethodMetadata;
+import io.quarkus.scheduler.common.runtime.DefaultInvoker;
+import io.quarkus.scheduler.common.runtime.MutableScheduledMethod;
+import io.quarkus.scheduler.common.runtime.SchedulerContext;
+import io.quarkus.scheduler.common.runtime.util.SchedulerUtils;
+import io.quarkus.scheduler.runtime.CompositeScheduler;
+import io.quarkus.scheduler.runtime.Constituent;
 import io.quarkus.scheduler.runtime.SchedulerConfig;
-import io.quarkus.scheduler.runtime.SchedulerContext;
 import io.quarkus.scheduler.runtime.SchedulerRecorder;
 import io.quarkus.scheduler.runtime.SimpleScheduler;
-import io.quarkus.scheduler.runtime.devconsole.SchedulerDevConsoleRecorder;
-import io.quarkus.scheduler.runtime.util.SchedulerUtils;
+import io.smallrye.common.annotation.Identifier;
 
-/**
- * @author Martin Kouba
- */
 public class SchedulerProcessor {
 
     private static final Logger LOGGER = Logger.getLogger(SchedulerProcessor.class);
-
-    static final DotName SCHEDULED_NAME = DotName.createSimple(Scheduled.class.getName());
-    static final DotName SCHEDULES_NAME = DotName.createSimple(Scheduled.Schedules.class.getName());
-    static final DotName SKIP_NEVER_NAME = DotName.createSimple(Scheduled.Never.class.getName());
-    static final DotName SKIP_PREDICATE = DotName.createSimple(Scheduled.SkipPredicate.class.getName());
 
     static final Type SCHEDULED_EXECUTION_TYPE = Type.create(DotName.createSimple(ScheduledExecution.class.getName()),
             Kind.CLASS);
@@ -106,17 +103,71 @@ public class SchedulerProcessor {
     static final String NESTED_SEPARATOR = "$_";
 
     @BuildStep
-    void beans(Capabilities capabilities, BuildProducer<AdditionalBeanBuildItem> additionalBeans) {
-        if (capabilities.isMissing(Capability.QUARTZ)) {
+    SchedulerImplementationBuildItem implementation() {
+        return new SchedulerImplementationBuildItem(Scheduled.SIMPLE, DotName.createSimple(SimpleScheduler.class), 0);
+    }
+
+    @BuildStep
+    void compositeScheduler(SchedulerConfig config, List<SchedulerImplementationBuildItem> implementations,
+            BuildProducer<AdditionalBeanBuildItem> additionalBeans,
+            BuildProducer<DiscoveredImplementationsBuildItem> discoveredImplementations) {
+        List<SchedulerImplementationBuildItem> sorted = implementations.stream()
+                .sorted(Comparator.comparingInt(SchedulerImplementationBuildItem::getPriority).reversed()).toList();
+        Set<String> found = sorted.stream().map(SchedulerImplementationBuildItem::getImplementation)
+                .collect(Collectors.toUnmodifiableSet());
+        if (found.size() != implementations.size()) {
+            throw new IllegalStateException("Invalid scheduler implementations detected: " + implementations);
+        }
+        DiscoveredImplementationsBuildItem discovered = new DiscoveredImplementationsBuildItem(
+                sorted.get(0).getImplementation(), found,
+                config.useCompositeScheduler);
+        discoveredImplementations.produce(discovered);
+        if (implementations.size() > 1 && config.useCompositeScheduler) {
+            // If multiple implementations are needed we have to register the CompositeScheduler, and
+            // instruct the extensions that provide an implementation to modify the bean metadata, i.e. add the marker qualifier
+            additionalBeans.produce(AdditionalBeanBuildItem.builder()
+                    .addBeanClasses(Constituent.class, CompositeScheduler.class).setUnremovable().build());
+        }
+    }
+
+    @BuildStep
+    void transformSchedulerBeans(DiscoveredImplementationsBuildItem discoveredImplementations,
+            List<SchedulerImplementationBuildItem> implementations,
+            BuildProducer<AnnotationsTransformerBuildItem> transformer) {
+        if (discoveredImplementations.isCompositeSchedulerUsed()) {
+            Map<DotName, String> implsToBeanClass = implementations.stream()
+                    .collect(Collectors.toMap(SchedulerImplementationBuildItem::getSchedulerBeanClass,
+                            SchedulerImplementationBuildItem::getImplementation));
+            transformer.produce(new AnnotationsTransformerBuildItem(AnnotationTransformation.forClasses()
+                    .whenClass(c -> implsToBeanClass.containsKey(c.name()))
+                    .transform(c -> {
+                        c.add(AnnotationInstance.builder(Constituent.class).build());
+                        c.add(AnnotationInstance.builder(Identifier.class)
+                                .add("value", implsToBeanClass.get(c.declaration().asClass().name())).build());
+                    })));
+        }
+    }
+
+    @BuildStep
+    void beans(DiscoveredImplementationsBuildItem discoveredImplementations,
+            BuildProducer<AdditionalBeanBuildItem> additionalBeans) {
+        additionalBeans.produce(new AdditionalBeanBuildItem(Scheduled.ApplicationNotRunning.class));
+        if (discoveredImplementations.getImplementations().size() == 1
+                || discoveredImplementations.isCompositeSchedulerUsed()) {
+            // Quartz extension is not present or composite scheduler is used
             additionalBeans.produce(new AdditionalBeanBuildItem(SimpleScheduler.class));
         }
     }
 
     @BuildStep
     AutoAddScopeBuildItem autoAddScope() {
-        return AutoAddScopeBuildItem.builder().containsAnnotations(SCHEDULED_NAME, SCHEDULES_NAME)
+        // We add @Singleton to any bean class that has no scope annotation and declares at least one non-static method annotated with @Scheduled
+        return AutoAddScopeBuildItem.builder()
+                .anyMethodMatches(m -> !Modifier.isStatic(m.flags())
+                        && (m.hasAnnotation(SchedulerDotNames.SCHEDULED_NAME)
+                                || m.hasAnnotation(SchedulerDotNames.SCHEDULES_NAME)))
                 .defaultScope(BuiltinScope.SINGLETON)
-                .reason("Found scheduled business methods").build();
+                .reason("Found non-static scheduled business methods").build();
     }
 
     @BuildStep
@@ -124,7 +175,37 @@ public class SchedulerProcessor {
             TransformedAnnotationsBuildItem transformedAnnotations,
             BuildProducer<ScheduledBusinessMethodItem> scheduledBusinessMethods) {
 
-        // We need to collect all business methods annotated with @Scheduled first
+        // First collect static scheduled methods
+        List<AnnotationInstance> schedules = new ArrayList<>(
+                beanArchives.getIndex().getAnnotations(SchedulerDotNames.SCHEDULED_NAME));
+        for (AnnotationInstance annotationInstance : beanArchives.getIndex().getAnnotations(SchedulerDotNames.SCHEDULES_NAME)) {
+            for (AnnotationInstance scheduledInstance : annotationInstance.value().asNestedArray()) {
+                // We need to set the target of the containing instance
+                schedules.add(AnnotationInstance.create(scheduledInstance.name(), annotationInstance.target(),
+                        scheduledInstance.values()));
+            }
+        }
+        for (AnnotationInstance annotationInstance : schedules) {
+            if (annotationInstance.target().kind() != METHOD) {
+                continue; // This should never happen as the annotation has @Target(METHOD)
+            }
+            MethodInfo method = annotationInstance.target().asMethod();
+            ClassInfo declaringClass = method.declaringClass();
+            if (!Modifier.isStatic(method.flags())
+                    && (Modifier.isAbstract(declaringClass.flags()) || declaringClass.isInterface())) {
+                throw new IllegalStateException(String.format(
+                        "Non-static @Scheduled methods may not be declared on abstract classes and interfaces: %s() declared on %s",
+                        method.name(), declaringClass.name()));
+            }
+            if (Modifier.isStatic(method.flags()) && !KotlinUtil.isSuspendMethod(method)) {
+                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(null, method, schedules,
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.NON_BLOCKING),
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.RUN_ON_VIRTUAL_THREAD)));
+                LOGGER.debugf("Found scheduled static method %s declared on %s", method, declaringClass.name());
+            }
+        }
+
+        // Then collect all business methods annotated with @Scheduled
         for (BeanInfo bean : beanDiscovery.beanStream().classBeans()) {
             collectScheduledMethods(beanArchives.getIndex(), transformedAnnotations, bean,
                     bean.getTarget().get().asClass(),
@@ -136,12 +217,18 @@ public class SchedulerProcessor {
             ClassInfo beanClass, BuildProducer<ScheduledBusinessMethodItem> scheduledBusinessMethods) {
 
         for (MethodInfo method : beanClass.methods()) {
+            if (Modifier.isStatic(method.flags())) {
+                // Ignore static methods
+                continue;
+            }
             List<AnnotationInstance> schedules = null;
-            AnnotationInstance scheduledAnnotation = transformedAnnotations.getAnnotation(method, SCHEDULED_NAME);
+            AnnotationInstance scheduledAnnotation = transformedAnnotations.getAnnotation(method,
+                    SchedulerDotNames.SCHEDULED_NAME);
             if (scheduledAnnotation != null) {
-                schedules = Collections.singletonList(scheduledAnnotation);
+                schedules = List.of(scheduledAnnotation);
             } else {
-                AnnotationInstance schedulesAnnotation = transformedAnnotations.getAnnotation(method, SCHEDULES_NAME);
+                AnnotationInstance schedulesAnnotation = transformedAnnotations.getAnnotation(method,
+                        SchedulerDotNames.SCHEDULES_NAME);
                 if (schedulesAnnotation != null) {
                     schedules = new ArrayList<>();
                     for (AnnotationInstance scheduledInstance : schedulesAnnotation.value().asNestedArray()) {
@@ -152,52 +239,76 @@ public class SchedulerProcessor {
                 }
             }
             if (schedules != null) {
-                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(bean, method, schedules));
+                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(bean, method, schedules,
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.NON_BLOCKING),
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.RUN_ON_VIRTUAL_THREAD)));
                 LOGGER.debugf("Found scheduled business method %s declared on %s", method, bean);
-            }
-        }
-
-        DotName superClassName = beanClass.superName();
-        if (superClassName != null) {
-            ClassInfo superClass = index.getClassByName(superClassName);
-            if (superClass != null) {
-                collectScheduledMethods(index, transformedAnnotations, bean, superClass, scheduledBusinessMethods);
             }
         }
     }
 
     @BuildStep
     void validateScheduledBusinessMethods(SchedulerConfig config, List<ScheduledBusinessMethodItem> scheduledMethods,
-            ValidationPhaseBuildItem validationPhase, BuildProducer<ValidationErrorBuildItem> validationErrors) {
+            ValidationPhaseBuildItem validationPhase, BuildProducer<ValidationErrorBuildItem> validationErrors,
+            Capabilities capabilities, BeanArchiveIndexBuildItem beanArchiveIndex,
+            DiscoveredImplementationsBuildItem discoveredImplementations) {
         List<Throwable> errors = new ArrayList<>();
         Map<String, AnnotationInstance> encounteredIdentities = new HashMap<>();
+        Set<String> methodDescriptions = new HashSet<>();
 
         for (ScheduledBusinessMethodItem scheduledMethod : scheduledMethods) {
+            if (!methodDescriptions.add(scheduledMethod.getMethodDescription())) {
+                errors.add(new IllegalStateException("Multiple @Scheduled methods of the same name declared on the same class: "
+                        + scheduledMethod.getMethodDescription()));
+                continue;
+            }
             MethodInfo method = scheduledMethod.getMethod();
-
-            if (Modifier.isPrivate(method.flags()) || Modifier.isStatic(method.flags())) {
-                errors.add(new IllegalStateException("@Scheduled method must be non-private and non-static: "
-                        + method.declaringClass().name() + "#" + method.name() + "()"));
+            if (Modifier.isAbstract(method.flags())) {
+                errors.add(new IllegalStateException("@Scheduled method must not be abstract: "
+                        + scheduledMethod.getMethodDescription()));
+                continue;
+            }
+            if (Modifier.isPrivate(method.flags())) {
+                errors.add(new IllegalStateException("@Scheduled method must not be private: "
+                        + scheduledMethod.getMethodDescription()));
                 continue;
             }
 
+            if (scheduledMethod.isNonBlocking() && scheduledMethod.isRunOnVirtualThread()) {
+                errors.add(new IllegalStateException("@Scheduled method cannot be non-blocking and annotated " +
+                        "with @RunOnVirtualThread: " + scheduledMethod.getMethodDescription()));
+            }
+
+            boolean isSuspendMethod = KotlinUtil.isSuspendMethod(method);
+
             // Validate method params and return type
-            List<Type> params = method.parameters();
-            if (params.size() > 1
-                    || (params.size() == 1 && !params.get(0).equals(SCHEDULED_EXECUTION_TYPE))) {
+            List<Type> params = method.parameterTypes();
+            int maxParamSize = isSuspendMethod ? 2 : 1;
+            if (params.size() > maxParamSize
+                    || (params.size() == maxParamSize && !params.get(0).equals(SCHEDULED_EXECUTION_TYPE))) {
                 errors.add(new IllegalStateException(String.format(
                         "Invalid scheduled business method parameters %s [method: %s, bean: %s]", params,
                         method, scheduledMethod.getBean())));
             }
-            if (!method.returnType().kind().equals(Type.Kind.VOID)) {
-                errors.add(new IllegalStateException(
-                        String.format("Scheduled business method must return void [method: %s, bean: %s]",
-                                method, scheduledMethod.getBean())));
+            if (!isValidReturnType(method)) {
+                if (isSuspendMethod) {
+                    errors.add(new IllegalStateException(
+                            String.format(
+                                    "Suspending scheduled business method must return Unit [method: %s, bean: %s]",
+                                    method, scheduledMethod.getBean())));
+                } else {
+                    errors.add(new IllegalStateException(
+                            String.format(
+                                    "Scheduled business method must return void, CompletionStage<Void> or Uni<Void> [method: %s, bean: %s]",
+                                    method, scheduledMethod.getBean())));
+                }
             }
             // Validate cron() and every() expressions
+            long checkPeriod = capabilities.isMissing(Capability.QUARTZ) ? SimpleScheduler.CHECK_PERIOD : 50;
             CronParser parser = new CronParser(CronDefinitionBuilder.instanceDefinitionFor(config.cronType));
             for (AnnotationInstance scheduled : scheduledMethod.getSchedules()) {
-                Throwable error = validateScheduled(parser, scheduled, encounteredIdentities, validationPhase.getContext());
+                Throwable error = validateScheduled(parser, scheduled, encounteredIdentities, validationPhase.getContext(),
+                        checkPeriod, beanArchiveIndex.getIndex(), discoveredImplementations);
                 if (error != null) {
                     errors.add(error);
                 }
@@ -209,11 +320,31 @@ public class SchedulerProcessor {
         }
     }
 
+    private boolean isValidReturnType(MethodInfo method) {
+        Type returnType = method.returnType();
+        if (returnType.kind() == Kind.VOID) {
+            return true;
+        }
+        if (SchedulerDotNames.COMPLETION_STAGE.equals(returnType.name())
+                && returnType.asParameterizedType().arguments().get(0).name().equals(SchedulerDotNames.VOID)) {
+            return true;
+        }
+        if (SchedulerDotNames.UNI.equals(returnType.name())
+                && returnType.asParameterizedType().arguments().get(0).name().equals(SchedulerDotNames.VOID)) {
+            return true;
+        }
+        if (KotlinUtil.isSuspendMethod(method)
+                && SchedulerDotNames.VOID.equals(KotlinUtil.determineReturnTypeOfSuspendMethod(method).name())) {
+            return true;
+        }
+        return false;
+    }
+
     @BuildStep
     public List<UnremovableBeanBuildItem> unremovableBeans() {
         // Beans annotated with @Scheduled should never be removed
-        return Arrays.asList(new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SCHEDULED_NAME)),
-                new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SCHEDULES_NAME)));
+        return List.of(new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SchedulerDotNames.SCHEDULED_NAME)),
+                new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SchedulerDotNames.SCHEDULES_NAME)));
     }
 
     @BuildStep
@@ -221,9 +352,10 @@ public class SchedulerProcessor {
     public FeatureBuildItem build(SchedulerConfig config, BuildProducer<SyntheticBeanBuildItem> syntheticBeans,
             SchedulerRecorder recorder, List<ScheduledBusinessMethodItem> scheduledMethods,
             BuildProducer<GeneratedClassBuildItem> generatedClasses, BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
-            AnnotationProxyBuildItem annotationProxy, ExecutorBuildItem executor) {
+            AnnotationProxyBuildItem annotationProxy, List<ForceStartSchedulerBuildItem> schedulerForcedStartItems,
+            DiscoveredImplementationsBuildItem discoveredImplementations) {
 
-        List<ScheduledMethodMetadata> scheduledMetadata = new ArrayList<>();
+        List<MutableScheduledMethod> scheduledMetadata = new ArrayList<>();
         ClassOutput classOutput = new GeneratedClassGizmoAdaptor(generatedClasses, new Function<String, String>() {
             @Override
             public String apply(String name) {
@@ -240,9 +372,9 @@ public class SchedulerProcessor {
         });
 
         for (ScheduledBusinessMethodItem scheduledMethod : scheduledMethods) {
-            ScheduledMethodMetadata metadata = new ScheduledMethodMetadata();
+            MutableScheduledMethod metadata = new MutableScheduledMethod();
             String invokerClass = generateInvoker(scheduledMethod, classOutput);
-            reflectiveClass.produce(new ReflectiveClassBuildItem(false, false, invokerClass));
+            reflectiveClass.produce(ReflectiveClassBuildItem.builder(invokerClass).constructors().methods().fields().build());
             metadata.setInvokerClassName(invokerClass);
             List<Scheduled> schedules = new ArrayList<>();
             for (AnnotationInstance scheduled : scheduledMethod.getSchedules()) {
@@ -255,36 +387,25 @@ public class SchedulerProcessor {
         }
 
         syntheticBeans.produce(SyntheticBeanBuildItem.configure(SchedulerContext.class).setRuntimeInit()
-                .supplier(recorder.createContext(config, executor.getExecutorProxy(), scheduledMetadata))
+                .supplier(recorder.createContext(config, scheduledMetadata, !schedulerForcedStartItems.isEmpty(),
+                        discoveredImplementations.getAutoImplementation()))
                 .done());
 
         return new FeatureBuildItem(Feature.SCHEDULER);
     }
 
     @BuildStep
-    @Record(value = STATIC_INIT, optional = true)
-    public DevConsoleRouteBuildItem devConsole(BuildProducer<DevConsoleRuntimeTemplateInfoBuildItem> infos,
-            SchedulerDevConsoleRecorder recorder, CurateOutcomeBuildItem curateOutcomeBuildItem) {
-        infos.produce(new DevConsoleRuntimeTemplateInfoBuildItem("schedulerContext",
-                new BeanLookupSupplier(SchedulerContext.class), this.getClass(), curateOutcomeBuildItem));
-        infos.produce(new DevConsoleRuntimeTemplateInfoBuildItem("scheduler",
-                new BeanLookupSupplier(Scheduler.class), this.getClass(), curateOutcomeBuildItem));
-        infos.produce(new DevConsoleRuntimeTemplateInfoBuildItem("configLookup",
-                recorder.getConfigLookup(), this.getClass(), curateOutcomeBuildItem));
-        return new DevConsoleRouteBuildItem("schedules", "POST", recorder.invokeHandler());
-    }
-
-    @BuildStep
-    public AnnotationsTransformerBuildItem metrics(SchedulerConfig config,
-            Optional<MetricsCapabilityBuildItem> metricsCapability) {
+    public void metrics(SchedulerConfig config,
+            Optional<MetricsCapabilityBuildItem> metricsCapability,
+            BuildProducer<AnnotationsTransformerBuildItem> annotationsTransformer) {
 
         if (config.metricsEnabled && metricsCapability.isPresent()) {
             DotName micrometerTimed = DotName.createSimple("io.micrometer.core.annotation.Timed");
             DotName mpTimed = DotName.createSimple("org.eclipse.microprofile.metrics.annotation.Timed");
 
-            return new AnnotationsTransformerBuildItem(AnnotationsTransformer.builder()
+            annotationsTransformer.produce(new AnnotationsTransformerBuildItem(AnnotationsTransformer.builder()
                     .appliesTo(METHOD)
-                    .whenContainsAny(List.of(SCHEDULED_NAME, SCHEDULES_NAME))
+                    .whenContainsAny(List.of(SchedulerDotNames.SCHEDULED_NAME, SchedulerDotNames.SCHEDULES_NAME))
                     .whenContainsNone(List.of(micrometerTimed,
                             mpTimed, DotName.createSimple("org.eclipse.microprofile.metrics.annotation.SimplyTimed")))
                     .transform(context -> {
@@ -311,76 +432,164 @@ public class SchedulerProcessor {
                                     scheduledMethod.declaringClass().name(),
                                     scheduledMethod.name());
                         }
-                    }));
+                    })));
         }
-        return null;
     }
 
     private String generateInvoker(ScheduledBusinessMethodItem scheduledMethod, ClassOutput classOutput) {
 
         BeanInfo bean = scheduledMethod.getBean();
         MethodInfo method = scheduledMethod.getMethod();
+        boolean isStatic = Modifier.isStatic(method.flags());
+        ClassInfo implClazz = isStatic ? method.declaringClass() : bean.getImplClazz();
 
         String baseName;
-        if (bean.getImplClazz().enclosingClass() != null) {
-            baseName = DotNames.simpleName(bean.getImplClazz().enclosingClass()) + NESTED_SEPARATOR
-                    + DotNames.simpleName(bean.getImplClazz());
+        if (implClazz.enclosingClass() != null) {
+            baseName = DotNames.simpleName(implClazz.enclosingClass()) + NESTED_SEPARATOR
+                    + DotNames.simpleName(implClazz);
         } else {
-            baseName = DotNames.simpleName(bean.getImplClazz().name());
+            baseName = DotNames.simpleName(implClazz.name());
         }
         StringBuilder sigBuilder = new StringBuilder();
         sigBuilder.append(method.name()).append("_").append(method.returnType().name().toString());
-        for (Type i : method.parameters()) {
+        for (Type i : method.parameterTypes()) {
             sigBuilder.append(i.name().toString());
         }
-        String generatedName = DotNames.internalPackageNameWithTrailingSlash(bean.getImplClazz().name()) + baseName
+        String generatedName = DotNames.internalPackageNameWithTrailingSlash(implClazz.name()) + baseName
                 + INVOKER_SUFFIX + "_" + method.name() + "_"
                 + HashUtil.sha1(sigBuilder.toString());
 
+        boolean isSuspendMethod = KotlinUtil.isSuspendMethod(method);
+
         ClassCreator invokerCreator = ClassCreator.builder().classOutput(classOutput).className(generatedName)
-                .interfaces(ScheduledInvoker.class)
+                .superClass(isSuspendMethod ? SchedulerDotNames.ABSTRACT_COROUTINE_INVOKER.toString()
+                        : DefaultInvoker.class.getName())
                 .build();
 
-        // The descriptor is: void invokeBean(Object execution)
-        MethodCreator invoke = invokerCreator.getMethodCreator("invokeBean", void.class, Object.class)
-                .addException(Exception.class);
-        // InjectableBean<Foo: bean = Arc.container().bean("1");
-        // InstanceHandle<Foo> handle = Arc.container().instance(bean);
-        // handle.get().ping();
-        ResultHandle containerHandle = invoke
-                .invokeStaticMethod(MethodDescriptor.ofMethod(Arc.class, "container", ArcContainer.class));
-        ResultHandle beanHandle = invoke.invokeInterfaceMethod(
-                MethodDescriptor.ofMethod(ArcContainer.class, "bean", InjectableBean.class, String.class),
-                containerHandle, invoke.load(bean.getIdentifier()));
-        ResultHandle instanceHandle = invoke.invokeInterfaceMethod(
-                MethodDescriptor.ofMethod(ArcContainer.class, "instance", InstanceHandle.class, InjectableBean.class),
-                containerHandle, beanHandle);
-        ResultHandle beanInstanceHandle = invoke
-                .invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "get", Object.class), instanceHandle);
-        if (method.parameters().isEmpty()) {
-            invoke.invokeVirtualMethod(
-                    MethodDescriptor.ofMethod(bean.getImplClazz().name().toString(), method.name(), void.class),
-                    beanInstanceHandle);
+        MethodCreator invoke;
+        if (isSuspendMethod) {
+            invoke = invokerCreator
+                    .getMethodCreator("invokeBean", Object.class.getName(),
+                            ScheduledExecution.class.getName(), SchedulerDotNames.CONTINUATION.toString());
         } else {
-            invoke.invokeVirtualMethod(
-                    MethodDescriptor.ofMethod(bean.getImplClazz().name().toString(), method.name(), void.class,
-                            ScheduledExecution.class),
-                    beanInstanceHandle, invoke.getMethodParam(0));
+            // The descriptor is: CompletionStage invoke(ScheduledExecution execution)
+            invoke = invokerCreator.getMethodCreator("invokeBean", CompletionStage.class, ScheduledExecution.class);
         }
-        // handle.destroy() - destroy dependent instance afterwards
-        if (BuiltinScope.DEPENDENT.is(bean.getScope())) {
-            invoke.invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "destroy", void.class),
-                    instanceHandle);
+
+        // Use a try-catch block and return failed future if an exception is thrown
+        TryBlock tryBlock = invoke.tryBlock();
+        CatchBlockCreator catchBlock = tryBlock.addCatch(Throwable.class);
+        if (isSuspendMethod) {
+            catchBlock.throwException(catchBlock.getCaughtException());
+        } else {
+            catchBlock.returnValue(catchBlock.invokeStaticMethod(
+                    MethodDescriptor.ofMethod(CompletableFuture.class, "failedStage", CompletionStage.class, Throwable.class),
+                    catchBlock.getCaughtException()));
         }
-        invoke.returnValue(null);
+
+        String returnTypeStr = DescriptorUtils.typeToString(method.returnType());
+        ResultHandle res;
+        if (isStatic) {
+            if (implClazz.isInterface()) {
+                if (method.parameterTypes().isEmpty()) {
+                    res = tryBlock.invokeStaticInterfaceMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr));
+                } else {
+                    res = tryBlock.invokeStaticInterfaceMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr,
+                                    ScheduledExecution.class),
+                            tryBlock.getMethodParam(0));
+                }
+            } else {
+                if (method.parameterTypes().isEmpty()) {
+                    res = tryBlock.invokeStaticMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr));
+                } else {
+                    res = tryBlock.invokeStaticMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr,
+                                    ScheduledExecution.class),
+                            tryBlock.getMethodParam(0));
+                }
+            }
+        } else {
+            // InjectableBean<Foo> bean = Arc.container().bean("foo1");
+            // InstanceHandle<Foo> handle = Arc.container().instance(bean);
+            // handle.get().ping();
+            ResultHandle containerHandle = tryBlock
+                    .invokeStaticMethod(MethodDescriptor.ofMethod(Arc.class, "container", ArcContainer.class));
+            ResultHandle beanHandle = tryBlock.invokeInterfaceMethod(
+                    MethodDescriptor.ofMethod(ArcContainer.class, "bean", InjectableBean.class, String.class),
+                    containerHandle, tryBlock.load(bean.getIdentifier()));
+            ResultHandle instanceHandle = tryBlock.invokeInterfaceMethod(
+                    MethodDescriptor.ofMethod(ArcContainer.class, "instance", InstanceHandle.class, InjectableBean.class),
+                    containerHandle, beanHandle);
+            ResultHandle beanInstanceHandle = tryBlock
+                    .invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "get", Object.class),
+                            instanceHandle);
+
+            if (isSuspendMethod) {
+                if (method.parametersCount() == 1) {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), Object.class.getName(),
+                                    SchedulerDotNames.CONTINUATION.toString()),
+                            beanInstanceHandle, tryBlock.getMethodParam(1));
+                } else {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), Object.class.getName(),
+                                    ScheduledExecution.class.getName(), SchedulerDotNames.CONTINUATION.toString()),
+                            beanInstanceHandle, tryBlock.getMethodParam(0), tryBlock.getMethodParam(1));
+                }
+            } else {
+                if (method.parameterTypes().isEmpty()) {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr),
+                            beanInstanceHandle);
+                } else {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr,
+                                    ScheduledExecution.class),
+                            beanInstanceHandle, tryBlock.getMethodParam(0));
+                }
+            }
+            // handle.destroy() - destroy dependent instance afterwards
+            if (BuiltinScope.DEPENDENT.is(bean.getScope())) {
+                tryBlock.invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "destroy", void.class),
+                        instanceHandle);
+            }
+        }
+
+        if (res == null) {
+            // If the return type is void then return a new completed stage
+            res = tryBlock.invokeStaticMethod(
+                    MethodDescriptor.ofMethod(CompletableFuture.class, "completedStage", CompletionStage.class, Object.class),
+                    tryBlock.loadNull());
+        } else if (method.returnType().name().equals(SchedulerDotNames.UNI)) {
+            // Subscribe to the returned Uni
+            res = tryBlock.invokeInterfaceMethod(MethodDescriptor.ofMethod(SchedulerDotNames.UNI.toString(),
+                    "subscribeAsCompletionStage", CompletableFuture.class), res);
+        }
+
+        tryBlock.returnValue(res);
+
+        if (scheduledMethod.isNonBlocking()) {
+            MethodCreator isBlocking = invokerCreator.getMethodCreator("isBlocking", boolean.class);
+            isBlocking.returnValue(isBlocking.load(false));
+            isBlocking.close();
+        }
+
+        if (scheduledMethod.isRunOnVirtualThread()) {
+            MethodCreator isRunOnVirtualThread = invokerCreator.getMethodCreator("isRunningOnVirtualThread", boolean.class);
+            isRunOnVirtualThread.returnValue(isRunOnVirtualThread.load(true));
+            isRunOnVirtualThread.close();
+        }
 
         invokerCreator.close();
         return generatedName.replace('/', '.');
     }
 
     private Throwable validateScheduled(CronParser parser, AnnotationInstance schedule,
-            Map<String, AnnotationInstance> encounteredIdentities,
-            BeanDeploymentValidator.ValidationContext validationContext) {
+            Map<String, AnnotationInstance> encounteredIdentities, BeanDeploymentValidator.ValidationContext validationContext,
+            long checkPeriod, IndexView index, DiscoveredImplementationsBuildItem discoveredImplementations) {
         MethodInfo method = schedule.target().asMethod();
         AnnotationValue cronValue = schedule.value("cron");
         AnnotationValue everyValue = schedule.value("every");
@@ -390,12 +599,24 @@ public class SchedulerProcessor {
                 try {
                     parser.parse(cron).validate();
                 } catch (IllegalArgumentException e) {
-                    return new IllegalStateException("Invalid cron() expression on: " + schedule, e);
+                    return new IllegalStateException(errorMessage("Invalid cron() expression", schedule, method), e);
                 }
                 if (everyValue != null && !everyValue.asString().trim().isEmpty()) {
                     LOGGER.warnf(
                             "%s declared on %s#%s() defines both cron() and every() - the cron expression takes precedence",
                             schedule, method.declaringClass().name(), method.name());
+                }
+            }
+            // Validate the time zone ID
+            AnnotationValue timeZoneValue = schedule.value("timeZone");
+            if (timeZoneValue != null) {
+                String timeZone = timeZoneValue.asString();
+                if (!SchedulerUtils.isConfigValue(timeZone) && !timeZone.equals(Scheduled.DEFAULT_TIMEZONE)) {
+                    try {
+                        ZoneId.of(timeZone);
+                    } catch (Exception e) {
+                        return new IllegalStateException(errorMessage("Invalid timeZone()", schedule, method), e);
+                    }
                 }
             }
 
@@ -407,9 +628,14 @@ public class SchedulerProcessor {
                         every = "PT" + every;
                     }
                     try {
-                        Duration.parse(every);
+                        Duration period = Duration.parse(every);
+                        if (period.toMillis() < checkPeriod) {
+                            LOGGER.warnf(
+                                    "An every() value less than %s ms is not supported - the scheduled job will be executed with a delay: %s declared on %s#%s()",
+                                    checkPeriod, schedule, method.declaringClass().name(), method.name());
+                        }
                     } catch (Exception e) {
-                        return new IllegalStateException("Invalid every() expression on: " + schedule, e);
+                        return new IllegalStateException(errorMessage("Invalid every() expression", schedule, method), e);
                     }
                 }
             } else {
@@ -428,7 +654,7 @@ public class SchedulerProcessor {
                     try {
                         Duration.parse(delayed);
                     } catch (Exception e) {
-                        return new IllegalStateException("Invalid delayed() expression on: " + schedule, e);
+                        return new IllegalStateException(errorMessage("Invalid delayed() expression", schedule, method), e);
                     }
                 }
 
@@ -457,20 +683,63 @@ public class SchedulerProcessor {
         AnnotationValue skipExecutionIfValue = schedule.value("skipExecutionIf");
         if (skipExecutionIfValue != null) {
             DotName skipPredicate = skipExecutionIfValue.asClass().name();
-            if (!SKIP_NEVER_NAME.equals(skipPredicate)
-                    && validationContext.beans().withBeanType(skipPredicate).collect().size() != 1) {
-                String message = String.format("There must be exactly one bean that matches the skip predicate: \"%s\" on: %s",
-                        skipPredicate, schedule);
+            if (SchedulerDotNames.SKIP_NEVER_NAME.equals(skipPredicate)) {
+                return null;
+            }
+            List<BeanInfo> beans = validationContext.beans().withBeanType(skipPredicate).collect();
+            if (beans.size() > 1) {
+                String message = String.format(
+                        "There must be exactly one bean that matches the skip predicate: \"%s\" on: %s; beans: %s",
+                        skipPredicate, schedule, beans);
                 return new IllegalStateException(message);
+            } else if (beans.isEmpty()) {
+                ClassInfo skipPredicateClass = index.getClassByName(skipPredicate);
+                if (skipPredicateClass != null) {
+                    MethodInfo noArgsConstructor = skipPredicateClass.method("<init>");
+                    if (noArgsConstructor == null || !Modifier.isPublic(noArgsConstructor.flags())) {
+                        return new IllegalStateException(
+                                "The skip predicate class must declare a public no-args constructor: " + skipPredicateClass);
+                    }
+                }
             }
         }
 
+        AnnotationValue executeWithValue = schedule.value("executeWith");
+        if (executeWithValue != null) {
+            String implementation = executeWithValue.asString();
+            if (!Scheduled.AUTO.equals(implementation)) {
+                if (!discoveredImplementations.getImplementations().contains(implementation)) {
+                    return new IllegalStateException(
+                            "The required scheduler implementation was not discovered in application: " + implementation);
+                } else if (!discoveredImplementations.isCompositeSchedulerUsed()
+                        && !discoveredImplementations.isAutoImplementation(implementation)) {
+                    return new IllegalStateException(
+                            "The required scheduler implementation is not available because the composite scheduler is not used: "
+                                    + implementation);
+                }
+            }
+        }
         return null;
+    }
+
+    private static String errorMessage(String base, AnnotationInstance scheduled, MethodInfo method) {
+        return String.format("%s: %s declared on %s#%s()", base, scheduled, method.declaringClass().name(), method.name());
     }
 
     @BuildStep
     UnremovableBeanBuildItem unremoveableSkipPredicates() {
-        return new UnremovableBeanBuildItem(new UnremovableBeanBuildItem.BeanTypeExclusion(SKIP_PREDICATE));
+        return new UnremovableBeanBuildItem(new UnremovableBeanBuildItem.BeanTypeExclusion(SchedulerDotNames.SKIP_PREDICATE));
+    }
+
+    @BuildStep
+    void produceCoroutineScope(BuildProducer<AdditionalBeanBuildItem> buildItemBuildProducer) {
+        if (!QuarkusClassLoader.isClassPresentAtRuntime("kotlinx.coroutines.CoroutineScope")) {
+            return;
+        }
+
+        buildItemBuildProducer.produce(AdditionalBeanBuildItem.builder()
+                .addBeanClass("io.quarkus.scheduler.kotlin.runtime.ApplicationCoroutineScope")
+                .setUnremovable().build());
     }
 
 }
