@@ -2,18 +2,19 @@ package io.quarkus.bootstrap.resolver;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import io.quarkus.maven.dependency.ArtifactDependency;
-import io.quarkus.maven.dependency.Dependency;
-import io.quarkus.maven.dependency.DependencyFlags;
-import io.quarkus.maven.dependency.ResolvedArtifactDependency;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import org.eclipse.aether.util.artifact.JavaScopes;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import io.quarkus.maven.dependency.ArtifactDependency;
+import io.quarkus.maven.dependency.Dependency;
+import io.quarkus.maven.dependency.DependencyFlags;
 
 /**
  *
@@ -22,8 +23,8 @@ import org.junit.jupiter.api.Test;
 public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
 
     protected TsArtifact root;
-    protected List<Dependency> expectedResult = Collections.emptyList();
-    protected List<Dependency> deploymentDeps = Collections.emptyList();
+    protected List<Dependency> expectedResult = List.of();
+    protected List<Dependency> deploymentDeps = List.of();
 
     @Override
     @BeforeEach
@@ -48,8 +49,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
         }
         // stripping the resolved paths
         final List<Dependency> resolvedDeps = getTestResolver().resolveModel(root.toArtifact()).getDependencies()
-                .stream()
-                .map(d -> new ArtifactDependency(d)).collect(Collectors.toList());
+                .stream().map(ArtifactDependency::new).collect(Collectors.toList());
         assertEquals(new HashSet<>(expected), new HashSet<>(resolvedDeps));
     }
 
@@ -58,12 +58,12 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     }
 
     protected Path getInstallDir(TsArtifact artifact) {
-        return repoHome.resolve(artifact.getGroupId().replace('.', '/')).resolve(artifact.getArtifactId())
+        return getInstallDir().resolve(artifact.getGroupId().replace('.', '/')).resolve(artifact.getArtifactId())
                 .resolve(artifact.getVersion());
     }
 
     protected TsArtifact install(TsArtifact dep, boolean collected) {
-        return install(dep, collected ? "compile" : null);
+        return install(dep, collected ? JavaScopes.COMPILE : null);
     }
 
     protected TsArtifact install(TsArtifact dep, String collectedInScope) {
@@ -75,7 +75,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     }
 
     protected TsArtifact install(TsArtifact dep, Path p, boolean collected) {
-        return install(dep, p, collected ? "compile" : null, false);
+        return install(dep, p, collected ? JavaScopes.COMPILE : null, false);
     }
 
     protected TsArtifact install(TsArtifact dep, Path p, String collectedInScope, boolean optional) {
@@ -94,7 +94,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     protected void install(TsQuarkusExt ext, boolean collected) {
         ext.install(repo);
         if (collected) {
-            addCollectedDep(ext.getRuntime(), "compile", false, DependencyFlags.RUNTIME_EXTENSION_ARTIFACT);
+            addCollectedDep(ext.getRuntime(), JavaScopes.COMPILE, false, DependencyFlags.RUNTIME_EXTENSION_ARTIFACT);
             addCollectedDeploymentDep(ext.getDeployment());
         }
     }
@@ -102,8 +102,9 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     protected void installAsDep(TsQuarkusExt ext) {
         ext.install(repo);
         root.addDependency(ext);
-        addCollectedDep(ext.getRuntime(), "compile", false,
-                DependencyFlags.DIRECT | DependencyFlags.RUNTIME_EXTENSION_ARTIFACT);
+        addCollectedDep(ext.getRuntime(), JavaScopes.COMPILE, false,
+                DependencyFlags.DIRECT | DependencyFlags.RUNTIME_EXTENSION_ARTIFACT
+                        | DependencyFlags.TOP_LEVEL_RUNTIME_EXTENSION_ARTIFACT);
         addCollectedDeploymentDep(ext.getDeployment());
     }
 
@@ -142,11 +143,11 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
         for (int f : flags) {
             allFlags |= f;
         }
-        addCollectedDep(artifact, dep.scope == null ? "compile" : dep.scope, dep.optional, allFlags);
+        addCollectedDep(artifact, dep.scope == null ? JavaScopes.COMPILE : dep.scope, dep.optional, allFlags);
     }
 
     protected void addCollectedDep(final TsArtifact artifact, int... flags) {
-        addCollectedDep(artifact, "compile", false, flags);
+        addCollectedDep(artifact, JavaScopes.COMPILE, false, flags);
     }
 
     protected void addCollectedDep(final TsArtifact artifact, final String scope, boolean optional, int... flags) {
@@ -160,7 +161,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
         if (expectedResult.isEmpty()) {
             expectedResult = new ArrayList<>();
         }
-        expectedResult.add(new ArtifactDependency(new ResolvedArtifactDependency(artifact.toArtifact()), scope, allFlags));
+        expectedResult.add(new ArtifactDependency(artifact.toArtifact(), scope, allFlags));
     }
 
     protected void addCollectedDeploymentDep(TsArtifact ext) {
@@ -168,7 +169,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
             deploymentDeps = new ArrayList<>();
         }
         deploymentDeps
-                .add(new ArtifactDependency(new ResolvedArtifactDependency(ext.toArtifact()), "compile",
+                .add(new ArtifactDependency(ext.toArtifact(), JavaScopes.COMPILE,
                         DependencyFlags.DEPLOYMENT_CP));
     }
 
