@@ -3,19 +3,13 @@
  */
 package io.quarkus.bootstrap.workspace.test;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import io.quarkus.bootstrap.model.AppArtifactKey;
-import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
-import io.quarkus.bootstrap.resolver.maven.workspace.LocalProject;
-import io.quarkus.bootstrap.resolver.maven.workspace.LocalWorkspace;
-import io.quarkus.bootstrap.util.IoUtils;
-import io.quarkus.bootstrap.workspace.ProcessedSources;
-import io.quarkus.bootstrap.workspace.WorkspaceModule;
 import java.io.File;
 import java.net.URL;
 import java.nio.file.Files;
@@ -24,14 +18,23 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Properties;
+
 import org.apache.maven.model.Dependency;
 import org.apache.maven.model.Parent;
-import org.assertj.core.api.Assertions;
 import org.eclipse.aether.artifact.DefaultArtifact;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+
+import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
+import io.quarkus.bootstrap.resolver.maven.workspace.LocalProject;
+import io.quarkus.bootstrap.resolver.maven.workspace.LocalWorkspace;
+import io.quarkus.bootstrap.util.IoUtils;
+import io.quarkus.bootstrap.workspace.SourceDir;
+import io.quarkus.bootstrap.workspace.WorkspaceModule;
+import io.quarkus.maven.dependency.ArtifactKey;
+import io.quarkus.paths.PathTree;
 
 public class LocalWorkspaceDiscoveryTest {
 
@@ -121,6 +124,69 @@ public class LocalWorkspaceDiscoveryTest {
         IoUtils.recursiveDelete(workDir);
     }
 
+    /**
+     * This test is making sure the current module isn't overridden by another module
+     * from the workspace that happens to have the same group and artifact IDs
+     *
+     * @throws Exception
+     */
+    @Test
+    public void workspaceWithDuplicateModuleGroupIdAndArtifactId() throws Exception {
+        final URL moduleUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("duplicate-ga/test/case");
+        assertNotNull(moduleUrl);
+        final Path moduleDir = Path.of(moduleUrl.toURI());
+        assertNotNull(moduleUrl);
+
+        final LocalWorkspace ws = LocalProject.loadWorkspace(moduleDir).getWorkspace();
+
+        LocalProject project = ws.getProject("org.acme", "acme-lib");
+        assertNotNull(project);
+        assertThat(project.getDir()).isEqualTo(moduleDir);
+
+        assertNotNull(ws.getProject("org.acme", "acme-parent"));
+        assertEquals(2, ws.getProjects().size());
+    }
+
+    @Test
+    public void moduleWithDifferentParentPomRawModel() throws Exception {
+        final URL moduleUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("workspace-module-with-different-parent");
+        assertNotNull(moduleUrl);
+        final Path moduleDir = Path.of(moduleUrl.toURI());
+        assertNotNull(moduleUrl);
+
+        final LocalWorkspace ws = LocalProject.loadWorkspace(moduleDir).getWorkspace();
+
+        assertNotNull(ws.getProject("org.acme", "acme-runtimes"));
+        assertNotNull(ws.getProject("org.acme", "acme-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-build-no-bom-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-build-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-dependencies-bom"));
+        assertEquals(5, ws.getProjects().size());
+    }
+
+    @Test
+    public void moduleWithDifferentParentPomEffectiveModel() throws Exception {
+        final URL moduleUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("workspace-module-with-different-parent");
+        assertNotNull(moduleUrl);
+        final Path moduleDir = Path.of(moduleUrl.toURI());
+        assertNotNull(moduleUrl);
+
+        final LocalWorkspace ws = new BootstrapMavenContext(BootstrapMavenContext.config()
+                .setEffectiveModelBuilder(true)
+                .setCurrentProject(moduleDir.toString()))
+                .getWorkspace();
+
+        assertNotNull(ws.getProject("org.acme", "acme-runtimes"));
+        assertNotNull(ws.getProject("org.acme", "acme-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-build-no-bom-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-build-parent"));
+        assertNotNull(ws.getProject("org.acme", "acme-dependencies-bom"));
+        assertEquals(5, ws.getProjects().size());
+    }
+
     @Test
     public void nonParentAggregator() throws Exception {
         final URL moduleUrl = Thread.currentThread().getContextClassLoader()
@@ -141,7 +207,7 @@ public class LocalWorkspaceDiscoveryTest {
             module1 = new BootstrapMavenContext(BootstrapMavenContext.config()
                     .setEffectiveModelBuilder(true)
                     .setCurrentProject(moduleDir.toString()))
-                            .getCurrentProject();
+                    .getCurrentProject();
         } finally {
             if (originalBaseDir == null) {
                 System.clearProperty(topLevelBaseDirProp);
@@ -162,16 +228,16 @@ public class LocalWorkspaceDiscoveryTest {
     }
 
     @Test
-    public void loadModulesInProfiles() throws Exception {
+    public void loadEffectiveModelBuilderModulesInProfiles() throws Exception {
         final URL moduleUrl = Thread.currentThread().getContextClassLoader()
                 .getResource("modules-in-profiles/integration-tests/rest-tests");
         assertNotNull(moduleUrl);
-        final Path moduleDir = Paths.get(moduleUrl.toURI());
+        final Path moduleDir = Path.of(moduleUrl.toURI());
 
         final LocalProject module1 = new BootstrapMavenContext(BootstrapMavenContext.config()
                 .setEffectiveModelBuilder(true)
                 .setCurrentProject(moduleDir.toString()))
-                        .getCurrentProject();
+                .getCurrentProject();
         final LocalWorkspace ws = module1.getWorkspace();
 
         assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-parent"));
@@ -180,7 +246,30 @@ public class LocalWorkspaceDiscoveryTest {
         assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-rest"));
         assertNotNull(ws.getProject("org.acme", "acme-integration-tests"));
         assertNotNull(ws.getProject("org.acme", "acme-rest-tests"));
-        assertEquals(6, ws.getProjects().size());
+        assertNotNull(ws.getProject("org.acme", "other"));
+        assertEquals(7, ws.getProjects().size());
+    }
+
+    @Test
+    public void loadModulesInProfiles() throws Exception {
+        final URL moduleUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("modules-in-profiles/integration-tests/rest-tests");
+        assertNotNull(moduleUrl);
+        final Path moduleDir = Path.of(moduleUrl.toURI());
+
+        final LocalProject module1 = new BootstrapMavenContext(BootstrapMavenContext.config()
+                .setCurrentProject(moduleDir.toString()))
+                .getCurrentProject();
+        final LocalWorkspace ws = module1.getWorkspace();
+
+        assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-parent"));
+        assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-html"));
+        assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-main"));
+        assertNotNull(ws.getProject("org.acme", "quarkus-quickstart-multimodule-rest"));
+        assertNotNull(ws.getProject("org.acme", "acme-integration-tests"));
+        assertNotNull(ws.getProject("org.acme", "acme-rest-tests"));
+        assertNotNull(ws.getProject("org.acme", "other"));
+        assertEquals(7, ws.getProjects().size());
     }
 
     @Test
@@ -192,7 +281,7 @@ public class LocalWorkspaceDiscoveryTest {
 
         final LocalProject module1 = new BootstrapMavenContext(BootstrapMavenContext.config()
                 .setCurrentProject(moduleDir.toString()))
-                        .getCurrentProject();
+                .getCurrentProject();
         final LocalWorkspace ws = module1.getWorkspace();
 
         final LocalProject wsModule1 = ws.getProject("org.acme", "module1");
@@ -215,13 +304,31 @@ public class LocalWorkspaceDiscoveryTest {
         final LocalWorkspace ws = new BootstrapMavenContext(BootstrapMavenContext.config()
                 .setRootProjectDir(rootProjectDir)
                 .setCurrentProject(nestedProjectDir.toString()))
-                        .getWorkspace();
+                .getWorkspace();
 
         assertNotNull(ws.getProject("org.acme", "nested-project-module1"));
         assertNotNull(ws.getProject("org.acme", "nested-project-parent"));
         assertNotNull(ws.getProject("org.acme", "root-module1"));
         assertNotNull(ws.getProject("org.acme", "root"));
         assertEquals(4, ws.getProjects().size());
+    }
+
+    @Test
+    public void loadWorkspaceWithMissingModule() throws Exception {
+        final URL projectUrl = Thread.currentThread().getContextClassLoader().getResource("workspace-missing-module/root");
+        assertNotNull(projectUrl);
+        final Path rootProjectDir = Paths.get(projectUrl.toURI());
+        assertTrue(Files.exists(rootProjectDir));
+        final Path nestedProjectDir = rootProjectDir.resolve("module1");
+        assertTrue(Files.exists(nestedProjectDir));
+
+        final LocalWorkspace ws = new BootstrapMavenContext(BootstrapMavenContext.config()
+                .setCurrentProject(nestedProjectDir.toString()))
+                .getWorkspace();
+
+        assertNotNull(ws.getProject("org.acme", "module1"));
+        assertNotNull(ws.getProject("org.acme", "root"));
+        assertEquals(2, ws.getProjects().size());
     }
 
     @Test
@@ -235,7 +342,7 @@ public class LocalWorkspaceDiscoveryTest {
 
         final LocalWorkspace ws = new BootstrapMavenContext(BootstrapMavenContext.config()
                 .setCurrentProject(nestedProjectDir.toString()))
-                        .getWorkspace();
+                .getWorkspace();
 
         assertNotNull(ws.getProject("org.acme", "module3"));
         assertNotNull(ws.getProject("org.acme", "module2"));
@@ -258,6 +365,26 @@ public class LocalWorkspaceDiscoveryTest {
     }
 
     @Test
+    public void loadWorkspaceFromRootDirWithParentInChildDirEffectiveModel() throws Exception {
+        final URL projectUrl = Thread.currentThread().getContextClassLoader().getResource("workspace-parent-is-not-root-dir");
+        assertNotNull(projectUrl);
+        final Path projectDir = Paths.get(projectUrl.toURI());
+        assertTrue(Files.exists(projectDir));
+
+        final LocalProject module1 = new BootstrapMavenContext(BootstrapMavenContext.config()
+                .setEffectiveModelBuilder(true)
+                .setCurrentProject(projectDir.toString()))
+                .getCurrentProject();
+        final LocalWorkspace ws = module1.getWorkspace();
+        final LocalProject project = ws.getProject("org.acme", "acme");
+        assertNotNull(project);
+
+        assertEquals("acme", project.getArtifactId());
+        assertWorkspaceWithParentInChildDir(project);
+        assertParents(project, "acme-parent", "acme-dependencies");
+    }
+
+    @Test
     public void loadWorkspaceFromModuleDirWithParentInChildDir() throws Exception {
         final URL projectUrl = Thread.currentThread().getContextClassLoader()
                 .getResource("workspace-parent-is-not-root-dir/acme-application");
@@ -272,15 +399,32 @@ public class LocalWorkspaceDiscoveryTest {
         assertParents(project, "acme-parent", "acme-dependencies");
     }
 
+    @Test
+    public void loadWorkspaceFromModuleDirWithParentInSiblingDir() throws Exception {
+        final URL projectUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("workspace-parent-is-not-root-dir/acme-backend/acme-backend-lib");
+        assertNotNull(projectUrl);
+        final Path projectDir = Paths.get(projectUrl.toURI());
+        assertTrue(Files.exists(projectDir));
+        final LocalProject project = LocalProject.loadWorkspace(projectDir);
+
+        assertEquals("acme-backend-lib", project.getArtifactId());
+        assertWorkspaceWithParentInChildDir(project);
+
+        assertParents(project, "acme-backend", "acme-backend-parent", "acme-parent", "acme-dependencies");
+    }
+
     private void assertWorkspaceWithParentInChildDir(final LocalProject project) {
         final LocalWorkspace workspace = project.getWorkspace();
         assertNotNull(workspace.getProject("org.acme", "acme"));
         assertNotNull(workspace.getProject("org.acme", "acme-parent"));
         assertNotNull(workspace.getProject("org.acme", "acme-dependencies"));
         assertNotNull(workspace.getProject("org.acme", "acme-backend"));
+        assertNotNull(workspace.getProject("org.acme", "acme-backend-parent"));
+        assertNotNull(workspace.getProject("org.acme", "acme-backend-lib"));
         assertNotNull(workspace.getProject("org.acme", "acme-backend-rest-api"));
         assertNotNull(workspace.getProject("org.acme", "acme-application"));
-        assertEquals(6, workspace.getProjects().size());
+        assertEquals(8, workspace.getProjects().size());
     }
 
     @Test
@@ -354,9 +498,9 @@ public class LocalWorkspaceDiscoveryTest {
         assertEquals(MvnProjectBuilder.DEFAULT_GROUP_ID, project.getGroupId());
         assertEquals("independent", project.getArtifactId());
         assertEquals(MvnProjectBuilder.DEFAULT_VERSION, project.getVersion());
-        final Map<AppArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
+        final Map<ArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
         assertEquals(6, projects.size());
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "independent")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "independent")));
 
         assertNull(project.getLocalParent());
     }
@@ -382,9 +526,9 @@ public class LocalWorkspaceDiscoveryTest {
         assertEquals("root-no-parent-module", project.getArtifactId());
         assertEquals(MvnProjectBuilder.DEFAULT_VERSION, project.getVersion());
         assertNotNull(project.getWorkspace());
-        final Map<AppArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
+        final Map<ArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
         assertEquals(5, projects.size());
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
 
         assertParents(project);
     }
@@ -433,20 +577,21 @@ public class LocalWorkspaceDiscoveryTest {
     @Test
     public void loadNonModuleChildProject() throws Exception {
         final LocalProject project = LocalProject
-                .loadWorkspace(workDir.resolve("root").resolve("non-module-child").resolve("target").resolve("classes"));
+                .loadWorkspace(IoUtils
+                        .mkdirs(workDir.resolve("root").resolve("non-module-child").resolve("target").resolve("classes")));
         assertNotNull(project);
         assertNotNull(project.getWorkspace());
         assertEquals("non-module-child", project.getArtifactId());
-        final Map<AppArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-with-parent")));
+        final Map<ArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-with-parent")));
         assertTrue(
-                projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-not-direct-child")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "non-module-child")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "another-child")));
+                projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-not-direct-child")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "non-module-child")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "another-child")));
         assertTrue(projects
-                .containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "empty-parent-relative-path-module")));
+                .containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "empty-parent-relative-path-module")));
         assertEquals(7, projects.size());
 
         assertParents(project, "root");
@@ -546,6 +691,26 @@ public class LocalWorkspaceDiscoveryTest {
         assertEquals(parentDir.resolve("custom-target").resolve("test-classes"), parent.getTestClassesDir());
     }
 
+    @Test
+    public void warnOnFailingWorkspaceModules() throws Exception {
+        final URL moduleUrl = Thread.currentThread().getContextClassLoader()
+                .getResource("invalid-module");
+        assertNotNull(moduleUrl);
+        final Path moduleDir = Path.of(moduleUrl.toURI());
+        assertNotNull(moduleUrl);
+
+        final LocalWorkspace ws = new BootstrapMavenContext(BootstrapMavenContext.config()
+                .setOffline(true)
+                .setEffectiveModelBuilder(true)
+                .setWarnOnFailedWorkspaceModules(true)
+                .setCurrentProject(moduleDir.toString()))
+                .getWorkspace();
+
+        assertNotNull(ws.getProject("io.playground", "asm"));
+        assertNotNull(ws.getProject("io.playground", "module"));
+        assertEquals(2, ws.getProjects().size());
+    }
+
     private void testMavenCiFriendlyVersion(String placeholder, String testResourceDirName, String expectedResolvedVersion,
             boolean resolvesFromWorkspace) throws Exception {
         final URL module1Url = Thread.currentThread().getContextClassLoader()
@@ -575,26 +740,27 @@ public class LocalWorkspaceDiscoveryTest {
         assertEquals(new File(rootPomUrl.toURI()), root);
 
         final WorkspaceModule wsModule = module1.toWorkspaceModule();
-        Assertions.assertThat(wsModule.getModuleDir()).isEqualTo(module1Dir.toFile());
-        Assertions.assertThat(wsModule.getBuildDir()).isEqualTo(module1Dir.resolve("target").toFile());
-        Collection<ProcessedSources> c = wsModule.getMainResources();
-        Assertions.assertThat(c).hasSize(1);
-        final ProcessedSources src = c.iterator().next();
-        Assertions.assertThat(src.getSourceDir()).isEqualTo(module1Dir.resolve("build").toFile());
-        Assertions.assertThat(src.getDestinationDir())
-                .isEqualTo(module1Dir.resolve("target/classes/META-INF/resources").toFile());
+        assertThat(wsModule.getModuleDir()).isEqualTo(module1Dir.toFile());
+        assertThat(wsModule.getBuildDir()).isEqualTo(module1Dir.resolve("target").toFile());
+        SourceDir src = wsModule.getMainSources().getResourceDirs().iterator().next();
+        PathTree sourceTree = src.getSourceTree();
+        assertThat(sourceTree).isNotNull();
+        Collection<Path> roots = sourceTree.getRoots();
+        assertThat(roots).hasSize(1);
+        assertThat(roots.iterator().next()).isEqualTo(module1Dir.resolve("build"));
+        assertThat(src.getOutputDir()).isEqualTo(module1Dir.resolve("target/classes/META-INF/resources"));
     }
 
     private void assertCompleteWorkspace(final LocalProject project) {
-        final Map<AppArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
+        final Map<ArtifactKey, LocalProject> projects = project.getWorkspace().getProjects();
         assertEquals(5, projects.size());
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-with-parent")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-no-parent-module")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-with-parent")));
         assertTrue(
-                projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-not-direct-child")));
+                projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root-module-not-direct-child")));
         assertTrue(projects
-                .containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "empty-parent-relative-path-module")));
-        assertTrue(projects.containsKey(new AppArtifactKey(MvnProjectBuilder.DEFAULT_GROUP_ID, "root")));
+                .containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "empty-parent-relative-path-module")));
+        assertTrue(projects.containsKey(ArtifactKey.ga(MvnProjectBuilder.DEFAULT_GROUP_ID, "root")));
     }
 
     private static void assertParents(LocalProject project, String... parentArtifactId) {
