@@ -7,16 +7,17 @@ import static org.hamcrest.Matchers.is;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
+import io.dekorate.prometheus.model.Endpoint;
+import io.dekorate.prometheus.model.ServiceMonitor;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.apps.Deployment;
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.LogFile;
 import io.quarkus.test.ProdBuildResults;
 import io.quarkus.test.ProdModeTestResults;
@@ -31,9 +32,8 @@ public class KubernetesWithMicrometerTest {
             .setApplicationVersion("0.1-SNAPSHOT")
             .setRun(true)
             .setLogFileName("k8s.log")
-            .setForcedDependencies(
-                    Collections.singletonList(
-                            new AppArtifact("io.quarkus", "quarkus-micrometer-registry-prometheus", Version.getVersion())));
+            .setForcedDependencies(List.of(
+                    Dependency.of("io.quarkus", "quarkus-micrometer-registry-prometheus", Version.getVersion())));
 
     @ProdBuildResults
     private ProdModeTestResults prodModeTestResults;
@@ -61,21 +61,40 @@ public class KubernetesWithMicrometerTest {
                 .isDirectoryContaining(p -> p.getFileName().endsWith("kubernetes.yml"));
         List<HasMetadata> kubernetesList = DeserializationUtil
                 .deserializeAsList(kubernetesDir.resolve("kubernetes.yml"));
-        assertThat(kubernetesList.get(0)).isInstanceOfSatisfying(Deployment.class, d -> {
-            assertThat(d.getMetadata()).satisfies(m -> {
-                assertThat(m.getName()).isEqualTo("metrics");
-            });
 
-            assertThat(d.getSpec()).satisfies(deploymentSpec -> {
-                assertThat(deploymentSpec.getTemplate()).satisfies(t -> {
-                    assertThat(t.getMetadata()).satisfies(meta -> {
-                        assertThat(meta.getAnnotations()).contains(entry("prometheus.io/scrape", "true"),
-                                entry("prometheus.io/path", "/q/metrics"), entry("prometheus.io/port", "8080"),
-                                entry("prometheus.io/scheme", "http"));
+        assertThat(kubernetesList).filteredOn(i -> i.getKind().equals("ServiceMonitor")).singleElement()
+                .isInstanceOfSatisfying(ServiceMonitor.class, s -> {
+                    assertThat(s.getMetadata()).satisfies(m -> {
+                        assertThat(m.getName()).isEqualTo("metrics");
+                    });
+
+                    assertThat(s.getSpec()).satisfies(spec -> {
+                        assertThat(spec.getEndpoints()).hasSize(1);
+                        assertThat(spec.getEndpoints().get(0)).isInstanceOfSatisfying(Endpoint.class, e -> {
+                            assertThat(e.getScheme()).isEqualTo("http");
+                            assertThat(e.getTargetPort().getStrVal()).isNull();
+                            assertThat(e.getTargetPort().getIntVal()).isEqualTo(8080);
+                            assertThat(e.getPath()).isEqualTo("/q/metrics");
+                        });
                     });
                 });
-            });
-        });
+
+        assertThat(kubernetesList).filteredOn(i -> i instanceof Deployment).singleElement()
+                .isInstanceOfSatisfying(Deployment.class, d -> {
+                    assertThat(d.getMetadata()).satisfies(m -> {
+                        assertThat(m.getName()).isEqualTo("metrics");
+                    });
+
+                    assertThat(d.getSpec()).satisfies(deploymentSpec -> {
+                        assertThat(deploymentSpec.getTemplate()).satisfies(t -> {
+                            assertThat(t.getMetadata()).satisfies(meta -> {
+                                assertThat(meta.getAnnotations()).contains(entry("prometheus.io/scrape", "true"),
+                                        entry("prometheus.io/path", "/q/metrics"), entry("prometheus.io/port", "8080"),
+                                        entry("prometheus.io/scheme", "http"));
+                            });
+                        });
+                    });
+                });
     }
 
 }
