@@ -3,8 +3,6 @@ package io.quarkus.maven.it;
 import static io.quarkus.maven.it.ApplicationNameAndVersionTestUtil.assertApplicationPropertiesSetCorrectly;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.hamcrest.CoreMatchers.equalTo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -12,7 +10,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.IOException;
@@ -20,14 +17,15 @@ import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
@@ -36,16 +34,21 @@ import java.util.zip.ZipOutputStream;
 import org.apache.commons.io.FileUtils;
 import org.apache.maven.shared.invoker.MavenInvocationException;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.OS;
 
 import io.quarkus.bootstrap.model.CapabilityErrors;
+import io.quarkus.devui.tests.DevUIJsonRPCTest;
 import io.quarkus.maven.it.continuoustesting.ContinuousTestingMavenTestUtils;
 import io.quarkus.maven.it.verifier.MavenProcessInvocationResult;
 import io.quarkus.maven.it.verifier.RunningInvoker;
-import io.quarkus.test.devmode.util.DevModeTestUtils;
-import io.restassured.RestAssured;
+import io.quarkus.test.devmode.util.DevModeClient;
 
 /**
+ * Tests tests in the quarkus:dev mojo.
+ *
  * @author <a href="http://escoffier.me">Clement Escoffier</a>
  *         <p>
  *         NOTE to anyone diagnosing failures in this test, to run a single method use:
@@ -53,28 +56,68 @@ import io.restassured.RestAssured;
  *         mvn install -Dit.test=DevMojoIT#methodName
  */
 @DisableForNative
-public class DevMojoIT extends RunAndCheckMojoTestBase {
+public class DevMojoIT extends LaunchMojoTestBase {
+
+    protected DevModeClient devModeClient = new DevModeClient(getPort());
+
+    @Override
+    protected ContinuousTestingMavenTestUtils getTestingTestUtils() {
+        return new ContinuousTestingMavenTestUtils();
+    }
+
+    @Test
+    public void testFlattenedPomInTargetDir() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/pom-in-target-dir");
+        run(true);
+        assertThat(devModeClient.getHttpResponse("/hello")).isEqualTo("Hello from Quarkus REST");
+    }
+
+    @Test
+    public void testConfigFactoryInAppModuleBannedInCodeGen() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/codegen-config-factory", "projects/codegen-config-factory-banned");
+        run(true);
+        assertThat(devModeClient.getHttpResponse("/codegen-config/acme-config-factory")).isEqualTo("n/a");
+        assertThat(devModeClient.getHttpResponse("/codegen-config/acme-config-provider")).isEqualTo("n/a");
+        assertThat(devModeClient.getHttpResponse("/runtime-config/acme-config-factory"))
+                .isEqualTo("org.acme.AppConfigSourceFactory");
+        assertThat(devModeClient.getHttpResponse("/runtime-config/acme-config-provider"))
+                .isEqualTo("org.acme.AppConfigSourceProvider");
+    }
+
+    @Test
+    public void testConfigFactoryInAppModuleFilteredInCodeGen() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/codegen-config-factory", "projects/codegen-config-factory-filtered");
+        run(true, "-Dconfig-factory.enabled");
+        assertThat(devModeClient.getHttpResponse("/codegen-config/acme-config-factory"))
+                .isEqualTo("org.acme.config.AcmeConfigSourceFactory");
+        assertThat(devModeClient.getHttpResponse("/codegen-config/acme-config-provider"))
+                .isEqualTo("org.acme.config.AcmeConfigSourceProvider");
+        assertThat(devModeClient.getHttpResponse("/runtime-config/acme-config-factory"))
+                .isEqualTo("org.acme.AppConfigSourceFactory");
+        assertThat(devModeClient.getHttpResponse("/runtime-config/acme-config-provider"))
+                .isEqualTo("org.acme.AppConfigSourceProvider");
+    }
 
     @Test
     public void testSystemPropertiesConfig() throws MavenInvocationException, IOException {
         testDir = initProject("projects/dev-mode-sys-props-config");
         run(true);
-        assertThat(DevModeTestUtils.getHttpResponse("/hello")).isEqualTo("hello, out there");
+        assertThat(devModeClient.getHttpResponse("/hello")).isEqualTo("hello, out there");
     }
 
     @Test
     public void testEnvironmentVariablesConfig() throws MavenInvocationException, IOException {
         testDir = initProject("projects/dev-mode-env-vars-config");
         run(true);
-        assertThat(DevModeTestUtils.getHttpResponse("/hello")).isEqualTo("hello, WORLD");
+        assertThat(devModeClient.getHttpResponse("/hello")).isEqualTo("hello, WORLD");
     }
 
     @Test
     void testClassLoaderLinkageError()
-            throws MavenInvocationException, IOException, InterruptedException {
+            throws MavenInvocationException, IOException {
         testDir = initProject("projects/classloader-linkage-error", "projects/classloader-linkage-error-dev");
         run(true);
-        assertThat(DevModeTestUtils.getHttpResponse("/hello")).isEqualTo("hello");
+        assertThat(devModeClient.getHttpResponse("/hello")).isEqualTo("hello");
     }
 
     @Test
@@ -87,27 +130,33 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         run(true);
 
         final CapabilityErrors error = new CapabilityErrors();
-        error.addConflict("sunshine", "org.acme:alt-quarkus-ext::jar:1.0-SNAPSHOT");
-        error.addConflict("sunshine", "org.acme:acme-quarkus-ext::jar:1.0-SNAPSHOT");
-        String response = DevModeTestUtils.getHttpResponse("/hello", true);
+        error.addConflict("sunshine", "org.acme:alt-quarkus-ext:1.0-SNAPSHOT");
+        error.addConflict("sunshine", "org.acme:acme-quarkus-ext:1.0-SNAPSHOT");
+        String response = devModeClient.getHttpResponse("/hello", true);
+        assertThat(response).contains(error.report());
+
+        filter(runnerPom, Map.of("<artifactId>acme-quarkus-ext</artifactId>", "<artifactId>alt-quarkus-ext</artifactId>"));
+        assertThat(devModeClient.getHttpResponse("/hello", false)).isEqualTo("hello");
+
+        filter(runnerPom, Map.of("<artifactId>alt-quarkus-ext</artifactId>", "<artifactId>acme-quarkus-ext</artifactId>"));
+        assertThat(devModeClient.getHttpResponse("/hello", false)).isEqualTo("hello");
+    }
+
+    @Test
+    public void testCapabilitiesMissing() throws MavenInvocationException, IOException {
+        testDir = getTargetDir("projects/capabilities-missing");
+        final File runnerPom = new File(testDir, "runner/pom.xml");
+        if (!runnerPom.exists()) {
+            fail("Failed to locate runner/pom.xml in " + testDir);
+        }
+        run(true);
+
+        final CapabilityErrors error = new CapabilityErrors();
+        error.addMissing("sunshine", "org.acme:acme-quarkus-ext:1.0-SNAPSHOT");
+        String response = devModeClient.getHttpResponse("/hello", true);
         assertThat(response).contains(error.report());
 
         final StringWriter buf = new StringWriter();
-        try (BufferedWriter writer = new BufferedWriter(buf)) {
-            writer.write("        <dependency>");
-            writer.newLine();
-            writer.write("            <groupId>org.acme</groupId>");
-            writer.newLine();
-            writer.write("            <artifactId>acme-quarkus-ext</artifactId>");
-            writer.newLine();
-            writer.write("        </dependency>");
-            writer.newLine();
-        }
-        final String acmeDep = buf.toString();
-        filter(runnerPom, Collections.singletonMap(acmeDep, ""));
-        assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
-
-        buf.getBuffer().setLength(0);
         try (BufferedWriter writer = new BufferedWriter(buf)) {
             writer.write("        <dependency>");
             writer.newLine();
@@ -118,9 +167,9 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
             writer.write("        </dependency>");
             writer.newLine();
         }
-        final String altDep = buf.toString();
-        filter(runnerPom, Collections.singletonMap(acmeDep, altDep));
-        assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
+        final String acmeDep = buf.toString();
+        filter(runnerPom, Collections.singletonMap("<!-- missing -->", acmeDep));
+        assertThat(devModeClient.getHttpResponse("/hello", false)).isEqualTo("hello");
     }
 
     @Test
@@ -133,7 +182,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
     public void testSystemPropertyWithSpacesOnCommandLine() throws MavenInvocationException, IOException {
         testDir = initProject("projects/classic", "projects/project-classic-prop-with-spaces");
         runAndCheck("-Dgreeting=\"1 2 3\"");
-        final String greeting = DevModeTestUtils.getHttpResponse("/app/hello/greeting");
+        final String greeting = devModeClient.getHttpResponse("/app/hello/greeting");
         assertThat(greeting).isEqualTo("1 2 3");
     }
 
@@ -146,7 +195,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         final File done = new File(testDir, "done.txt");
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(20, TimeUnit.MINUTES).until(() -> done.exists());
+                .atMost(20, TimeUnit.MINUTES).until(done::exists);
 
         // read the log and check the passed in args
         final File log = new File(testDir, "build-command-mode-app-args.log");
@@ -164,7 +213,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         final File done = new File(testDir, "done.txt");
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(20, TimeUnit.MINUTES).until(() -> done.exists());
+                .atMost(20, TimeUnit.MINUTES).until(done::exists);
 
         // read the log and check the passed in args
         final File log = new File(testDir, "build-command-mode-app-pom-args.log");
@@ -173,7 +222,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         assertThat(loggedArgs).isEqualTo("ARGS: [plugin, pom, config]");
     }
 
-    private String extractLoggedArgs(final File log) throws IOException, FileNotFoundException {
+    private String extractLoggedArgs(final File log) throws IOException {
         String loggedArgs = null;
         try (BufferedReader reader = new BufferedReader(new FileReader(log))) {
             String s;
@@ -195,15 +244,15 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         runAndCheck();
 
         //make sure that the Class.getPackage() works for app classes
-        String pkg = DevModeTestUtils.getHttpResponse("/app/hello/package");
+        String pkg = devModeClient.getHttpResponse("/app/hello/package");
         assertThat(pkg).isEqualTo("org.acme");
 
         //make sure the proper profile is set
-        String profile = DevModeTestUtils.getHttpResponse("/app/hello/profile");
+        String profile = devModeClient.getHttpResponse("/app/hello/profile");
         assertThat(profile).isEqualTo("dev");
 
         //make sure webjars work
-        DevModeTestUtils.getHttpResponse("webjars/bootstrap/4.6.0/css/bootstrap.min.css");
+        devModeClient.getHttpResponse("webjars/jquery-ui/1.13.0/jquery-ui.min.js");
 
         assertThatOutputWorksCorrectly(running.log());
 
@@ -217,7 +266,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         //make sure that a simple HTTP GET request always works
         IntStream.range(0, 10).forEach(i -> {
-            assertThat(DevModeTestUtils.getStrictHttpResponse("/hello", 200)).isTrue();
+            assertThat(devModeClient.getStrictHttpResponse("/hello", 200)).isTrue();
         });
     }
 
@@ -238,7 +287,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         //make sure that a simple HTTP GET request always works
         IntStream.range(0, 10).forEach(i -> {
-            assertThat(DevModeTestUtils.getStrictHttpResponse("/hello", 200)).isTrue();
+            assertThat(devModeClient.getStrictHttpResponse("/hello", 200)).isTrue();
         });
 
         //try to open the copied test.zip (which will fail if it was filtered)
@@ -262,7 +311,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
@@ -274,12 +324,19 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "carambar"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("carambar"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("carambar"));
+    }
+
+    @Test
+    public void testCustomOutputDirSetInProfile() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/classic", "projects/project-classic-custom-output-dir");
+        runAndCheck("-PcustomOutputDir");
     }
 
     @Test
     public void testThatNonExistentSrcDirCanBeAdded() throws MavenInvocationException, IOException {
-        testDir = initProject("projects/classic", "projects/project-classic-run-java-change");
+        testDir = initProject("projects/classic", "projects/project-classic-non-existent-src-dir-can-be-added");
 
         File sourceDir = new File(testDir, "src/main/java");
         File sourceDirMoved = new File(testDir, "src/main/java-moved");
@@ -295,7 +352,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         runAndCheck();
         hello.delete();
-        if (!DevModeTestUtils.getHttpResponse("/app/hello", 404)) {
+        if (!devModeClient.getHttpResponse("/app/hello", 404)) {
             Assertions.fail("expected resource to be deleted");
         }
         if (!sourceDirMoved.renameTo(sourceDir)) {
@@ -305,19 +362,20 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "hello"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("hello"));
     }
 
     @Test
-    public void testThatInstrumentationBasedReloadWorks() throws MavenInvocationException, IOException {
-        testDir = initProject("projects/classic-inst", "projects/project-intrumentation-reload");
+    public void testThatInstrumentationBasedReloadWorks() throws MavenInvocationException, IOException, Exception {
+        DevUIJsonRPCTest devUIJsonRPCTest = new DevUIJsonRPCTest("devui-continuous-testing", "http://localhost:8080");
+        testDir = initProject("projects/classic-inst", "projects/project-instrumentation-reload");
         runAndCheck();
 
         // Enable instrumentation based reload to begin with
-        RestAssured.post("/q/dev/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
-
+        devUIJsonRPCTest.executeJsonRPCMethod("toggleInstrumentation");
         //if there is an instrumentation based reload this will stay the same
-        String firstUuid = DevModeTestUtils.getHttpResponse("/app/uuid");
+        String firstUuid = devModeClient.getHttpResponse("/app/uuid");
 
         // Edit the "Hello" message.
         File source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
@@ -327,10 +385,11 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
 
         //verify that this was an instrumentation based reload
-        Assertions.assertEquals(firstUuid, DevModeTestUtils.getHttpResponse("/app/uuid"));
+        Assertions.assertEquals(firstUuid, devModeClient.getHttpResponse("/app/uuid"));
 
         source = new File(testDir, "src/main/java/org/acme/HelloService.java");
         filter(source, Collections.singletonMap("\"Stuart\"", "\"Stuart Douglas\""));
@@ -338,41 +397,43 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "Stuart Douglas"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/name").contains("Stuart Douglas"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/name").contains("Stuart Douglas"));
 
         //this bean observes startup event, so it should be different UUID
-        String secondUUid = DevModeTestUtils.getHttpResponse("/app/uuid");
+        String secondUUid = devModeClient.getHttpResponse("/app/uuid");
         Assertions.assertNotEquals(secondUUid, firstUuid);
 
         //now disable instrumentation based restart, and try again
         //change it back to hello
-        RestAssured.post("/q/dev/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
+        devUIJsonRPCTest.executeJsonRPCMethod("toggleInstrumentation");
         source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
         filter(source, Collections.singletonMap("return \"" + uuid + "\";", "return \"hello\";"));
 
         // Wait until we get "hello"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("hello"));
 
         //verify that this was not instrumentation based reload
-        Assertions.assertNotEquals(secondUUid, DevModeTestUtils.getHttpResponse("/app/uuid"));
-        secondUUid = DevModeTestUtils.getHttpResponse("/app/uuid");
+        Assertions.assertNotEquals(secondUUid, devModeClient.getHttpResponse("/app/uuid"));
+        secondUUid = devModeClient.getHttpResponse("/app/uuid");
 
         //now re-enable
         //and repeat
-        RestAssured.post("/q/dev/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
+        devUIJsonRPCTest.executeJsonRPCMethod("toggleInstrumentation");
         source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
         filter(source, Collections.singletonMap("return \"hello\";", "return \"" + uuid + "\";"));
 
         // Wait until we get uuid
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
 
         //verify that this was an instrumentation based reload
-        Assertions.assertEquals(secondUUid, DevModeTestUtils.getHttpResponse("/app/uuid"));
+        Assertions.assertEquals(secondUUid, devModeClient.getHttpResponse("/app/uuid"));
 
         // verify that add + change results in full reload
         // add a new class
@@ -386,18 +447,19 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "hello"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("hello"));
 
         //verify that this was not instrumentation based reload
-        Assertions.assertNotEquals(secondUUid, DevModeTestUtils.getHttpResponse("/app/uuid"));
-        secondUUid = DevModeTestUtils.getHttpResponse("/app/uuid");
+        Assertions.assertNotEquals(secondUUid, devModeClient.getHttpResponse("/app/uuid"));
+        secondUUid = devModeClient.getHttpResponse("/app/uuid");
 
     }
 
     @Test
     public void testThatSourceChangesAreDetectedOnPomChange() throws Exception {
         testDir = initProject("projects/classic", "projects/project-classic-run-src-and-pom-change");
-        runAndCheck();
+        runAndCheck(false);
 
         // Edit a Java file too
         final File javaSource = new File(testDir, "src/main/java/org/acme/HelloResource.java");
@@ -419,13 +481,16 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get the updated responses
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello " + uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> {
+                    System.out.println(devModeClient.getHttpResponse("/app/hello"));
+                    return devModeClient.getHttpResponse("/app/hello").contains("hello " + uuid);
+                });
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greeting").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greeting").contains(uuid));
 
     }
 
@@ -451,11 +516,11 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                         "        </dependency>"));
 
         runAndCheck();
-        assertThat(DevModeTestUtils.getHttpResponse("/q/openapi", true)).contains("Resource not found");
+        assertThat(devModeClient.getHttpResponse("/q/openapi", true)).contains("Resource Not Found");
         shutdownTheApp();
 
         runAndCheck("-f", alternatePomName);
-        DevModeTestUtils.getHttpResponse("/q/openapi").contains("hello");
+        devModeClient.getHttpResponse("/q/openapi").contains("hello");
     }
 
     @Test
@@ -474,7 +539,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/q/openapi").contains("hello"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/q/openapi").contains("hello"));
     }
 
     @Test
@@ -482,23 +548,31 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = getTargetDir("projects/project-with-extension");
         runAndCheck();
 
-        final List<String> extDepWarnings = Files.readAllLines(testDir.toPath().resolve("build-project-with-extension.log"))
-                .stream()
-                .filter(s -> s.startsWith(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency "))
-                .collect(Collectors.toList());
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-quarkus-ext:1.0-SNAPSHOT will not be hot-reloadable"));
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-quarkus-ext-deployment:1.0-SNAPSHOT will not be hot-reloadable"));
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-common:1.0-SNAPSHOT will not be hot-reloadable"));
-        assertTrue(extDepWarnings.contains(
-                "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-common-transitive:1.0-SNAPSHOT will not be hot-reloadable"));
-        assertEquals(4, extDepWarnings.size());
+        final List<String> artifacts = getNonReloadableArtifacts(
+                Files.readAllLines(testDir.toPath().resolve("build-project-with-extension.log")));
+        assertTrue(artifacts.contains("- org.acme:acme-quarkus-ext:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-quarkus-ext-deployment:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-common:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-common-transitive:1.0-SNAPSHOT"));
+        assertEquals(4, artifacts.size());
+    }
+
+    protected List<String> getNonReloadableArtifacts(final List<String> log) {
+        final List<String> artifacts = new ArrayList<>();
+        boolean inWarn = false;
+        for (String line : log) {
+            if (inWarn) {
+                if (line.equals(
+                        "The artifacts above appear to be either dependencies of non-reloadable application dependencies or Quarkus extensions")) {
+                    break;
+                }
+                artifacts.add(line);
+            } else if (line.equals(
+                    "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Live reload was disabled for the following project artifacts:")) {
+                inWarn = true;
+            }
+        }
+        return artifacts;
     }
 
     @Test
@@ -506,17 +580,64 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = getTargetDir("projects/rest-client-custom-headers-extension");
         runAndCheck();
 
-        final List<String> extDepWarnings = Files
-                .readAllLines(testDir.toPath().resolve("build-rest-client-custom-headers-extension.log"))
-                .stream()
-                .filter(s -> s.startsWith(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency "))
-                .collect(Collectors.toList());
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:rest-client-custom-headers:1.0-SNAPSHOT will not be hot-reloadable"));
+        final List<String> artifacts = getNonReloadableArtifacts(
+                Files.readAllLines(testDir.toPath().resolve("build-rest-client-custom-headers-extension.log")));
+        assertTrue(artifacts.contains("- org.acme:rest-client-custom-headers:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:rest-client-custom-headers-deployment:1.0-SNAPSHOT"));
+        assertEquals(2, artifacts.size());
 
-        assertThat(DevModeTestUtils.getHttpResponse("/app/frontend")).isEqualTo("CustomValue1 CustomValue2");
+        assertThat(devModeClient.getHttpResponse("/app/frontend")).isEqualTo("CustomValue1 CustomValue2");
+    }
+
+    @Test
+    public void testThatJUnitTestTemplatesWork() throws MavenInvocationException, IOException {
+        //we also check continuous testing
+        testDir = initProject("projects/test-template", "projects/test-template-processed");
+        runAndCheck();
+
+        ContinuousTestingMavenTestUtils testingTestUtils = new ContinuousTestingMavenTestUtils();
+        ContinuousTestingMavenTestUtils.TestStatus results = testingTestUtils.waitForNextCompletion();
+
+        //check that the tests in both modules run
+        Assertions.assertEquals(2, results.getTestsPassed());
+
+        // Re-running the tests when changes happen is covered by testThatChangesTriggerRerunsOfJUnitTestTemplates
+    }
+
+    @Disabled("Not working; tracked by #40770")
+    @Test
+    public void testThatChangesTriggerRerunsOfJUnitTestTemplates() throws MavenInvocationException, IOException {
+        //we also check continuous testing
+        testDir = initProject("projects/test-template", "projects/test-template-processed");
+        runAndCheck();
+
+        ContinuousTestingMavenTestUtils testingTestUtils = new ContinuousTestingMavenTestUtils();
+        ContinuousTestingMavenTestUtils.TestStatus results = testingTestUtils.waitForNextCompletion();
+
+        //check that the tests in both modules run
+        Assertions.assertEquals(2, results.getTestsPassed());
+
+        // Edit the "Hello" message.
+        File source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
+        final String uuid = UUID.randomUUID().toString();
+        filter(source, Collections.singletonMap("return \"hello\";", "return \"" + uuid + "\";"));
+
+        // Wait until we get "uuid"
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .pollInterval(1, TimeUnit.SECONDS)
+                .until(source::isFile);
+
+        results = testingTestUtils.waitForNextCompletion();
+
+        //make sure the test is failing now
+        Assertions.assertEquals(0, results.getTestsPassed());
+        Assertions.assertEquals(2, results.getTestsFailed());
     }
 
     @Test
@@ -529,7 +650,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(5, TimeUnit.SECONDS)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/resourcesCount").equals("1"));
+                .until(() -> devModeClient.getHttpResponse("/app/hello/resourcesCount").equals("1"));
 
         ContinuousTestingMavenTestUtils testingTestUtils = new ContinuousTestingMavenTestUtils();
         ContinuousTestingMavenTestUtils.TestStatus results = testingTestUtils.waitForNextCompletion();
@@ -545,7 +666,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
@@ -572,7 +694,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "carambar"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("carambar"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("carambar"));
 
         // Create a new resource
         source = new File(testDir, "html/src/main/resources/META-INF/resources/lorem.txt");
@@ -581,22 +704,22 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt").contains("Lorem ipsum"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/lorem.txt").contains("Lorem ipsum"));
 
         // Update the resource
         FileUtils.write(source, uuid, "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/lorem.txt").contains(uuid));
 
         // Delete the resource
         source.delete();
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt", 404));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/lorem.txt", 404));
     }
 
     @Test
@@ -604,7 +727,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = initProject("projects/multimodule", "projects/multimodule-nodeps");
         runAndCheck("-DnoDeps");
 
-        String greeting = DevModeTestUtils.getHttpResponse("/app/hello/greeting");
+        String greeting = devModeClient.getHttpResponse("/app/hello/greeting");
         assertThat(greeting).containsIgnoringCase("bonjour");
 
         // Edit the "Hello" message.
@@ -619,10 +742,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greeting").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greeting").contains(uuid));
 
-        greeting = DevModeTestUtils.getHttpResponse("/app/hello");
+        greeting = devModeClient.getHttpResponse("/app/hello");
         assertThat(greeting).containsIgnoringCase("hello");
     }
 
@@ -641,7 +764,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains(uuid));
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
@@ -656,7 +780,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         run(true, "-Dquarkus.platform.version=" + projectVersion,
                 "-Dquarkus-plugin.version=" + projectVersion);
 
-        assertEquals("Test class is not visible", DevModeTestUtils.getHttpResponse("/hello"));
+        assertEquals("Test class is not visible", devModeClient.getHttpResponse("/hello"));
     }
 
     @Test
@@ -667,10 +791,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/MyNewResource.java");
         String myNewResource = "package org.acme;\n" +
                 "\n" +
-                "import javax.ws.rs.GET;\n" +
-                "import javax.ws.rs.Path;\n" +
-                "import javax.ws.rs.Produces;\n" +
-                "import javax.ws.rs.core.MediaType;\n" +
+                "import jakarta.ws.rs.GET;\n" +
+                "import jakarta.ws.rs.Path;\n" +
+                "import jakarta.ws.rs.Produces;\n" +
+                "import jakarta.ws.rs.core.MediaType;\n" +
                 "\n" +
                 "@Path(\"/foo\")\n" +
                 "public class MyNewResource {\n" +
@@ -686,7 +810,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "bar"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/foo").contains("bar"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/foo").contains("bar"));
     }
 
     @Test
@@ -696,10 +821,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/ClassDeletionResource.java");
         String classDeletionResource = "package org.acme;\n" +
                 "\n" +
-                "import javax.ws.rs.GET;\n" +
-                "import javax.ws.rs.Path;\n" +
-                "import javax.ws.rs.Produces;\n" +
-                "import javax.ws.rs.core.MediaType;\n" +
+                "import jakarta.ws.rs.GET;\n" +
+                "import jakarta.ws.rs.Path;\n" +
+                "import jakarta.ws.rs.Produces;\n" +
+                "import jakarta.ws.rs.core.MediaType;\n" +
                 "\n" +
                 "@Path(\"/deletion\")\n" +
                 "public class ClassDeletionResource {\n" +
@@ -721,8 +846,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until source file is compiled
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/deletion").contains("to be deleted"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/deletion").contains("to be deleted"));
 
         // Remove InnerClass
         filter(source, Collections.singletonMap("public static class InnerClass {}", ""));
@@ -734,8 +859,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Make sure that other class files have not been deleted.
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
 
         // Verify that only ClassDeletionResource$InnerClass.class to be deleted
         assertThat(innerClassFile).doesNotExist();
@@ -748,8 +873,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "404 Not Found" because ClassDeletionResource.class have been deleted.
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/deletion", 404));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/deletion", 404));
 
         // Make sure that class files for the deleted source file have also been deleted
         assertThat(helloClassFile).doesNotExist();
@@ -767,7 +892,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         filter(source, Collections.singletonMap("return \"hello\";", "return \"" + uuid + "\";"));
 
         // Check that the random string is returned
-        String greeting = DevModeTestUtils.getHttpResponse("/app/hello");
+        String greeting = devModeClient.getHttpResponse("/app/hello");
         assertThat(greeting).containsIgnoringCase(uuid);
     }
 
@@ -778,14 +903,15 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
-        String resp = DevModeTestUtils.getHttpResponse();
+        String resp = devModeClient.getHttpResponse();
 
         assertThat(resp).containsIgnoringCase("ready").containsIgnoringCase("application").containsIgnoringCase("org.acme")
                 .containsIgnoringCase("1.0-SNAPSHOT");
 
-        String greeting = DevModeTestUtils.getHttpResponse("/app/hello/greeting");
+        String greeting = devModeClient.getHttpResponse("/app/hello/greeting");
         assertThat(greeting).containsIgnoringCase("bonjour");
 
         File source = new File(testDir, "src/main/resources/application.properties");
@@ -800,8 +926,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greeting").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greeting").contains(uuid));
     }
 
     @Test
@@ -811,14 +937,15 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
-        String resp = DevModeTestUtils.getHttpResponse();
+        String resp = devModeClient.getHttpResponse();
 
         assertThat(resp).containsIgnoringCase("ready").containsIgnoringCase("application").containsIgnoringCase("org.acme")
                 .containsIgnoringCase("1.0-SNAPSHOT");
 
-        String greeting = DevModeTestUtils.getHttpResponse("/app/hello/greeting");
+        String greeting = devModeClient.getHttpResponse("/app/hello/greeting");
         assertThat(greeting).contains("initialValue");
 
         File configurationFile = new File(testDir, "src/main/resources/application.properties");
@@ -838,7 +965,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(10, TimeUnit.SECONDS)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greeting").contains(uuid));
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greeting").contains(uuid));
     }
 
     @Test
@@ -863,38 +990,26 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(60, TimeUnit.SECONDS)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greeting").contains(uuid));
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greeting").contains(uuid));
     }
 
     @Test
-    public void testThatNewResourcesAreServed() throws MavenInvocationException, IOException {
-        testDir = initProject("projects/classic", "projects/project-classic-run-resource-change");
+    public void testThatConfigFileDeletionsAreDetected() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/dev-mode-file-deletion");
         runAndCheck();
 
-        // Create a new resource
-        File source = new File(testDir, "src/main/resources/META-INF/resources/lorem.txt");
-        FileUtils.write(source,
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-                "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt"), containsString("Lorem ipsum"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Bonjour"));
 
-        // Update the resource
-        String uuid = UUID.randomUUID().toString();
-        FileUtils.write(source, uuid, "UTF-8");
-        await()
-                .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt"), equalTo(uuid));
+        File source = new File(testDir, "src/main/resources/application.properties");
+        FileUtils.delete(source);
 
-        // Delete the resource
-        source.delete();
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt", 404));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Guten Morgen"));
     }
 
     @Test
@@ -913,16 +1028,16 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         runAndCheck();
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Bonjour/Other"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Bonjour/Other"));
 
         // Update the application.properties
         File source = new File(testDir, "src/main/resources-primary/application.properties");
         FileUtils.write(source, "greeting=Salut", "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Salut/Other"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Salut/Other"));
 
         // Add the application.yaml
         source = new File(testDir, "src/main/resources-secondary/application.yaml");
@@ -930,16 +1045,16 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 "  greeting: Buenos dias", "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Salut/Buenos dias"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Salut/Buenos dias"));
 
         // Update the application.yaml
         FileUtils.write(source, "other:\n" +
                 "  greeting: Hola", "UTF-8");
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Salut/Hola"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/greetings").contains("Salut/Hola"));
     }
 
     @Test
@@ -956,8 +1071,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         AtomicReference<String> last = new AtomicReference<>();
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> {
-                    String content = DevModeTestUtils.getHttpResponse("/app/hello", true);
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                    String content = devModeClient.getHttpResponse("/app/hello", true);
                     last.set(content);
                     return content.contains(uuid);
                 });
@@ -975,7 +1090,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("carambar"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("carambar"));
     }
 
     @Test
@@ -991,8 +1107,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         AtomicReference<String> last = new AtomicReference<>();
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> {
-                    String content = DevModeTestUtils.getHttpResponse("/app/hello", true);
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                    String content = devModeClient.getHttpResponse("/app/hello", true);
                     last.set(content);
                     return content.contains("Error restarting Quarkus");
                 });
@@ -1003,8 +1119,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> {
-                    String content = DevModeTestUtils.getHttpResponse("/app/hello", true);
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                    String content = devModeClient.getHttpResponse("/app/hello", true);
                     last.set(content);
                     return content.equals("hello");
                 });
@@ -1020,7 +1136,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/MyBean.java");
         String content = "package org.acme;\n" +
                 "\n" +
-                "import javax.enterprise.context.ApplicationScoped;\n" +
+                "import jakarta.enterprise.context.ApplicationScoped;\n" +
                 "\n" +
                 "@ApplicationScoped\n" +
                 "public class MyBean {\n" +
@@ -1040,7 +1156,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("message"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("message"));
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
@@ -1051,7 +1168,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("foobarbaz"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("foobarbaz"));
     }
 
     @Test
@@ -1079,14 +1197,15 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
-        String resp = DevModeTestUtils.getHttpResponse();
+        String resp = devModeClient.getHttpResponse();
 
         assertThat(resp).containsIgnoringCase("ready").containsIgnoringCase("application").containsIgnoringCase("org.acme")
                 .containsIgnoringCase("1.0-SNAPSHOT");
 
-        String greeting = DevModeTestUtils.getHttpResponse("/app/hello/otherGreeting");
+        String greeting = devModeClient.getHttpResponse("/app/hello/otherGreeting");
         assertThat(greeting).containsIgnoringCase("Hola");
 
         File source = new File(testDir, ".env");
@@ -1101,8 +1220,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // Wait until we get "uuid"
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(1, TimeUnit.MINUTES)
-                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/otherGreeting").contains(uuid));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello/otherGreeting").contains(uuid));
     }
 
     @Test
@@ -1121,7 +1240,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(30, TimeUnit.SECONDS)
-                .until(() -> running.log().contains("skipping quarkus:dev as this is assumed to be a support library"));
+                .until(() -> running.log().contains("Skipping quarkus:dev as this is assumed to be a support library"));
     }
 
     @Test
@@ -1129,7 +1248,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = initProject("projects/classic-no-build", "projects/classic-no-build-not-enforced");
         runAndCheck("-Dquarkus.enforceBuildGoal=false");
 
-        assertThat(running.log()).doesNotContain("skipping quarkus:dev as this is assumed to be a support library");
+        assertThat(running.log()).doesNotContain("Skipping quarkus:dev as this is assumed to be a support library");
     }
 
     @Test
@@ -1138,7 +1257,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         RunningInvoker invoker = new RunningInvoker(testDir, false);
 
         // to properly surface the problem of multiple classpath entries, we need to install the project to the local m2
-        MavenProcessInvocationResult installInvocation = invoker.execute(Arrays.asList("clean", "install", "-DskipTests"),
+        MavenProcessInvocationResult installInvocation = invoker.execute(
+                List.of("clean", "install", "-DskipTests", "-Dquarkus.analytics.disabled=true"),
                 Collections.emptyMap());
         assertThat(installInvocation.getProcess().waitFor(2, TimeUnit.MINUTES)).isTrue();
         assertThat(installInvocation.getExecutionException()).isNull();
@@ -1151,17 +1271,51 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         // make sure the application starts
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
-                .atMost(20, TimeUnit.SECONDS)
-                .until(() -> DevModeTestUtils.getHttpResponse("/cp/hello").equals("hello"));
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/cp/hello").equals("hello"));
 
         // test that we don't get multiple instances of a resource when loading from the ClassLoader
-        assertThat(DevModeTestUtils.getHttpResponse("/cp/resourcesCount")).isEqualTo("1");
+        assertThat(devModeClient.getHttpResponse("/cp/resourceCount/a.html")).isEqualTo("1");
+        assertThat(devModeClient.getHttpResponse("/cp/resourceCount/entry")).isEqualTo("2");
     }
 
     @Test
     public void testThatDependencyInParentIsEvaluated() throws IOException, MavenInvocationException {
         testDir = initProject("projects/multimodule-parent-dep");
         runAndCheck();
+    }
+
+    @Test
+    public void testModuleCompileOrder() throws IOException, MavenInvocationException {
+        testDir = initProject("projects/multimodule-parent-dep", "projects/multimodule-compile-order");
+        runAndCheck("-Dquarkus.bootstrap.effective-model-builder");
+
+        assertThat(devModeClient.getHttpResponse("/app/hello/")).isEqualTo("hello");
+
+        // modify classes in all the modules and make sure they are compiled in a correct order
+        File resource = new File(testDir, "level0/src/main/java/org/acme/level0/Level0Service.java");
+        filter(resource, Collections.singletonMap("getGreeting()", "getGreeting(String name)"));
+        filter(resource, Collections.singletonMap("return greeting;", "return greeting + \" \" + name;"));
+
+        resource = new File(testDir, "level1/src/main/java/org/acme/level1/Level1Service.java");
+        filter(resource, Collections.singletonMap("getGreetingFromLevel0()", "getGreetingFromLevel0(String name)"));
+        filter(resource, Collections.singletonMap("level0Service.getGreeting()", "level0Service.getGreeting(name)"));
+
+        resource = new File(testDir, "level2/submodule/src/main/java/org/acme/level2/submodule/Level2Service.java");
+        filter(resource, Collections.singletonMap("getGreetingFromLevel1()", "getGreetingFromLevel1(String name)"));
+        filter(resource,
+                Collections.singletonMap("level1Service.getGreetingFromLevel0()", "level1Service.getGreetingFromLevel0(name)"));
+
+        resource = new File(testDir, "runner/src/main/java/org/acme/rest/HelloResource.java");
+        filter(resource, Collections.singletonMap("level0Service.getGreeting()",
+                "level0Service.getGreeting(\"world\")"));
+        filter(resource, Collections.singletonMap("level2Service.getGreetingFromLevel1()",
+                "level2Service.getGreetingFromLevel1(\"world\")"));
+
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/app/hello").contains("hello world"));
     }
 
     @Test
@@ -1180,7 +1334,292 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
     public void testPropertyExpansion() throws IOException, MavenInvocationException {
         testDir = initProject("projects/property-expansion");
         runAndCheck();
-        assertThat(DevModeTestUtils.getHttpResponse("/app/hello/")).isEqualTo("hello");
-        assertThat(DevModeTestUtils.getHttpResponse("/app/hello/applicationName")).isEqualTo("myapp");
+        assertThat(devModeClient.getHttpResponse("/app/hello/")).isEqualTo("hello");
+        assertThat(devModeClient.getHttpResponse("/app/hello/applicationName")).isEqualTo("myapp");
+    }
+
+    @Test
+    public void testMultiJarModuleDevModeMocks() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/multijar-module", "projects/multijar-module-devmode-mocks");
+        run(false, "clean", "package", "-DskipTests", "-Dqdev");
+
+        String greeting = devModeClient.getHttpResponse("/hello");
+        assertThat(greeting).contains("acme other mock-service");
+
+        // Update TestBean
+        File resource = new File(testDir, "beans/src/test/java/org/acme/testlib/mock/MockService.java");
+        filter(resource, Collections.singletonMap("return \"mock-service\";", "return \"mock-service!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme other mock-service!"));
+
+        // Update AcmeBean
+        resource = new File(testDir, "beans/src/main/java/org/acme/AcmeBean.java");
+        filter(resource, Collections.singletonMap("return \"acme\";", "return \"acme!\";"));
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme! other mock-service!"));
+
+        // Update Other bean
+        resource = new File(testDir, "beans/src/main/java/org/acme/Other.java");
+        filter(resource, Collections.singletonMap("return \"other\";", "return \"other!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme! other! mock-service!"));
+    }
+
+    @Test
+    public void testMultiJarModuleDevMode() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/multijar-module", "projects/multijar-module-devmode");
+        run(false, "clean", "package", "-DskipTests");
+
+        String greeting = devModeClient.getHttpResponse("/hello");
+        assertThat(greeting).contains("acme other acme-service");
+
+        // Update TestBean
+        File resource = new File(testDir, "beans/src/main/java/org/acme/AcmeService.java");
+        filter(resource, Collections.singletonMap("return \"acme-service\";", "return \"acme-service!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme other acme-service!"));
+
+        // Update AcmeBean
+        resource = new File(testDir, "beans/src/main/java/org/acme/AcmeBean.java");
+        filter(resource, Collections.singletonMap("return \"acme\";", "return \"acme!\";"));
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme! other acme-service!"));
+
+        // Update Other bean
+        resource = new File(testDir, "beans/src/main/java/org/acme/Other.java");
+        filter(resource, Collections.singletonMap("return \"other\";", "return \"other!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("acme! other! acme-service!"));
+    }
+
+    @Test
+    public void testThatWatchedAbsolutePathsAreNotDeleted() throws MavenInvocationException, IOException {
+        // for reference https://github.com/quarkusio/quarkus/issues/25667
+        // .env files got deleted on dev mode restarts
+        testDir = initProject("projects/no-resource-root", "projects/no-resource-root-run");
+        run(true);
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Servus"));
+
+        // Update the .env
+        File source = new File(testDir, ".env");
+        FileUtils.write(source, "GREETING=Hallo", "UTF-8");
+
+        assertTrue(source.exists());
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Hallo"));
+
+        assertTrue(source.exists());
+    }
+
+    @Test
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "Installing the library again is failing on Windows, probably because the jar is accessed by the dev mode process")
+    public void testExternalReloadableArtifacts() throws Exception {
+        final String rootProjectPath = "projects/external-reloadable-artifacts";
+
+        // Set up the external project
+        final File externalJarDir = initProject(rootProjectPath + "/external-lib");
+
+        // Clean and install the external JAR in local repository (.m2)
+        install(externalJarDir, true);
+
+        // Set up the main project that uses the external dependency
+        this.testDir = initProject(rootProjectPath + "/app");
+
+        // Run quarkus:dev process
+        run(true);
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Hello"));
+
+        final File greetingJava = externalJarDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme").resolve("lib")
+                .resolve("Greeting.java").toFile();
+        assertThat(greetingJava).exists();
+
+        // Uncomment the method bonjour() in Greeting.java
+        filter(greetingJava, Map.of("/*", "", "*/", ""));
+        install(externalJarDir, false);
+
+        final File greetingResourceJava = this.testDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme")
+                .resolve("GreetingResource.java").toFile();
+        assertThat(greetingResourceJava).exists();
+
+        // Update the GreetingResource.java to call the Greeting.bonjour() method
+        final String greetingBonjourCall = "Greeting.bonjour()";
+        filter(greetingResourceJava, Map.of("Greeting.hello()", greetingBonjourCall));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("Bonjour"));
+
+        // Change bonjour() method content in Greeting.java
+        filter(greetingJava, Map.of("Bonjour", "Bonjour!"));
+        install(externalJarDir, false);
+
+        // Change GreetingResource.java endpoint response to upper case letters
+        filter(greetingResourceJava, Map.of(greetingBonjourCall, greetingBonjourCall.concat(".toUpperCase()")));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("BONJOUR!"));
+    }
+
+    @Test
+    public void testThatAptInClasspathWorks() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/apt-in-classpath", "projects/project-apt-in-classpath");
+        run(true);
+
+        // wait until app is compiled and started
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field/myEntity.field"));
+
+        // make sure annotations go to the right place
+        File entityMetamodelSourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/MyEntity_.java");
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD");
+        File entityQuerySourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/QMyEntity.java");
+        assertThat(entityQuerySourceFile).exists().content().contains("field");
+        File entityMetamodelClassFile = new File(testDir, "target/classes/org/acme/MyEntity_.class");
+        assertThat(entityMetamodelClassFile).exists();
+        File entityQueryClassFile = new File(testDir, "target/classes/org/acme/QMyEntity.class");
+        assertThat(entityQueryClassFile).exists();
+
+        // Edit the entity to change the field name
+        File source = new File(testDir, "src/main/java/org/acme/MyEntity.java");
+        filter(source, Collections.singletonMap("String field;", "String field2;"));
+
+        // Edit the "Hello" message for the new field.
+        source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
+        filter(source, Collections.singletonMap("return MyEntity_.FIELD+\"/\"+QMyEntity.myEntity.field;",
+                "return MyEntity_.FIELD2+\"/\"+QMyEntity.myEntity.field2;"));
+
+        // Wait until we get "field2/field2"
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field2/myEntity.field2"));
+
+        // make sure annotations go to the right place
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD2");
+        assertThat(entityQuerySourceFile).exists().content().contains("field2");
+        assertThat(entityMetamodelClassFile).exists();
+        assertThat(entityQueryClassFile).exists();
+    }
+
+    @Test
+    public void testThatAptInAnnotationProcessorPathsWorks() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/apt-in-annotation-processor-paths",
+                "projects/project-apt-in-annotation-processor-paths");
+        run(true);
+
+        // same expectations as the classpath one: two APT plugins
+
+        // wait until app is compiled and started
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field/myEntity.field"));
+
+        // make sure annotations go to the right place
+        File entityMetamodelSourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/MyEntity_.java");
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD");
+        File entityQuerySourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/QMyEntity.java");
+        assertThat(entityQuerySourceFile).exists().content().contains("field");
+        File entityMetamodelClassFile = new File(testDir, "target/classes/org/acme/MyEntity_.class");
+        assertThat(entityMetamodelClassFile).exists();
+        File entityQueryClassFile = new File(testDir, "target/classes/org/acme/QMyEntity.class");
+        assertThat(entityQueryClassFile).exists();
+
+        // Edit the entity to change the field name
+        File source = new File(testDir, "src/main/java/org/acme/MyEntity.java");
+        filter(source, Collections.singletonMap("String field;", "String field2;"));
+
+        // Edit the "Hello" message for the new field.
+        source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
+        filter(source, Collections.singletonMap("return MyEntity_.FIELD+\"/\"+QMyEntity.myEntity.field;",
+                "return MyEntity_.FIELD2+\"/\"+QMyEntity.myEntity.field2;"));
+
+        // Wait until we get "field2/field2"
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field2/myEntity.field2"));
+
+        // make sure annotations go to the right place
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD2");
+        assertThat(entityQuerySourceFile).exists().content().contains("field2");
+        assertThat(entityMetamodelClassFile).exists();
+        assertThat(entityQueryClassFile).exists();
+    }
+
+    @Test
+    public void testThatAptInAnnotationProcessorsWorks() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/apt-in-annotation-processors",
+                "projects/project-apt-in-annotation-processors");
+        run(true);
+
+        // NOT the same expectations as the classpath one: only the Hibernate APT plugin
+
+        // wait until app is compiled and started
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field"));
+
+        // make sure annotations go to the right place
+        File entityMetamodelSourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/MyEntity_.java");
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD");
+        File entityQuerySourceFile = new File(testDir, "target/generated-sources/annotations/org/acme/QMyEntity.java");
+        assertThat(entityQuerySourceFile).doesNotExist();
+        File entityMetamodelClassFile = new File(testDir, "target/classes/org/acme/MyEntity_.class");
+        assertThat(entityMetamodelClassFile).exists();
+        File entityQueryClassFile = new File(testDir, "target/classes/org/acme/QMyEntity.class");
+        assertThat(entityQueryClassFile).doesNotExist();
+
+        // Edit the entity to change the field name
+        File source = new File(testDir, "src/main/java/org/acme/MyEntity.java");
+        filter(source, Collections.singletonMap("String field;", "String field2;"));
+
+        // Edit the "Hello" message for the new field.
+        source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
+        filter(source, Collections.singletonMap("return MyEntity_.FIELD;",
+                "return MyEntity_.FIELD2;"));
+
+        // Wait until we get "field2"
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> devModeClient.getHttpResponse("/hello").contains("field2"));
+
+        // make sure annotations go to the right place
+        assertThat(entityMetamodelSourceFile).exists().content().contains("FIELD2");
+        assertThat(entityQuerySourceFile).doesNotExist();
+        assertThat(entityMetamodelClassFile).exists();
+        assertThat(entityQueryClassFile).doesNotExist();
     }
 }
