@@ -3,6 +3,7 @@ package io.quarkus.maven.it;
 import static io.quarkus.maven.it.ApplicationNameAndVersionTestUtil.assertApplicationPropertiesSetCorrectly;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.Assumptions.assumeThat;
 import static org.awaitility.Awaitility.await;
 
 import java.io.BufferedReader;
@@ -22,6 +23,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.Callable;
 import java.util.concurrent.TimeUnit;
@@ -35,18 +37,22 @@ import org.jboss.shrinkwrap.api.exporter.ZipExporter;
 import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.condition.DisabledOnOs;
 import org.junit.jupiter.api.condition.EnabledForJreRange;
 import org.junit.jupiter.api.condition.JRE;
+import org.junit.jupiter.api.condition.OS;
 
 import io.quarkus.deployment.pkg.steps.JarResultBuildStep;
 import io.quarkus.deployment.util.IoUtil;
 import io.quarkus.maven.it.verifier.MavenProcessInvocationResult;
 import io.quarkus.maven.it.verifier.RunningInvoker;
-import io.quarkus.test.devmode.util.DevModeTestUtils;
+import io.quarkus.test.devmode.util.DevModeClient;
 import io.quarkus.utilities.JavaBinFinder;
 
 @DisableForNative
 public class JarRunnerIT extends MojoTestBase {
+    private DevModeClient devModeClient = new DevModeClient();
 
     /**
      * Tests that a Quarkus project builds fine if the project is hosted in a directory
@@ -57,26 +63,29 @@ public class JarRunnerIT extends MojoTestBase {
      * @see <a href="https://github.com/quarkusio/quarkus/issues/11511"/>
      */
     @Test
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "With maven-compiler-plugin 2.11.0, this test is not working anymore on Windows: Error while storing the mojo status: Input length = 1")
     public void testNonAsciiDir() throws Exception {
         final File testDir = initProject("projects/classic", "projects/ěščřžýáíéůú");
         final RunningInvoker running = new RunningInvoker(testDir, false);
 
         final MavenProcessInvocationResult result = running.execute(Arrays.asList("install", "-DskipTests"),
                 Collections.emptyMap());
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
         File output = new File(testDir, "target/output.log");
         output.createNewFile();
 
-        Process process = doLaunch(new File(testDir, "target/quarkus-app"), Paths.get("quarkus-run.jar"), output,
-                Collections.emptyList()).start();
+        Process process = doLaunch(new File(testDir, "target/quarkus-app"), Paths.get("quarkus-run.jar"), output, List.of())
+                .start();
         try {
             // Wait until server up
             dumpFileContentOnFailure(() -> {
                 await().pollDelay(1, TimeUnit.SECONDS)
-                        .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                        .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                        .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
                 return null;
             }, output, ConditionTimeoutException.class);
         } finally {
@@ -91,7 +100,8 @@ public class JarRunnerIT extends MojoTestBase {
         RunningInvoker running = new RunningInvoker(testDir, false);
 
         MavenProcessInvocationResult result = running.execute(Arrays.asList("package", "-DskipTests"), Collections.emptyMap());
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -105,7 +115,8 @@ public class JarRunnerIT extends MojoTestBase {
             // Wait until server up
             await()
                     .pollDelay(1, TimeUnit.SECONDS)
-                    .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                    .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
 
             String logs = FileUtils.readFileToString(output, "UTF-8");
 
@@ -129,7 +140,8 @@ public class JarRunnerIT extends MojoTestBase {
 
         final MavenProcessInvocationResult result = running.execute(Arrays.asList("install"),
                 Collections.emptyMap());
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -137,9 +149,9 @@ public class JarRunnerIT extends MojoTestBase {
         output.createNewFile();
 
         Process process = doLaunch(new File(testDir, "app/target/quarkus-app"), Paths.get("quarkus-run.jar"), output,
-                Collections.emptyList()).start();
+                List.of()).start();
         try {
-            Assertions.assertEquals("builder-image is customized", DevModeTestUtils.getHttpResponse("/hello"));
+            Assertions.assertEquals("builder-image is customized", devModeClient.getHttpResponse("/hello"));
         } finally {
             process.destroy();
         }
@@ -154,7 +166,8 @@ public class JarRunnerIT extends MojoTestBase {
         final MavenProcessInvocationResult result = running.execute(
                 Arrays.asList("install -Dquarkus.native.builder-image=commandline -DskipTests"),
                 Collections.emptyMap());
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -162,9 +175,9 @@ public class JarRunnerIT extends MojoTestBase {
         output.createNewFile();
 
         Process process = doLaunch(new File(testDir, "app/target/quarkus-app"), Paths.get("quarkus-run.jar"), output,
-                Collections.emptyList()).start();
+                List.of()).start();
         try {
-            Assertions.assertEquals("builder-image is commandline", DevModeTestUtils.getHttpResponse("/hello"));
+            Assertions.assertEquals("builder-image is commandline", devModeClient.getHttpResponse("/hello"));
         } finally {
             process.destroy();
         }
@@ -198,9 +211,10 @@ public class JarRunnerIT extends MojoTestBase {
         MavenProcessInvocationResult result = running
                 .execute(Arrays.asList("package",
                         "-DskipTests",
-                        "-Dquarkus.package.type=legacy-jar"), Collections.emptyMap());
+                        "-Dquarkus.package.jar.type=legacy-jar"), Collections.emptyMap());
 
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -235,18 +249,227 @@ public class JarRunnerIT extends MojoTestBase {
             dumpFileContentOnFailure(() -> {
                 await()
                         .pollDelay(1, TimeUnit.SECONDS)
-                        .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                        .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                        .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
                 return null;
             }, output, ConditionTimeoutException.class);
 
             String logs = FileUtils.readFileToString(output, "UTF-8");
 
-            assertThat(logs).isNotEmpty().contains("resteasy-reactive");
+            assertThat(logs).isNotEmpty().contains("rest");
 
             // test that the application name and version are properly set
             assertApplicationPropertiesSetCorrectly();
             assertResourceReadingFromClassPathWorksCorrectly("");
             assertUsingProtectionDomainWorksCorrectly("");
+        } finally {
+            process.destroy();
+        }
+    }
+
+    @Test
+    public void reaugmentationWithRemovedArtifacts() throws Exception {
+        File testDir = initProject("projects/multimodule-classpath", "projects/multimodule-resources-classpath-reaugmentation");
+        RunningInvoker running = new RunningInvoker(testDir, false);
+
+        // The default build
+        MavenProcessInvocationResult result = running
+                .execute(List.of("package", "-DskipTests", "-Dquarkus.package.jar.type=mutable-jar",
+                        "-Dquarkus.analytics.disabled=true"), Map.of());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
+        running.stop();
+
+        testDir = testDir.toPath().resolve("runner").toFile();
+
+        Path runJar = testDir.toPath().toAbsolutePath().resolve(Paths.get("target/quarkus-app/quarkus-run.jar"));
+        assertThat(runJar).exists();
+
+        File output = new File(testDir, "target/output.log");
+        output.createNewFile();
+
+        Process process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/cp/resourceCount/entry", false);
+                        response.set(ret);
+                        return true;
+                    });
+
+            // Test that bean is not resolvable
+            assertThat(response.get()).isEqualTo("2");
+        } finally {
+            process.destroy();
+        }
+
+        // re-augment and exclude html-extra
+        process = doLaunch(runJar, output,
+                List.of("-Dquarkus.class-loading.removed-artifacts=cp.acme:multimodule-cp-resources-html-extra",
+                        "-Dquarkus.launch.rebuild=true"))
+                .start();
+        try {
+            assertThat(process.waitFor()).isEqualTo(0);
+        } finally {
+            process.destroy();
+        }
+
+        process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/cp/resourceCount/entry", false);
+                        response.set(ret);
+                        return true;
+                    });
+
+            // Test that bean is not resolvable
+            assertThat(response.get()).isEqualTo("1");
+        } finally {
+            process.destroy();
+        }
+
+        // re-augment with the original dependencies
+        process = doLaunch(runJar, output, List.of("-Dquarkus.launch.rebuild=true")).start();
+        try {
+            assertThat(process.waitFor()).isEqualTo(0);
+        } finally {
+            process.destroy();
+        }
+
+        process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/cp/resourceCount/entry", false);
+                        response.set(ret);
+                        return true;
+                    });
+
+            // Test that bean is not resolvable
+            assertThat(response.get()).isEqualTo("2");
+        } finally {
+            process.destroy();
+        }
+    }
+
+    @Test
+    @Timeout(80) // windows might need more time
+    public void reaugmentationWithRemovedArtifactsUsingSystemProperties() throws Exception {
+        File testDir = initProject("projects/extension-removed-resources",
+                "projects/extension-removed-artifacts-reaugmentation");
+        RunningInvoker running = new RunningInvoker(testDir, false);
+
+        // The default build
+        MavenProcessInvocationResult result = running
+                .execute(List.of("package", "-DskipTests", "-Dquarkus.package.jar.type=mutable-jar"), Map.of());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
+        running.stop();
+
+        testDir = testDir.toPath().resolve("runner").toFile();
+
+        Path runJar = testDir.toPath().toAbsolutePath().resolve(Paths.get("target/quarkus-app/quarkus-run.jar"));
+        assertThat(runJar).exists();
+
+        File output = new File(testDir, "target/output.log");
+        output.createNewFile();
+
+        Process process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/runtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("subatomic,supersonic");
+
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/buildtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("subatomic,supersonic");
+        } finally {
+            process.destroy();
+        }
+
+        // re-augment and exclude html-extra
+        process = doLaunch(runJar, output,
+                List.of("-Dquarkus.class-loading.removed-artifacts=org.acme:acme-subatomic-provider",
+                        "-Dquarkus.launch.rebuild=true"))
+                .start();
+        try {
+            assertThat(process.waitFor()).isEqualTo(0);
+        } finally {
+            process.destroy();
+        }
+
+        process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/runtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("supersonic");
+
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/buildtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("supersonic");
+        } finally {
+            process.destroy();
+        }
+
+        // re-augment with the original dependencies
+        process = doLaunch(runJar, output, List.of("-Dquarkus.launch.rebuild=true")).start();
+        try {
+            assertThat(process.waitFor()).isEqualTo(0);
+        } finally {
+            process.destroy();
+        }
+
+        process = doLaunch(runJar, output).start();
+        try {
+            AtomicReference<String> response = new AtomicReference<>();
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/runtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("subatomic,supersonic");
+
+            await()
+                    .pollDelay(1, TimeUnit.SECONDS)
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/words/buildtime", false);
+                        response.set(ret);
+                        return true;
+                    });
+            assertThat(response.get()).isEqualTo("subatomic,supersonic");
         } finally {
             process.destroy();
         }
@@ -258,10 +481,11 @@ public class JarRunnerIT extends MojoTestBase {
         RunningInvoker running = new RunningInvoker(testDir, false);
 
         MavenProcessInvocationResult result = running
-                .execute(Arrays.asList("package", "-DskipTests", "-Dquarkus.package.type=mutable-jar",
-                        "-Dquarkus.package.user-providers-directory=" + providersDir), Collections.emptyMap());
+                .execute(Arrays.asList("package", "-DskipTests", "-Dquarkus.package.jar.type=mutable-jar",
+                        "-Dquarkus.package.jar.user-providers-directory=" + providersDir), Collections.emptyMap());
 
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -286,7 +510,8 @@ public class JarRunnerIT extends MojoTestBase {
             dumpFileContentOnFailure(() -> {
                 await()
                         .pollDelay(1, TimeUnit.SECONDS)
-                        .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                        .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                        .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
                 return null;
             }, output, ConditionTimeoutException.class);
             performRequest("/app/added", 404);
@@ -323,7 +548,8 @@ public class JarRunnerIT extends MojoTestBase {
             // Wait until server up
             await()
                     .pollDelay(1, TimeUnit.SECONDS)
-                    .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/moved/app/hello/package", 200));
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                    .until(() -> devModeClient.getHttpResponse("/moved/app/hello/package", 200));
 
             String logs = FileUtils.readFileToString(output, "UTF-8");
 
@@ -361,8 +587,8 @@ public class JarRunnerIT extends MojoTestBase {
             // Wait until server up
             await()
                     .pollDelay(1, TimeUnit.SECONDS)
-                    .atMost(1, TimeUnit.MINUTES)
-                    .until(() -> DevModeTestUtils.getHttpResponse("/anothermove/app/hello/package", 200));
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                    .until(() -> devModeClient.getHttpResponse("/anothermove/app/hello/package", 200));
 
             String logs = FileUtils.readFileToString(output, "UTF-8");
 
@@ -387,10 +613,13 @@ public class JarRunnerIT extends MojoTestBase {
         RunningInvoker running = new RunningInvoker(testDir, false);
 
         MavenProcessInvocationResult result = running
-                .execute(Arrays.asList("package", "-DskipTests", "-Dquarkus.package.create-appcds=true"),
+                .execute(Arrays.asList("package", "-DskipTests", "-Dquarkus.package.jar.appcds.enabled=true"),
                         Collections.emptyMap());
 
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        // just skip if the JDK can't create appcds
+        assumeThat(running.log()).doesNotContainIgnoringCase("Unable to create AppCDS");
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -402,14 +631,15 @@ public class JarRunnerIT extends MojoTestBase {
         // by using '-Xshare:on' we ensure that the JVM will fail if for any reason is cannot use the AppCDS
         // '-Xlog:class+path=info' will print diagnostic information that is useful for debugging if something goes wrong
         Process process = doLaunch(jar.getFileName(), output,
-                Arrays.asList("-XX:SharedArchiveFile=app-cds.jsa", "-Xshare:on", "-Xlog:class+path=info"))
-                        .directory(jar.getParent().toFile()).start();
+                List.of("-XX:SharedArchiveFile=app-cds.jsa", "-Xshare:on", "-Xlog:class+path=info"))
+                .directory(jar.getParent().toFile()).start();
         try {
             // Wait until server up
             dumpFileContentOnFailure(() -> {
                 await()
-                        .pollDelay(1, TimeUnit.SECONDS)
-                        .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                        .pollDelay(10, TimeUnit.SECONDS)
+                        .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                        .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
                 return null;
             }, output, ConditionTimeoutException.class);
 
@@ -431,7 +661,8 @@ public class JarRunnerIT extends MojoTestBase {
         RunningInvoker running = new RunningInvoker(testDir, false);
 
         MavenProcessInvocationResult result = running.execute(Arrays.asList("package", "-DskipTests"), Collections.emptyMap());
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -447,8 +678,8 @@ public class JarRunnerIT extends MojoTestBase {
             AtomicReference<String> response = new AtomicReference<>();
             await()
                     .pollDelay(1, TimeUnit.SECONDS)
-                    .atMost(1, TimeUnit.MINUTES).until(() -> {
-                        String ret = DevModeTestUtils.getHttpResponse("/hello", true);
+                    .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES).until(() -> {
+                        String ret = devModeClient.getHttpResponse("/hello", true);
                         response.set(ret);
                         return ret.contains("hello:");
                     });
@@ -461,7 +692,7 @@ public class JarRunnerIT extends MojoTestBase {
     }
 
     private ProcessBuilder doLaunch(Path jar, File output) throws IOException {
-        return doLaunch(null, jar, output, Collections.emptyList());
+        return doLaunch(null, jar, output, List.of());
     }
 
     private ProcessBuilder doLaunch(Path jar, File output, Collection<String> vmArgs) throws IOException {
@@ -586,10 +817,11 @@ public class JarRunnerIT extends MojoTestBase {
         MavenProcessInvocationResult result = running
                 .execute(Arrays.asList("package",
                         "-DskipTests",
-                        "-Dquarkus.package.type=fast-jar",
+                        "-Dquarkus.package.jar.type=fast-jar",
                         outputDir == null ? "" : "-Dquarkus.package.output-directory=" + outputDir), Collections.emptyMap());
 
-        await().atMost(1, TimeUnit.MINUTES).until(() -> result.getProcess() != null && !result.getProcess().isAlive());
+        await().atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                .until(() -> result.getProcess() != null && !result.getProcess().isAlive());
         assertThat(running.log()).containsIgnoringCase("BUILD SUCCESS");
         running.stop();
 
@@ -618,13 +850,14 @@ public class JarRunnerIT extends MojoTestBase {
             dumpFileContentOnFailure(() -> {
                 await()
                         .pollDelay(1, TimeUnit.SECONDS)
-                        .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello/package", 200));
+                        .atMost(TestUtils.getDefaultTimeout(), TimeUnit.MINUTES)
+                        .until(() -> devModeClient.getHttpResponse("/app/hello/package", 200));
                 return null;
             }, output, ConditionTimeoutException.class);
 
             String logs = FileUtils.readFileToString(output, "UTF-8");
 
-            assertThat(logs).isNotEmpty().contains("resteasy-reactive");
+            assertThat(logs).isNotEmpty().contains("rest");
 
             // test that the application name and version are properly set
             assertApplicationPropertiesSetCorrectly();
