@@ -1,8 +1,6 @@
 package io.quarkus.test.common.http;
 
-import java.io.Serializable;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
@@ -14,34 +12,31 @@ import org.eclipse.microprofile.config.spi.ConfigSourceProvider;
  */
 public class TestHTTPConfigSourceProvider implements ConfigSourceProvider {
 
-    static final String TEST_URL_VALUE = "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8081}${quarkus.servlet.context-path:}";
+    static final String TEST_URL_VALUE = "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8081}${quarkus.http.root-path:${quarkus.servlet.context-path:}}";
     static final String TEST_URL_KEY = "test.url";
 
-    static final String TEST_URL_SSL_VALUE = "https://${quarkus.http.host:localhost}:${quarkus.http.test-ssl-port:8444}${quarkus.servlet.context-path:}";
+    static final String TEST_MANAGEMENT_URL_VALUE = "http://${quarkus.management.host:localhost}:${quarkus.management.test-port:9001}${quarkus.management.root-path:/q}";
+    static final String TEST_MANAGEMENT_URL_KEY = "test.management.url";
+
+    static final String TEST_URL_SSL_VALUE = "https://${quarkus.http.host:localhost}:${quarkus.http.test-ssl-port:8444}${quarkus.http.root-path:${quarkus.servlet.context-path:}}";
     static final String TEST_URL_SSL_KEY = "test.url.ssl";
 
-    static final Map<String, String> entries;
+    static final String TEST_MANAGEMENT_URL_SSL_VALUE = "https://${quarkus.management.host:localhost}:${quarkus.management.test-port:9001}${quarkus.management.root-path:/q}";
+    static final String TEST_MANAGEMENT_URL_SSL_KEY = "test.management.url.ssl";
 
-    static {
-        Map<String, String> map = new HashMap<>();
-        map.put(TEST_URL_KEY, sanitizeURL(TEST_URL_VALUE));
-        map.put(TEST_URL_SSL_KEY, sanitizeURL(TEST_URL_SSL_VALUE));
-        map.put("%dev." + TEST_URL_KEY, sanitizeURL(
-                "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8080}${quarkus.servlet.context-path:}"));
-        entries = Collections.unmodifiableMap(map);
-    }
-
-    private static String sanitizeURL(String url) {
-        return url.replace("0.0.0.0", "localhost");
-    }
+    static final Map<String, String> entries = Map.of(
+            TEST_URL_KEY, TEST_URL_VALUE,
+            TEST_URL_SSL_KEY, TEST_URL_SSL_VALUE,
+            TEST_MANAGEMENT_URL_KEY, TEST_MANAGEMENT_URL_VALUE,
+            TEST_MANAGEMENT_URL_SSL_KEY, TEST_MANAGEMENT_URL_SSL_VALUE,
+            "%dev." + TEST_URL_KEY,
+            "http://${quarkus.http.host:localhost}:${quarkus.http.test-port:8080}${quarkus.http.root-path:${quarkus.servlet.context-path:}}");
 
     public Iterable<ConfigSource> getConfigSources(final ClassLoader forClassLoader) {
         return Collections.singletonList(new TestURLConfigSource());
     }
 
-    static class TestURLConfigSource implements ConfigSource, Serializable {
-        private static final long serialVersionUID = 4841094273900625000L;
-
+    static class TestURLConfigSource implements ConfigSource {
         public Map<String, String> getProperties() {
             return entries;
         }
